--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,7 +1,7 @@
 ---
-title: 喜联储喜币是游戏的制定者
+title: Hpay点到点支付既隐私又快速
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1988605/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1988618/)
 
 视频剪辑: WinterGuo ，开智则立 ，0-0 ，rmrf ，Qingjing ，玉米地的小蜗牛 ，牛魔王
 视频定位：BENJ1，WEI
