--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,7 +1,7 @@
 ---
-title: PayPal跟Hpay那是几个级别的差距
+title: 七哥给的三个建议
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1988586/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1988596/)
 
 视频剪辑: WinterGuo ，开智则立 ，0-0 ，rmrf ，Qingjing ，玉米地的小蜗牛 ，牛魔王
 视频定位：BENJ1，WEI
