--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,7 +1,7 @@
 ---
-title: 喜联储喜币是游戏的制定者（二）
+title: 习近平的冬奥开幕式离不开盘古
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1988609/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1988622/)
 
 视频剪辑: WinterGuo ，开智则立 ，0-0 ，rmrf ，Qingjing ，玉米地的小蜗牛 ，牛魔王
 视频定位：BENJ1，WEI
