--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 美国经济危机，一定会新生
+title: 战友177车牌的故事
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1988769/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1988874/)
 
 视频剪辑: WinterGuo ，开智则立 ，0-0 ，rmrf ，Qingjing ，玉米地的小蜗牛 ，牛魔王
 视频定位：BENJ1，WEI
