--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,7 +1,7 @@
 ---
-title: Hpay是中国人最安全的通道
+title: 举例说明国内支付
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1988908/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1989000/)
 
 视频剪辑: WinterGuo ，开智则立 ，0-0 ，rmrf ，Qingjing ，玉米地的小蜗牛 ，牛魔王
 视频定位：BENJ1，WEI
