--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,7 +1,7 @@
 ---
-title: 卖鸡蛋的钱不能被人剥夺
+title: GClub未来两年不会停卖，有些政策会调整，目前不能说
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1989043/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1989101/)
 
 视频剪辑: WinterGuo ，开智则立 ，0-0 ，rmrf ，Qingjing ，玉米地的小蜗牛 ，牛魔王
 视频定位：BENJ1，WEI
