--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,7 +1,7 @@
 ---
-title: 举例说明国内支付
+title: Hpay完全做金融义工的一个平台
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1989000/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1989050/)
 
 视频剪辑: WinterGuo ，开智则立 ，0-0 ，rmrf ，Qingjing ，玉米地的小蜗牛 ，牛魔王
 视频定位：BENJ1，WEI
