--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,7 +1,7 @@
 ---
-title: Hpay百分之百应新中国联邦的追求和信仰
+title: 孩子是自由的，尊重自然规律
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1989033/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1989198/)
 
 视频剪辑: WinterGuo ，开智则立 ，0-0 ，rmrf ，Qingjing ，玉米地的小蜗牛 ，牛魔王
 视频定位：BENJ1，WEI
