--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,7 +1,7 @@
 ---
-title: 单伟建如何在西方混出来的
+title: 冬奥会是否成为冬眠会，请战友们自己评价
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1989055/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1989222/)
 
 视频剪辑: WinterGuo ，开智则立 ，0-0 ，rmrf ，Qingjing ，玉米地的小蜗牛 ，牛魔王
 视频定位：BENJ1，WEI
