--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,7 +1,7 @@
 ---
-title: 卖鸡蛋的钱不能被人剥夺
+title: 让孩子成为自己，不需要像父母
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1989043/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1989209/)
 
 视频剪辑: WinterGuo ，开智则立 ，0-0 ，rmrf ，Qingjing ，玉米地的小蜗牛 ，牛魔王
 视频定位：BENJ1，WEI
