--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,46 +1,23 @@
 ---
-title: 超限数字战：美国抵御中共国数千次网络攻击
+title: 中日财经爆┃鸽派立场发生转变的欧洲央行行长
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1989354/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1989446/)
 
-**编译：喜妹**
+撰稿：东京樱花团/盖特第一批注册
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1091.png)[图片来源](https://jp.reuters.com/article/idJPKBN2KG01F)
+路透社法兰克福1月11日电， 欧洲央行行长拉加德(Jean-Claude Lagarde)周四在德国媒体集团RND的采访中表示，过快提高主要政策利率无助于遏制创纪录的高通胀，只会伤害经济。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1090.png)
+欧洲央行在上周的理事会会议上明确维持主要政策利率不变，承认通胀风险正在增加，不排除在年底前加息的可能性，显示其鸽派立场发生转变。
 
-据美国联邦调查局（FBI）称，中共国是数以千计的针对美国公司和政府实体的网络攻击的幕后黑手，官员们声称，中共国对美国的网络攻击比所有其他国家加起来还要多。
+受此影响，债券市场的收益率急剧上升。
 
-联邦调查局局长Christopher.A.Wray周一（1月31日）在题为 “应对中共国政府构成的威胁 “的演讲中说，联邦调查局目前正在进行数以千计的以中共国政府为重点的调查。联邦调查局说，中共国政府正试图用比以往任何时候都更无耻的方式来窃取美国的信息和技术。
+虽然短期货币市场目前将12月前的央行存款利率提高50个基点（bp），但拉加德告诉RND，加息不会解决高油价和供应短缺导致的通胀上升问题。
 
-在北京2022年冬奥会开始前几天在里根总统图书馆举行的演讲中，Wray强调，中共国政府是问题所在，而不是中国人民。
+信息源：[早期利上げでインフレ解決せず、政策調整は段階的に＝ＥＣＢ総裁](https://jp.reuters.com/article/idJPKBN2KG01F)
 
-“中共国政府窃取了令人难以置信的信息，并在所有行业中造成了深远的破坏性的损害，以至于正如你们所听到的，我们每隔12小时左右就会不断地开设新的案件来打击他们的情报攻击行动，”Wray说。
-
-作为中共国黑客造成损害的一个例子，Wray引用了对微软Exchange的黑客攻击，这影响了大约10,000个网络。引述的另一个事件是，一家中共国政府拥有的公司窃取了马萨诸塞州一家风力涡轮机公司（美国超导公司）的源代码，导致600个工作岗位流失。发起网络攻击的公司是华锐风电。华锐风电利用偷来的源代码在美国销售风力涡轮机。
-
-Wray认为，中共国正在从美国窃取关键技术，以支持其 “中国制造2025 “计划，并在演讲中谈到中共国政府如何通过几乎任何规模的中共国公司，都必须存在的嵌入式共产党细胞，控制其不拥有的公司。
-
-在最近接受美国全国广播公司(NBC)的采访时，Wray表示，他在2017年首次担任局长时，对中共国积极窃取美国技术的努力感到惊讶。
-
-“这让我大吃一惊。他告诉全国广播公司：”我不是那种会轻易使用’惊讶’这样的词的人。“
-
-根据Wray的说法，自2017年以来，中共国政府构成的威胁只增不减，为中共国政府工作的黑客正在针对从小型团体到大型服务提供商的公司和工人。
-
-Wray承认，中共国对美国科技情报的窃取不仅支持发展了中共国的技术，而且严重损害了美国工业。
-
-“这种损害-公司倒闭、工作岗位流失-已经积累了十多年，达到了我们现在的程度。这是一个在全国范围内都能感受到的损害，对整个行业的工人来说都是如此，”Wray说。
-
-中共国政府官员一直拒绝接受这些指控，坚持认为这些指控是毫无根据的。即使面对无可辩驳的证据，也是直接否认有罪，这是中国共产党（CCP）一贯采用的典型策略。
-
-2021年7月，中共国大使馆发言人赵立建说，美国 “与其盟友勾结，对中共国网络安全进行无理指责”，并补充说”这是凭空捏造的，混淆了是非。这纯粹是出于政治动机的污蔑和压制”。 周一，Wray表示，联邦调查局已准备好与中共国政府进行一场持久战，”参与这场战争的每个人都可以放心，他们不会有比联邦调查局更坚定的合作伙伴”。
-
-素材来源：【visiontimes.com】[Guerra digital sin restricciones: Estados Unidos se defiende de miles de ciberataques chinos](https://es.visiontimes.com/2022/02/04/ciberataques-chinos.html)
-
-* * *
-
-审核：阿伯塔
-校对：信心满满
-发布：花羽
-![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-3.jpeg)
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%A8%B1%E8%8A%B1-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
