--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,51 +1,46 @@
 ---
-title: 感染20个月后对COVID的自然免疫力仍然很强
+title: 超限数字战：美国抵御中共国数千次网络攻击
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1989288/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1989354/)
 
-**编译： Jenny Ball**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/tempsnip感染20个月后对COVID的自然免疫力仍然很强.png)图片来源：newstarget.com
-一项研究发现，对武汉冠状病毒 (COVID-19) 的自然免疫力，在感染后 20 个月仍然存在。
+**编译：喜妹**
 
-据约翰霍斯普金斯大学器官移植流行病学研究小组的多里·塞格夫（ Dorry Segev ）博士领导的研究人员称，研究参与者曾对该病毒检测呈阳性，其中一些人在 20 个月前感染了这种疾病，他们现在99%仍有针对 SARS-CoV-2 刺突蛋白受体结合域 (RBD) 的抗体。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1090.png)
 
-研究人员在 2021 年秋季招募了未接种疫苗的健康成年人，并将他们分为三组：
+据美国联邦调查局（FBI）称，中共国是数以千计的针对美国公司和政府实体的网络攻击的幕后黑手，官员们声称，中共国对美国的网络攻击比所有其他国家加起来还要多。
 
-- 过去经检测证实感染 COVID-19 的人
-- 认为自己已从 COVID 中康复但未接受任何检测的人
-- 以及认为在任何特定时间都没有感染过新冠病毒或检测呈阳性的人
+联邦调查局局长Christopher.A.Wray周一（1月31日）在题为 “应对中共国政府构成的威胁 “的演讲中说，联邦调查局目前正在进行数以千计的以中共国政府为重点的调查。联邦调查局说，中共国政府正试图用比以往任何时候都更无耻的方式来窃取美国的信息和技术。
 
+在北京2022年冬奥会开始前几天在里根总统图书馆举行的演讲中，Wray强调，中共国政府是问题所在，而不是中国人民。
 
-在第一组中，除两名参与者外，所有参与者的抗体检测呈阳性，没有迹象表明保护水平会随着时间的推移而减弱。在第二组中，大约 55% 的人抗 RBD 抗体检测呈阳性。 在第三组中，只有 11% 的参与者有抗体。
+“中共国政府窃取了令人难以置信的信息，并在所有行业中造成了深远的破坏性的损害，以至于正如你们所听到的，我们每隔12小时左右就会不断地开设新的案件来打击他们的情报攻击行动，”Wray说。
 
-塞格夫说, 这项研究的主要收获是: 自然免疫力仍然强大而持久。
+作为中共国黑客造成损害的一个例子，Wray引用了对微软Exchange的黑客攻击，这影响了大约10,000个网络。引述的另一个事件是，一家中共国政府拥有的公司窃取了马萨诸塞州一家风力涡轮机公司（美国超导公司）的源代码，导致600个工作岗位流失。发起网络攻击的公司是华锐风电。华锐风电利用偷来的源代码在美国销售风力涡轮机。
 
-南加州大学凯克医学院临床医学教授杰弗里·克劳斯纳(Jeffrey Klausner) 博士也表示，该研究证实，先前感染的人将具有可检测到的抗体，这些抗体可能会持续长达 20 个月。这应该让从 COVID 中恢复过来的人相信他们受到了保护，并应该促使官员停止强制接种疫苗，或对那些自然免疫的人给予例外。
+Wray认为，中共国正在从美国窃取关键技术，以支持其 “中国制造2025 “计划，并在演讲中谈到中共国政府如何通过几乎任何规模的中共国公司，都必须存在的嵌入式共产党细胞，控制其不拥有的公司。
 
-目前尚不清楚，抗 RBD 抗体是否能保护人们免受其他病毒变种的侵害。例如，自 12 月以来，Omicron 变体已成为美国最主要的菌株。研究表明，它甚至可以逃避疫苗。
+在最近接受美国全国广播公司(NBC)的采访时，Wray表示，他在2017年首次担任局长时，对中共国积极窃取美国技术的努力感到惊讶。
 
-自然免疫力优于疫苗接种
+“这让我大吃一惊。他告诉全国广播公司：”我不是那种会轻易使用’惊讶’这样的词的人。“
 
-其他研究发现，自然免疫优于疫苗接种，其中一项得到CDC的支持。（相关：[为什么“自然免疫力”是该政权的政治问题](https://naturalnews.com/2021-10-03-natural-immunity-political-problem-for-the-regime.html)）
+根据Wray的说法，自2017年以来，中共国政府构成的威胁只增不减，为中共国政府工作的黑客正在针对从小型团体到大型服务提供商的公司和工人。
 
-一个人感染病毒后，免疫系统通常会保留它的记忆。当再次遇到病毒时，身体循环的免疫细胞和蛋白质可以识别并杀死病原体，从而保护身体免受疾病侵害，并降低疾病的严重程度。
+Wray承认，中共国对美国科技情报的窃取不仅支持发展了中共国的技术，而且严重损害了美国工业。
 
-免疫保护通常包括抗体（在血液中循环并识别外来物质以中和它们的蛋白质）、识别病原体的辅助 T 细胞、杀死病原体的杀伤性 T 细胞和在身体需要时产生新抗体的 B 细胞。
+“这种损害-公司倒闭、工作岗位流失-已经积累了十多年，达到了我们现在的程度。这是一个在全国范围内都能感受到的损害，对整个行业的工人来说都是如此，”Wray说。
 
-发现从 COVID-19 中康复的人，具有所有这四种成分。 塞格夫补充说，他和其他科学家现在正在研究 Omicron 如何影响自然免疫。
+中共国政府官员一直拒绝接受这些指控，坚持认为这些指控是毫无根据的。即使面对无可辩驳的证据，也是直接否认有罪，这是中国共产党（CCP）一贯采用的典型策略。
 
-**新闻来源**：[newstarget.com][Study: Natural immunity to COVID remains strong at 20 months post-infection](https://www.newstarget.com/2022-02-09-natural-immunity-20-months-after-covid-infection.html)
+2021年7月，中共国大使馆发言人赵立建说，美国 “与其盟友勾结，对中共国网络安全进行无理指责”，并补充说”这是凭空捏造的，混淆了是非。这纯粹是出于政治动机的污蔑和压制”。 周一，Wray表示，联邦调查局已准备好与中共国政府进行一场持久战，”参与这场战争的每个人都可以放心，他们不会有比联邦调查局更坚定的合作伙伴”。
+
+素材来源：【visiontimes.com】[Guerra digital sin restricciones: Estados Unidos se defiende de miles de ciberataques chinos](https://es.visiontimes.com/2022/02/04/ciberataques-chinos.html)
 
 * * *
 
-***审核：文乐
-校对：花羽
-发布：信心满满***
-
+审核：阿伯塔
+校对：信心满满
+发布：花羽
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-3.jpeg)
-
-
-
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
