--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,50 +1,32 @@
 ---
-title: 罗伯特-马龙：中共国的强制性疫苗接种政策为 &#8220;超级病毒 &#8220;创造了条件
+title: 一张写尽屈辱的中共国居民身份证
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1989277/)
+`新加坡狮城农场 Himalaya Singapore` [轉載自GNews](https://gnews.org/zh-hans/1989332/)
 
-编译：喜妹
+**撰稿：Tom Lee**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screenshot-2022-02-11-170309.jpg)
+如果一件事过去了几十年，你还是愿意提起，那这件事不是承担着你的荣耀，就是记载着你的耻辱。而我有这么一件事，写满了我整个高中的耻辱，一张故意被办错的身份证。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/SharedScreenshot1.jpg)visiontimes.com
+初三快毕业的春天，班级上就来了一帮派出所和民政局的人，说是要给初三快毕业的人办身份证，因为初三毕业后有人要去打工，有人升入高中，都是需要身份证的。程序倒是不复杂，缴上25元钱，每个人写上自己的出生年月和家庭地址就可以了。有些同学不知道自己的出生年月，就回家问了爷爷奶奶、爸爸妈妈，第二天再来照相和办理。我父母怕花钱，加上我年龄又小才15周岁（16虚岁），不满18周岁，于是一开始没有让我办理。
 
-信使RNA技术的创造者之一罗伯特-马龙博士警告说，中共（CCP）和西方世界的强制疫苗接种措施都在为一种超级病毒的演变创造条件，这种病毒可能已经表现为出血热的报告。
+过了几天派出所和民政局又来了一次，说是16岁的也得办，我于是就写上名字、出生年月和地址，然后照个相，就算办了一张身份证，按规定三个月后就会发证。
 
-罗伯特-马龙在1月10日接受史蒂夫-班农的采访时发表了这些评论，他警告说，”大流行病中的疫苗接种将推动抗疫苗突变体的发展”。
+等发身份证的那一天，我傻眼了，我的出生日期被提前了两年，也就是给我凑够了18岁，其他同学有的名字错了一个字，好几个人的身份证信息是错的。我由于暂时用不到身份证，第二年我没有考入重点高中，所以准备复习一年，就没有在乎这件事，中间我问过乡民政部的经办工作人员，他们说好办，重新再办一张就行。这事就那么隔了一年。
 
-尤其是中共国，没有使用世界其他国家采用的新型腺病毒或mRNA载体基因治疗疫苗，而是采用传统的灭活病毒疫苗，但实际疗效往往很低。
+第二年我考入了省重点高中，在初四（复习的叫初四）暑假的时候，和别人聊起了身份证的重要性，打工查年龄、上高中贷款、刻章等都需要身份证，而我妈认为错了两岁很严重，因为找对象会被嫌弃岁数大。于是我就骑着自行车去找了当地派出所的户籍部门，这就是耻辱的开始，也是我让真正认识中共国的另一件事。整个重办身份证的事竟然持续了四年。
 
-在中共国大陆，生活的各个方面都由中央管理的健康通行证二维码监控，该二维码可作为疫苗护照、核酸检测结果中心和接触者追踪监控的综合应用。
+第一次我骑着我家那辆不知道修了多少次的破自行车，进入刚刚完工的五层乡政府高楼的大院，主体楼没有单独的小院，左右看了一下，政府大院内分几个小院，小院里都是二层洋楼，整体比我们的乡初中教学楼要宏伟得多。我进去不知道找谁，于是问了一个来办事的大伯，他告诉我应该找户籍档案室，先开个户口证明。我跟随着刚上班的一个女的，还有其他办事的三四个人，进了一个小院的二层楼，门口写着户籍室。我很规矩的跟在所有人的身后，看到是两个女士隔着玻璃墙在里面，问讯着来办事的人，声音就像是吵架。
 
-2020年4月，美国有线电视新闻网（CNN）的一篇文章简明扼要地描述了该系统的意义，这篇文章将为一年后英语世界接受疫苗护照提供条件，标题是《中共国用数字二维码对抗冠状病毒》。下面是它的工作原理。
+我很小心地在一旁等着，等所有人都办完事安静的时候，我把我的身份证和写着出生日期的纸条递了过去，顺便对着玻璃挡板另一边的女人说了一句“你好！”，也许声音太小，那女的没听到，那个刚才还在为其他人办事的女人就像被吓到一样抬起头说了一句，“你干啥呢，什么东西就往里塞，你这东西上有没有毒啊？”我这时候一脸的疑惑，回答到，“我的身份证被你们办错了，我想让你们给改过来。”，这女的立即就大声说：“你是谁啊？你说给你改过来就给你改过来，再说，这事也不在我这里办。” 她那口气明显就是要赶人出去。我这时候已经上火，嗓子和鼻子都冒烟似的发干。我也大声说：“我问了别人说就是在这里办，先调户籍证明出生年月，然后再补办！”这个女人竟然给我更大声地回应：“那你谁家的，我咋知道呢！再说，我马上就要到中午吃饭了，你下午再过来。说完就把我的身份证和纸条给扔出来，把玻璃小窗一关自己和男同事嘻嘻哈哈地说笑去了。
 
-“想象一下，你的日常生活完全依赖于一个智能手机应用程序。离开家，乘坐地铁，去上班，进入咖啡馆、餐馆和购物中心：你的一举一动，都由屏幕上显示的颜色决定着。绿色：你可以继续。琥珀色或红色：你被禁止进入”。
+我措手不及地走出户籍档案室，站在整个小楼的下面，倚在那辆破自行车上，心里又愤恨又委屈，嗓子像吃了棉花一样堵得慌。我怎么就碰到这样的一个女人，整个过程，那态度就好像别人进去会脏了她的办公场所一样，而我所办的事，恰恰是由于他们失责给我带来的损失，他们却像没有任何责任一样，理直气壮。
 
-12月下旬，中共对陕西省省会、拥有1200多万居民的西安进行了严厉的全面封锁。
+我也没有回家，因为一来一回，光骑车就要花费差不多两个小时，万一她下午又不在办公室，我这一天就白跑了。我一直等着，等到她吃饭的时候，我看到她像没看到我一样从小院里出去，然后端着饭又进来。他们吃完饭是要午睡的，我就在那等着，一直到他们午睡结束，我在暑假夏天的热浪里，等了三个小时左右后，我又上了他们的小楼那个房间。她这次极其不耐烦地找到了我的户口证明，然后告诉我，“今天复印机坏了，你哪天再过来？”，我问她，“那我应该哪天过来？”，她竟然很不耐烦的说了一句，“我咋知道哪天能修好复印机？”
 
-特别是来自西安的一些当地新闻报道，以及社交媒体上的帖子，声称该市爆发了出血热病例。出血热据说是由啮齿动物传播引起的，是中共国北方比较常见的季节性流行病。由于该病的发病症状与普通感冒或流感相同，许多患者延误了早期治疗。
+我只有回家，回家后还被我母亲说了一顿，说等那么长时间，没有办成事，还耽误了农田的活。而我满心的委屈和屈辱，只能埋在心里，就算给我母亲说了，她也没有任何的办法。因为我的父母在面对这些基层干部的不负责任时，一也样会被他们训斥和欺负，搪塞，侮辱！
 
-罗伯特-马龙在评论这些报告时说：”他们使用的语言是这是一种出血热病毒。如果是这样的话，那么这是由冠状病毒引起的事情就非常奇怪了。该术语一般用于马尔堡和埃博拉家族的病毒”。”因此，这是许多人一直担心的事情，就是发展出一种类似埃博拉的出血热病毒，迅速传播。但我们不知道这里是否正在发生这种情况，”罗伯特-马龙补充说。
+在以后的四年里，我来这个小院十几次，因为我要凑高中暑假的时间才回家，还要凑他们上班，我没有农活，还不能下雨的时候才可以。有时来了他们没有上班，好容易办了第一步，又说你照片不合格，而照片又是他们指定的地点照的，也付了贵价钱。中间他们换过人，也打过保票说，已经递交上去了，就等新身份证下来，等了大半年后，结果没有下来。我重新照过两次照片，缴过两次补办的钱，等了四年，终于在我上大学之前，拿到一张出生日期符合的身份证。
 
-中共宣传机构《环球时报》12月19日发表了一篇题为 “西安报告出血热病例，但无需恐慌，医学专家敦促迅速接种疫苗 “的文章，引用一家大学医院的工作人员的话说：”由于最近西安爆发了COVID-19疫情，许多设有感染科的医院暂时停止接收病人，只看感染了COVID-19的病人。
-
-特别是，宣传片试图淡化出血热的严重性和病例，称根据中共疾病控制中心的数据，”2020年1月至8月，中共国流行性出血热的病例数为4359，死亡人数为21″。
-
-《环球时报》称，2019年有不到1万个病例，44人死亡。根据撰写本报告时的Worldometers数据，拥有约14亿人口的中国尽管是SARS-CoV-2的来源国，但却在全地球上取得了最好的结果。中共声称仅有103,968起案件和4,636人死亡。相比之下，拥有约3.29亿人口的美国，自该大流行病开始以来已记录了6200多万个病例和861,000多例死亡。
-
-困扰西安和中共国其他地区的是由埃博拉、马格堡或汉坦病毒等引起的真正的出血热，还是仅仅是冠状病毒病2019（COVID-19）的急性表现，即由SARS-CoV-2引起的疾病？
-
-2020年3月，当这一流行病首次在西方掀起波澜时，一份在西方重复出现并最初从《环球时报》获得的媒体报道称，云南省一名男子在COVID流行病中乘坐公共汽车时死亡，不是死于COVID，而是死于汉坦病毒。
-
-据称，该男子感染了当时与他同行的32名乘客。同样，2020年11月发表在《健康》杂志上的一篇文章报道了一位科罗拉多州妇女的故事，她在散步后出现了COVID的症状，但COVID的检测结果仍为阴性。医生最终对她进行了汉坦病毒检测，结果为阳性。
-
-素材来源：【visiontimes.com】[Robert Malone: la política de vacunación obligatoria de China crea condiciones para un ‘supervirus’](https://es.visiontimes.com/2022/01/11/robert-malone-supervirus.html)
-
-* * *
-
-审核：阿伯塔
-校对：小东
-发布：花羽
-![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-3.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
