--- a/gnews/30.md
+++ b/gnews/30.md
@@ -1,48 +1,50 @@
 ---
-title: UBS立案成功——爆料革命取得突破进展
+title: 罗伯特-马龙：中共国的强制性疫苗接种政策为 &#8220;超级病毒 &#8220;创造了条件
 ---
-`GTV News Talk` [轉載自GNews](https://gnews.org/zh-hans/1989181/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1989277/)
 
-作者：纽约香草山—金融部 AT
+编译：喜妹
 
+![](https://assets.gnews.org/wp-content/uploads/2022/02/SharedScreenshot1.jpg)visiontimes.com
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/good-23.png)
-2月9日《文贵大直播》消息，郭文贵先生起诉UBS瑞银集团在英国伦敦被当地法院获批正式立案。这是爆料革命与沼泽地暗黑势力第一次在法庭上公开正面较量。新中国联邦也将通过此次司法大战，找回共产党在西方藏匿的本该属于中国人民的财富，揭开沼泽地黑暗势力与中共勾兑的金钱线索及邪恶黑幕。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/0204-4_-1.jpg)
-共产党曾经不惜一切代价妄图取消此立案，UBS几乎收买了所有律师。郭先生顶住巨大压力，历经七年的努力，终于立案成功，这也证明了法庭承认有索赔的事实存在。
+信使RNA技术的创造者之一罗伯特-马龙博士警告说，中共（CCP）和西方世界的强制疫苗接种措施都在为一种超级病毒的演变创造条件，这种病毒可能已经表现为出血热的报告。
 
-UBS是沼泽地黑暗势力的核心，世界游戏规则的定义者，好比几百年藏钱的阿里巴巴的黑金库。UBS瑞银集团，更是过去上百年，在中共国唯一一家获得独立经营牌照的外国银行。
+罗伯特-马龙在1月10日接受史蒂夫-班农的采访时发表了这些评论，他警告说，”大流行病中的疫苗接种将推动抗疫苗突变体的发展”。
 
-郭文贵先生诉UBS，核心目的，是迫使UBS必须交出与中共勾兑的核心数据。意味着中共在海外最大的黑金来源地——瑞士的藏宝地图会被曝光。通过本次立案诉讼，新中国联邦力争将其中50万亿美元（约合300多万亿人民币）还给中国人民，为新中国联邦的人民实现免费教育，免费医疗，免费养老打下坚实的经济基础。
+尤其是中共国，没有使用世界其他国家采用的新型腺病毒或mRNA载体基因治疗疫苗，而是采用传统的灭活病毒疫苗，但实际疗效往往很低。
 
-参考来源：
+在中共国大陆，生活的各个方面都由中央管理的健康通行证二维码监控，该二维码可作为疫苗护照、核酸检测结果中心和接触者追踪监控的综合应用。
 
-新闻素材-郭先生直播速记
+2020年4月，美国有线电视新闻网（CNN）的一篇文章简明扼要地描述了该系统的意义，这篇文章将为一年后英语世界接受疫苗护照提供条件，标题是《中共国用数字二维码对抗冠状病毒》。下面是它的工作原理。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-33.jpg)
+“想象一下，你的日常生活完全依赖于一个智能手机应用程序。离开家，乘坐地铁，去上班，进入咖啡馆、餐馆和购物中心：你的一举一动，都由屏幕上显示的颜色决定着。绿色：你可以继续。琥珀色或红色：你被禁止进入”。
 
+12月下旬，中共对陕西省省会、拥有1200多万居民的西安进行了严厉的全面封锁。
 
+特别是来自西安的一些当地新闻报道，以及社交媒体上的帖子，声称该市爆发了出血热病例。出血热据说是由啮齿动物传播引起的，是中共国北方比较常见的季节性流行病。由于该病的发病症状与普通感冒或流感相同，许多患者延误了早期治疗。
 
-编辑：Delilah小胖
+罗伯特-马龙在评论这些报告时说：”他们使用的语言是这是一种出血热病毒。如果是这样的话，那么这是由冠状病毒引起的事情就非常奇怪了。该术语一般用于马尔堡和埃博拉家族的病毒”。”因此，这是许多人一直担心的事情，就是发展出一种类似埃博拉的出血热病毒，迅速传播。但我们不知道这里是否正在发生这种情况，”罗伯特-马龙补充说。
 
-校对/发稿：兰兰
+中共宣传机构《环球时报》12月19日发表了一篇题为 “西安报告出血热病例，但无需恐慌，医学专家敦促迅速接种疫苗 “的文章，引用一家大学医院的工作人员的话说：”由于最近西安爆发了COVID-19疫情，许多设有感染科的医院暂时停止接收病人，只看感染了COVID-19的病人。
 
-**更多资讯，更多关注**
+特别是，宣传片试图淡化出血热的严重性和病例，称根据中共疾病控制中心的数据，”2020年1月至8月，中共国流行性出血热的病例数为4359，死亡人数为21″。
 
-[**纽约香草山农场****GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+《环球时报》称，2019年有不到1万个病例，44人死亡。根据撰写本报告时的Worldometers数据，拥有约14亿人口的中国尽管是SARS-CoV-2的来源国，但却在全地球上取得了最好的结果。中共声称仅有103,968起案件和4,636人死亡。相比之下，拥有约3.29亿人口的美国，自该大流行病开始以来已记录了6200多万个病例和861,000多例死亡。
 
-[**纽约香草山农场****GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+困扰西安和中共国其他地区的是由埃博拉、马格堡或汉坦病毒等引起的真正的出血热，还是仅仅是冠状病毒病2019（COVID-19）的急性表现，即由SARS-CoV-2引起的疾病？
 
-[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
+2020年3月，当这一流行病首次在西方掀起波澜时，一份在西方重复出现并最初从《环球时报》获得的媒体报道称，云南省一名男子在COVID流行病中乘坐公共汽车时死亡，不是死于COVID，而是死于汉坦病毒。
 
-[**纽约香草山农场**** YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+据称，该男子感染了当时与他同行的32名乘客。同样，2020年11月发表在《健康》杂志上的一篇文章报道了一位科罗拉多州妇女的故事，她在散步后出现了COVID的症状，但COVID的检测结果仍为阴性。医生最终对她进行了汉坦病毒检测，结果为阳性。
 
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+素材来源：【visiontimes.com】[Robert Malone: la política de vacunación obligatoria de China crea condiciones para un ‘supervirus’](https://es.visiontimes.com/2022/01/11/robert-malone-supervirus.html)
 
+* * *
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/good-24.png)
-
-
+审核：阿伯塔
+校对：小东
+发布：花羽
+![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-3.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
