--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,18 +1,22 @@
 ---
-title: 无论冬奥会成功与否 共产党都会打台湾
+title: 郭文贵盖特音频2022.02.10
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1989401/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1989476/)
 
-文编：东京樱花团/樱花传媒
-视频：东京樱花团/中文小视频组
+音频提供者：左媛
+![](https://assets.gnews.org/wp-content/uploads/2022/02/out-11.jpg)
+### 视频链接：
 
-1月24日，郭文贵先生在GTV大直播指出：
+[https://www.gettr.com/post/ptobeh782f](https://www.gettr.com/post/ptobeh782f)
 
-中共在冬奥会成功与否，都有很大可能攻打台湾。中共造假有目共睹，世界各国都在抵制冬奥会，然而共产党在冬奥会上即便失败了也不会承认。
+### 音频链接：
 
-*编辑：东京樱花团/墨然
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%A8%B1%E8%8A%B1-3.jpg)
+
+
+
+
+编辑发布：闪电训练
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
