--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,49 +1,24 @@
 ---
-title: 川普的事业如何靠中共国金融家推出（1/2）
+title: 爆料革命——历史的今天12月24日
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1989340/)
+`新加坡狮城农场 Himalaya Singapore` [轉載自GNews](https://gnews.org/zh-hans/1989444/)
 
-**翻译： Jenny Ball**
+**整理：Pride**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screenshot-2022-02-11-171958.png)
+**2019年12月24日—**共产党高级将领家族，领导了1970年全国杀狗。原因是中国官场非常迷信命相、属相之学，就是中国的奇门遁甲、12生肖相生相克。在狗年，必须得灭狗；狗，冲毛主席的蛇。最后汪东兴下令全国杀狗，当时也缺粮食，还要奖励人吃狗肉。现在这次杀狗是他的一个下属在执行，他的两条狗也给焖死了。这是王岐山给习出的馊主意，狗年要灭鼠—狗掐老鼠多管闲事；鼠年对蛇不好，就开始灭狗了。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/tempsnip川普的事业如何靠中共国金融家推出1.png)美国前总统唐纳德特朗普于 2022 年 1 月 29 日在美国德克萨斯州康罗的一次集会上做手势。REUTERS/Go Nakamura/File Photo/File Photo
+**2020年12月24日—**今年的平安夜，是最不平安的。西方政府已经说，黑暗真是刚刚开始。但没有人敢说，黑暗是来自共产党。除了爆料革命敢说，共产党让所有人都不平安，世界没有人敢这么说。
 
-主题概括：
+灭共，做一个在世界受尊重、体面的中国人，就要学香港。香港是中国人的圣城，不要忘了香港人付出的生命、鲜血、自由代价。美国最近对共产党一系列制裁，都是跟香港挂钩的。任何忘记香港的人，都不是战友和称职的中国人。
 
-ARC 提供了 200 万美元的资金来启动 SPAC
+**2021年12月24日—**共产党最恐惧我们的正道主义，把我们定为邪教、恐怖分子、骗子，更是第一天的事情。我们不制造仇恨，不恨任何人是正道主义的本质。HBO股东和我们追求相反，他们追求巨额财富的占有、掠夺，个人崇拜。控制媒体权力，虚假传播真相，让别人按它的思想来。
 
-ARC 招聘了将“数字世界”整合在一起的高管
+1968年和1997年两次排华期间，大量共产党的报纸都在说：海外华人背叛祖国，到人家国家要守法。印尼攻击华人的小报，几乎都是华人拿钱支持。说“华人抢夺我们的财富、工作”，不诚实，代表共产党统治我们国家等很多说法。300万华人不当回事，最后50万被杀掉。然后美国主流媒体从不报道，CIA不让报道，好莱坞不允许拍的话题，世界上几乎没有人提起。再发生印尼排华事件，共产党会告诉国内人：这帮东西都是混蛋、邪教、暴徒。
 
-2 月 10 日（路透社）—— 一位曾被美国监管机构谴责，并被禁止将其公司上市的中共国金融家，在与前总统唐纳德·川普的新社交媒体合资企业合并的空壳公司中，发挥了比公众所知的更大的作用 ，路透社获悉。
+西安事件是疫苗导致的结果，就是流血、吐血以及某些器官的急速衰竭。这些人死了以后，身体就是一个坑、一个包。就是打的mRNA，把整个身体都快吃掉。Omicron之后，共产党还会放毒。未来Omicron和疫苗死最多的是白人，我们要让西方人用生命、用鲜血、付出代价，看清楚共产党的本质。
 
-关于金融家亚伯拉罕·辛塔（Abraham Cinta ），和他领导的上海投资银行 （ARC Group Ltd） 在空壳公司的监管文件中的参与，鲜有披露。 ARC 被列为“数字世界收购公司”（ Digital World Acquisition Corp ）的“财务顾问”，这家“特殊目的收购公司 ”(SPAC)， 在 10 月与川普新媒体平台签署了合并协议。 除了 ARC 可以帮助 SPAC 与政府和商界联系，以及获得“优质交易渠道”之外，文件中没有提供任何细节。
+GTV永远是王；G|CLUBS是通行证和新中国联邦最早期护照；G|FASHION是文化和尊严的桥梁；盖特是通往西方的桥梁；GNEWS是未来不分种族、文化和新中国联邦交流的精神、文化、信仰平台。搜索功能强大；是未来情报、信息交易市场；是世界精英最真实、可相信的，以个人为主的一个有智慧、良知，不同领域的人参与的一个大的平台。战友是这些平台的唯一所有投资者，未来一定是新中国联邦的核心力量。
 
-现在，一份概述空壳公司拟议条款的财务文件、ARC 与“数字世界”的一位创建者之间的协议，以及对五位熟悉情况的消息人士的采访的新信息（短信），表明辛塔和 ARC 不仅仅建议了“数字世界”，他们还提供资金来创建“数字世界”，并招募了一名高管来帮助组建公司。
-
-根据财务文件，以及辛塔与其他相关人员之间的短信，ARC 提出向三位商人提供至少 200 万美元，以组建“数字世界”，该 SPAC 继续与川普媒体和技术集团合并，辛塔对如何补偿 SPAC 的管理团队有发言权。
-
-一位知情人士表示，ARC 最终成为“数字世界” 的 SPAC 进行了投资。 正如 ARC 最初讨论的那样，路透社无法确认这笔投资是否为 200 万美元。披露显示，“数字世界”管理实体或赞助商的初始投资者，总共投入了 1180 万美元。
-
-《华盛顿邮报》和彭博社此前报道称，ARC 持有“数字世界”赞助商的股份。 首次报道了 ARC 提供资金让 SPAC 启动的事实。
-
-辛塔以及 ARC 和 “数字世界”的发言人没有回应置评请求。
-
-路透社无法确定川普是否在创建或塑造“数字世界”方面发挥了任何作用，或者川普在其公司与 SPAC 签署协议时，对“数字世界”的支持者了解多少。川普媒体与技术集团发言人和川普发言人没有回应置评请求。
-
-ARC 在交易中扮演的重要角色，对于财务顾问来说是非典型的，这是在“数字世界”描述ARC 的术语。顾问通常会就如何达成交易向 SPAC 提供建议，但通常不会为 SPAC 提供资金或参与确定其高级职位。然而，据路透社采访的两名资本市场律师和两名金融学教授表示，美国没有针对此类安排的规定，也没有要求披露这些安排。
-
-有关 ARC 扮演的角色的细节，为这位前总统利润丰厚的“数字世界”交易背后的金融公司提供了新的线索。ARC的专长是用SPAC这种借壳上市的形式，将海外资金汇入华尔街的繁荣。 SPAC 是上市空壳公司，它们筹集现金以收购一家私人公司，并将其上市，从而使目标公司能够避开首次公开募股的更严格的监管检查。许多散户投资者助长的淘金热所进行的冒险赌注，经常是这种项目变质。
-
-请在文章后半部分看川普总统的项目命运如何。
-
-**新闻来源**：[reuters.com][How a Trump deal got a boost from a China-based financier](https://www.reuters.com/business/how-china-based-dealmaker-got-shell-company-trumps-deal-off-ground-2022-02-10/)
-
-* * *
-
-***素材：文戈
-审核：文乐
-校对：花羽
-发布：信心满满***
-![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-3.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
