--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,36 +1,45 @@
 ---
-title: 俄罗斯与白俄罗斯联合军演 多国纷纷表态
+title: 乔·罗根回应针对他的“政治打手”
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1989478/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1989560/)
 
-**撰稿：日本东京方舟农场 子辰**
+**翻译： Jenny Ball**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/tempsnip乔·罗根回应针对他的政治打手.png)图片来源：thepostmillennial.com
+在周二的Spotify上的“乔·罗根体验”一集中，该节目的同名节目解决了他最近处于中心的争议，以及正在进行的取消和审查他的努力。
 
-据大纪元2月11日报道，俄罗斯与白俄罗斯联合进行为期十天的海上军演，让外界一致担忧俄罗斯可能入侵乌克兰。俄罗斯布兵乌克兰边境已经一月有余。
+与单口演员、播客和演员阿卡什·辛（ Akaash Singh ）交谈时，这一集的开场白是两人讨论了有关罗根过去使用“黑人”叫法(nigger)的最新争议。
 
-据悉，此次军演约有3万名俄罗斯士兵在白俄罗斯参加演习，而且这是自冷战以来俄罗斯在白俄罗斯进行的最大规模军事部署。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片-1-2-3.jpeg)（图片来自大纪元）
-演习在白俄罗斯的西部和南部与波兰接壤的边界进行，白俄罗斯西部和北部分别与波罗的海国家立陶宛和拉脱维亚相邻，南部则与乌克兰接壤。
+罗根继续称这起事件既是“政治打击”，所谓的“解脱”。
 
-俄罗斯声称，此次演习只是为了演练击退“外部侵略”，并再次否认有任何攻击乌克兰的意图，
+“你知道，在很多方面，就像所有这一切，都是一种解脱，因为它就像，这是一个政治打击工作。所以，他们正在接受所有我曾经说过的东西都是错误的，把它全部抹掉，但这很好，因为它让我解决了一些我真的希望不存在的问题，”罗根说。
 
-俄国防部说，此次名为“盟军决心2022”（Allied Resolve 2022）联合军事演习将持续到本月20日，目标是测试白俄罗斯和俄罗斯“在防御行动中压制和击退外部侵略，以及打击恐怖主义和保护盟国利益”这方面的准备情况。
+辛格说：“如果你说了一些疯狂的屁话，你可以道歉，我们也有一些疯狂的屁话，你道歉并承认这是错误的。这对你有好处，”辛格说，并指出，喜剧演员“多年来”一直这样做“不成熟的事情”，拒绝道歉。
 
-白俄罗斯总统亚历山大‧卢卡申科（Alexander Lukashenko）公开表示，鉴于北约部队驻扎在波罗的海和波兰，这次演习是让俄罗斯和白俄罗斯军队做好准备，以应对源自欧洲的可能军事对抗。
+“如果你后悔做了某事，你应该道歉，”罗根说。 “你永远不应该为自己的想法道歉，就像如果你后悔某事，我不认为道歉有什么问题。”
 
-乌克兰方面指责俄罗斯“以海军演习为借口”封锁了其南部的黑海和亚速海的部分海域。与此同时，乌克兰也在使用西方盟国送来的武器装备、进行自己的军事演习。
+“但是，我确实认为你必须非常小心，不要为胡说八道而道歉，”罗根指出。
 
-美国副国务卿温迪‧舍曼（Wendy Sherman）2月10日在接受MSNBC采访时说，“这次演习时间点相当令人怀疑和震惊，我们非常担心普京总统可能做出错误的选择”。舍曼担心俄罗斯选择武力入侵，而不是外交方式解决乌克兰问题。
+例如，罗根注意到，亚裔美国女演员奥卡菲娜（Awkwafina）最近为她说话的方式进行了辩护，评论家说她使用了“黑人口音”“Blaccent”。
 
-此前，白宫为给乌克兰局势降温，美国及其盟友展开了大量外交活动，可是这场对峙并没有显示出任何缓和的迹象。
+周一，前总统川普和佛罗里达州州长罗恩·德桑蒂斯，都敦促罗根停止为他过去的言论道歉。
 
-此外，英国首相鲍里斯‧约翰逊2月10日会见北约防务联盟的负责人时也表示，未来几天可能是乌克兰危机中“最危险的时刻”。
+川普周一发表声明，告诉罗根，“乔·罗根是一个有趣且受欢迎的人，但他必须停止向假新闻和激进的左派疯子和疯子道歉。你有多少种方式说你很抱歉？乔，去做你做得很好的事情，“不要让他们让你看起来虚弱和害怕。那不是你，永远不会是！”川普说。
 
-参考链接：
-[https://www.epochtimes.com/b5/22/2/10/n13568880.htm](https://www.epochtimes.com/b5/22/2/10/n13568880.htm)
+在同一天接受福克斯新闻采访时，德桑蒂斯表达了类似的观点，称传统媒体和左翼“担心他可以接触到这么多人，所以他们会想毁掉他。”
 
-素材采编：子辰
-编辑：老孙
-发布：文曦
+“不，他不应该道歉。我的意思是，你明白会发生什么吗？暴徒会追捕人们，他们的目标是罗根，因为他威胁要在他们珍视的一些事情上打乱对于COVID的说法，他只是提出了相反的观点。他让人们做出决定。他们说他反对[COVID疫苗]。我不听他的节目，但后来我读到，他特别提倡患有合并症和老年人的人接种疫苗，”德桑蒂斯说。
+
+“我认为很多传统媒体，我认为左派担心的是，他有这么多观众，所以他们要摧毁他。但我想说的是，不要让步。不要道歉。不要向暴徒磕头。站起来告诉他们别妄想；如果你这样做，他们真的对你无能为力。他们拥有权力的唯一方法，就是他们能够把你制服成羔羊。” 他又说道。
+
+**新闻来源**：[thepostmillennial.com][BREAKING: Joe Rogan responds to ‘political hit job’ against him](https://thepostmillennial.com/breaking-joe-rogan-responds-to-political-hit-job-against-him)
+
+* * *
+
+***审核：文乐
+校对：花羽
+发布：信心满满***
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-3.jpeg)
 
  
 
