--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,18 +1,42 @@
 ---
-title: 不要因为你一生中的失败 你就怀疑一切的胜利
+title: 油管进军NFTs非同质化代币
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1989314/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1989380/)
 
-文编：东京樱花团/樱花传媒
-视频：东京樱花团/中文小视频组
+#### 【雅典娜快讯】，紧贴时事脉搏
 
-1月27日，郭文贵先生在GTV大直播指出：
+翻译/编辑：小红帽
 
-不要因为一生中的失败，就怀疑一切胜利；不要因为见过太多坏人，就不再相信有好人；不要因为听了太多谎言，就不再相信真话、不再说真话；不要看到控制着国家的中共是邪恶的，就相信邪恶是正义和永恒的！恰恰相反，我们要干掉邪恶。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/6-10.png)图片来源：雅典娜设计组(614)
 
-*编辑：东京樱花团/墨然
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%A8%B1%E8%8A%B1-3.jpg)
+
+根据《RT》新闻2月10日报道，油管（YouTube）首席产品官尼尔·莫汉（Neal Mohan）表示，将允许粉丝“拥有”创作者的视频。
+
+油管详细阐述了使用新兴技术（通常被称为Web3）的计划，并在周四暗示他们可以减少快速增长的数字艺术市场中的欺诈行为，甚至允许粉丝“拥有”内容。
+
+在一篇博客文章中，莫汉表示，Web3技术“为创作者开辟了新的机会”，并让他们与粉丝建立更深层次的关系。
+
+“为粉丝提供一种可验证的方式，让他们拥有来自他们最喜欢的创作者的独特视频、照片、艺术，甚至体验。这对于创作者和他们的观众来说可能是一个引人注目的前景。”
+
+油管还建议他们可以通过在其视频库中引入验证工具来使NFTs更安全。NFTs–非同质化代币是加密区块链资产，曾因版权盗窃和其他掠夺性行为而遭受重创。
+
+目前尚不清楚油管在暗示粉丝可以“拥有”NFTs意味着什么。因为这些代币本身并不会将版权转让给所有者。
+
+NFTs也有环境方面的缺点，因为在区块链上铸造一个项目所需的能量是巨大的。据估计，平均NFT的碳足迹相当于欧盟公民的平均每月碳排放量。
+
+油管的母公司–谷歌“旨在成为第一家无碳运营的大公司”。将NFTs纳入 油管的产品可能会损害这些目标。
+
+新闻链接：[YouTube to expand into NFTs](https://www.rt.com/news/548959-nft-youtube-metaverse-fans/)
+
+发布：tianzhihuan
+
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
