--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,40 +1,49 @@
 ---
-title: 漫谈“长津湖战役” (2)
+title: 川普的事业如何靠中共国金融家推出（1/2）
 ---
-`Longbeach` [轉載自GNews](https://gnews.org/zh-hans/1989284/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1989340/)
 
-作者: 波士顿五月花 洛城武
+**翻译： Jenny Ball**
 
+![](https://assets.gnews.org/wp-content/uploads/2022/02/tempsnip川普的事业如何靠中共国金融家推出1.png)美国前总统唐纳德特朗普于 2022 年 1 月 29 日在美国德克萨斯州康罗的一次集会上做手势。REUTERS/Go Nakamura/File Photo/File Photo
 
+主题概括：
 
+ARC 提供了 200 万美元的资金来启动 SPAC
 
+ARC 招聘了将“数字世界”整合在一起的高管
 
+2 月 10 日（路透社）—— 一位曾被美国监管机构谴责，并被禁止将其公司上市的中共国金融家，在与前总统唐纳德·川普的新社交媒体合资企业合并的空壳公司中，发挥了比公众所知的更大的作用 ，路透社获悉。
 
+关于金融家亚伯拉罕·辛塔（Abraham Cinta ），和他领导的上海投资银行 （ARC Group Ltd） 在空壳公司的监管文件中的参与，鲜有披露。 ARC 被列为“数字世界收购公司”（ Digital World Acquisition Corp ）的“财务顾问”，这家“特殊目的收购公司 ”(SPAC)， 在 10 月与川普新媒体平台签署了合并协议。 除了 ARC 可以帮助 SPAC 与政府和商界联系，以及获得“优质交易渠道”之外，文件中没有提供任何细节。
 
-“长津湖战役”是世界军事史上最残酷的战役之一，参战的中美双方将士都付出了巨大的伤亡代价，为何双方都宣称自己是获胜的一方，而后又多年的缄默？
+现在，一份概述空壳公司拟议条款的财务文件、ARC 与“数字世界”的一位创建者之间的协议，以及对五位熟悉情况的消息人士的采访的新信息（短信），表明辛塔和 ARC 不仅仅建议了“数字世界”，他们还提供资金来创建“数字世界”，并招募了一名高管来帮助组建公司。
 
-北极熊团真的被全歼并取消番号了吗？
+根据财务文件，以及辛塔与其他相关人员之间的短信，ARC 提出向三位商人提供至少 200 万美元，以组建“数字世界”，该 SPAC 继续与川普媒体和技术集团合并，辛塔对如何补偿 SPAC 的管理团队有发言权。
 
-美海军陆战队历史上第一位华裔军官李超恩（Chew-een Lee）作战勇敢、身先士卒、两次负伤、两次获奖，被战友们视为英雄和偶像，为何多年来却遭受华人同胞的不断非议？
+一位知情人士表示，ARC 最终成为“数字世界” 的 SPAC 进行了投资。 正如 ARC 最初讨论的那样，路透社无法确认这笔投资是否为 200 万美元。披露显示，“数字世界”管理实体或赞助商的初始投资者，总共投入了 1180 万美元。
 
-参加了长津湖战役的迟浩田，当上中共国防部长后，亲自领导指挥13579计划，勾结黑暗势力，研究开发制造新冠病毒等超限生化武器，使全人类都面临灭顶之灾，他到底在长津湖经历了什么？
+《华盛顿邮报》和彭博社此前报道称，ARC 持有“数字世界”赞助商的股份。 首次报道了 ARC 提供资金让 SPAC 启动的事实。
 
-**漫谈“长津湖战役” (3)**
+辛塔以及 ARC 和 “数字世界”的发言人没有回应置评请求。
 
-长津湖概况
+路透社无法确定川普是否在创建或塑造“数字世界”方面发挥了任何作用，或者川普在其公司与 SPAC 签署协议时，对“数字世界”的支持者了解多少。川普媒体与技术集团发言人和川普发言人没有回应置评请求。
 
-长津湖不是湖，是个水库。它是日据时代日本野心勃勃水利发电计划的产物。由发源于长津郡黄草岭的长津江在北流注入鸭绿江的途中，经水电站大坝截流形成。 长津湖地处北朝鲜咸镜南道长津郡的盖马高原，平均海拔约1300米，湖周边都是崇山峻岭、原始森林，人烟十分稀少。 长津湖处于高寒地带，一般10月便会降雪入冬，11月下旬平均气温低至 零下20-30摄氏度。 长津湖西面的狼林山脉将北朝鲜的北部隔绝成了独立的东西两半。 长津湖距离中朝边境的鸭绿江150km左右，离三八线近300多公里。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/0554103f-fabd-4c87-a519-361259b99317-1.jpg)
-**漫谈*“*长津湖战役*”*（*04*） **
+ARC 在交易中扮演的重要角色，对于财务顾问来说是非典型的，这是在“数字世界”描述ARC 的术语。顾问通常会就如何达成交易向 SPAC 提供建议，但通常不会为 SPAC 提供资金或参与确定其高级职位。然而，据路透社采访的两名资本市场律师和两名金融学教授表示，美国没有针对此类安排的规定，也没有要求披露这些安排。
 
-**长津湖战役概述**
+有关 ARC 扮演的角色的细节，为这位前总统利润丰厚的“数字世界”交易背后的金融公司提供了新的线索。ARC的专长是用SPAC这种借壳上市的形式，将海外资金汇入华尔街的繁荣。 SPAC 是上市空壳公司，它们筹集现金以收购一家私人公司，并将其上市，从而使目标公司能够避开首次公开募股的更严格的监管检查。许多散户投资者助长的淘金热所进行的冒险赌注，经常是这种项目变质。
 
-长津湖战役是*1950*年*11*月下旬至*12*月中旬之间，朝鲜战争时期长津湖地区中美双方王牌部队之间一系列战斗的合称。是役，中共*“*志愿军*”*第九兵团*15*万人将约*1*万*7*千人的美陆战一师和美七师官兵分割包围在湖区周围*7*个大小不一的包围圈中，意图全歼被围美军。经数日苦战，虽有*“*志愿军*”*飞蛾扑火般顽强进攻、阻击、追击，在付出数千人的伤亡代价后，美陆战一师携带所有辎重成建制地突破重围堵，成功抵达兴南港并带着一路跟随的近十万北朝鲜难民乘船撤出了北朝鲜。由于西线美第八集团军的崩溃和后撤，陆战一师已经不可能完成麦克阿瑟将军*“*圣诞攻势*”*计划
+请在文章后半部分看川普总统的项目命运如何。
 
-*——*与西线美第八集团军汇合，从而彻底消灭朝鲜人民军结束朝鲜战争。但是面对数倍的强敌突然包围袭击，陆战一师能以较小的代价予敌人以重创后全身而退，其所表现出来的英勇顽强团结合作的战斗精神和战斗意志，仍然受到了美军的高度赞扬。战后陆战一师全师官兵获*”*总统荣誉勋章*“*，参战官兵共获*17*枚*”*国会荣誉勋章*”*。以阵亡人数的比例来讲，颁发的勋章数远超太平洋战争时期最血腥的硫磺岛战役。美军认为长津湖战役的艰苦困难程度是超出想象的，陆战一师能全身而退就是巨大的胜利！*“*志愿军*”*九兵团付出了巨大的伤亡代价，没能完成毛泽东战前逐次全歼陆战一师、美七师等部的作战计划，但是因随后东面战场美第十军全部撤回到*38*线以南的战略结果，毛泽东还是对九兵团提出了表扬和安慰，特许九兵团不用轮换回国并留住当地善后，补充人员补给给养休养生息。志愿军总部表彰了参战的大批将士，授予下碣隅里战斗中表现勇敢的杨根思为*“*特级战斗英雄*”*称号（整个朝鲜战争期间，志愿军只授予了两个*“*特级战斗英雄*”*，另一个是上甘岭的黄继光。），同时大肆宣扬全歼北极熊团的虚假战绩，并将美第十军主动撤回*38*线以南鼓吹为自己的战果。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/06461eb1-1625-4d9d-ae98-a84c371497b2-2-1.jpg)
-编辑/封面/发布: 一口大锅闹革命
+**新闻来源**：[reuters.com][How a Trump deal got a boost from a China-based financier](https://www.reuters.com/business/how-china-based-dealmaker-got-shell-company-trumps-deal-off-ground-2022-02-10/)
 
+* * *
+
+***素材：文戈
+审核：文乐
+校对：花羽
+发布：信心满满***
+![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-3.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
