--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,41 +1,69 @@
 ---
-title: 正邪大决战即将打响，民众必定从瑞银夺回财富
+title: 国内同胞可以不信可以不敢可以不能,最起码可以不打疫苗
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1989449/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1989543/)
 
-整理：雅典娜速记组
-编辑：Mttfly
+G-TV视频链接：[https://gtv.org/video/id=620351fb585ecc15d73f484e](https://gtv.org/video/id=620351fb585ecc15d73f484e)
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/7-12.png)图片来源：雅典娜设计组（姐夫说说）
+**郭文贵先生：**就是现在国内的同胞，我就向你们真的认清楚。你看见这个电视上除了这些同心同框，每个人长啥样？咱都是同族同类，我们过去啥样？今天啥呀？这再一个你加入爆料革命，新中国联邦，我请问你能失去什么？
 
+你可以不信，你可以不敢，你可以不能，但有一样你是可以做到的，你最起码你要知道爆料革命，新中国联邦给了人间最大的礼物，让人不打疫苗。这个礼物真的是，我希望美东的香草山，今天就是从头到尾要贯穿主题，这个礼物大到不知道比喜币、喜币涨一亿倍，你死了跟你一毛钱关系没有。
 
-这几年跟随爆料革命，大家都逐渐认清了真相。其实不止中国老百姓是共产党的奴隶，生活在全球各地的普通民众，一样是上层精英的奴隶。只不过西方民众生活条件稍微好一点，有民主法治这个遮羞布，有两党的选举来掩盖他们真正的恶行。但是最后都是被这些暗黑势力所控制，所剥削。
+而且大家已经看到七哥说的，现在这个疫苗灾难，大家越来，100%七哥说的对吧？医生、专家、律师，昨天你看到华盛顿聚会什么17,000个医生站出来说话，我们是医生，你是人类大屠杀，现在死最多的是医生。
 
-暗黑势力通过控制美联储，控制了巨额的资金和大多数的主流媒体、科技公司，然后又把钱藏在了UBS（瑞银集团），他们的目的就是要统治世界。这群人控制着世界上大部分财富，并蓄意制造人类大部分苦难及精神枷锁。他们通过高科技、谎言、体制和法治等等，控制和奴役人类。这些人包括世界大银行家、顶级金融界人士等。他们建立了对人类文明极具破坏性的债务货币体系，并推动它的全球化。通过金融操控与欺骗，实现了把人类大量财富集中到他们手中的目的，使全球所有的人永远处于贫困的状态。
+国内咱有一个战友，跟长岛哥是一个老家的也姓夏。这个医生他背后有一个名字，我可以告诉大家，他现在已经出来了叫夏俊明（音译）。他最早告诉我是什么，他说七哥当我看打完疫苗有人抽搐的时候，他说七哥我就做好走的准备了。
 
-他们还通过金钱控制政府、经济、工业、军事、教育、文化、食品、医药、娱乐等几乎所有的领域。他们投资大公司，以大公司的形式控制着石油、天然气、粮食等对全球人类最重要的资源，对自然资源采取破坏式的开采利用。
+他说同时我告诉所有人，千万别打疫苗打假的，他出来以后，到了欧洲，咱们战友给安排得非常好。现在到了欧洲某国，全家又都出来了，昨天说七哥今年咱春节啥都不用说，就大家不打疫苗这件事儿，已经是没法形容的公德。
 
-他们还推动着世界战争武器的发展，并挑动和引发诸多的战争，通过战争达到控制人口牟利的目的。最主要的，这群人还控制着全世界的主流媒体，包括电视、报纸、广播、社交媒体、科学期刊。他们通过过滤和修剪信息，把不利于他们的信息和真相给屏蔽掉，然后散布大量的假象和虚假信息。让人们生活他们编织的信息茧房里。现在我们大家又知道，他们还制造冠状病毒疫苗，并形成从新生儿到老年人的全面的接种体系。这次的Covid-19疫苗的副作用已经逐渐显现出来了，很多人都已经成为了受害者。
+所以国内战友我今天第一个呼吁你们，你拥有喜币相当的难，是吧？你拥有勇气相当的难，是吧？你拥有一个香草山给别人，相当的难，但是你最起码把你的眼睛打开，耳朵打开，别老听那些骂残疾人的赵本山卖拐，学会骗人。
 
-最主要他们还控制着教育体系，通过学校教育，对学生集体灌输歪曲的世界观、屏蔽历史真相等等，使人们不辨真假，只接受他们灌输的信息。我们以前所推崇的世界精英，头顶上闪着光环的人物，比如比尔·盖茨，随着真相的逐步揭露，大家才知道他就是个恶魔。
+共产党说：爹亲娘亲不如党亲。你听听新中国联邦，我们这人没有任何人闲的蛋疼，去跟你瞎直播去，没有一个人。我们都是生命、时间比谁都值钱，我们就想救人，干点好事，救命帮人。
 
-他们控制着全球的政治、经济、金融、能源、农业、医疗、教育，他们无处不在，躲藏在公共事业之外，或者说是通过被他们控制的主流媒体隐藏他们自己的身份。而他们把所有剥削赚来的钱，几乎都全部存在了UBS。
+我们没有任何能力，也不可能在物理上，任何人做到把手伸到你裤裆里去，解你的腰带。也不可能拿走你一分钱，新中国联邦过去这几年所有投资钱你不投你马上退，有一个被拒绝的吗？
 
-前几百年，这个暗黑势力的范围，只是在西方“这个会，那个会”的所谓的上层精英当中。随着全球化进程的开展，中共的改革开放，产业链转移到中共国。暗黑势力中加入了中共这个恶魔中的恶魔。中共和他们狼狈为奸，一起来控制盘剥全世界人民。这些暗黑势力最主要的是让中共成为他们的白手套，让中共来欺压剥削中国的普通老百姓，让中国的普通民众成为了真正的世界奴工。
+你把钱投给共产党，投给什么E租宝是吧？你要投给路大脑袋、蛇妖闫、九指妖，你要别说那不是猪肉包打狗有去无回，连你都被包子给带走。
 
-而郭先生这个爆料革命的领头人，用像剥洋葱一样的方式，一层一层的拨开了这个世界暗黑势力的种种黑幕。从海航开始，通过媒体，通过爆料，让人们了解了暗黑势力操控世界的手段和规则。现在郭先生又通过海通证券这个案子，直接跟暗黑势力在英国对决。
+就这么简单的道理，我们就是想七哥伤心就是国内的人为什么这么简单道理你不懂，你要打疫苗是吗？我现在告诉大家，昨天我在车上，咱们就是上过直播这个战友，长岛哥救过的战友，仨儿子染上，小儿子17岁过世了，就昨天早上。就17岁，就咱们上午直播的，长岛哥救的。
 
-UBS的钱至少有一百万亿美元。中国半个国家的财富有五十万亿都藏在UBS。随着这些一层层的黑幕被揭开，最后的时候全世界人民都会认识到这些真相，明白这些钱都是属于我们老百姓自己的。最后正义力量一定会想办法拿回这些暗黑势力的钱，让他们吐出来，然后还给全球的老百姓。
+昨天他告诉我，他说七哥你可以把这视频放上去，那个我说我不能放这个，我说太残忍了，我受不了。我们日本的6个家庭的3个的，染了，其中一个也是17岁死的，过世了，也是昨天，就相差不到一个小时。
 
-*发布：tianzhihuan*
+就昨天晚上到现在，最起码5个人是战友的家人过世，就不信战友把战友定成神经病，你被邪教郭文贵给骗了，你被新中国联邦给骗了，郭骗子给骗了，我们不希望用死来证明我们的伟大，我们太不需要了，但是我真是看不得国内战友死。
 
-**
-****更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+你说这个针打下去是真的，人身全体细胞40万亿个，每天要死掉40亿个细胞，死完细胞以后，就是叫做新陈代谢。长出新细胞，旧的就死了，新陈代谢如果长不好的话，长出病了就叫癌症。免疫力就是保证你每天死掉的细胞是该死，然后再生出好细胞，生不出好细胞就叫癌症。
+
+那你这40万亿的东西打到你身体里去，你说在这你是你身体能干出啥事来？什么样的免疫系统，能让你这40万亿的细胞跟你身体一样的大？纠偏的机制就叫免疫功能，它怎么做得到？
+
+所以我就想说这是天大的事情，不要打疫苗，打了疫苗的要吃青蒿素、伊维菌素，第三个不要让孩子再打疫苗了，千万不要，千万不要。你会痛不欲生，就昨天在咱们这5个战友家人，这而且大家你们都每个人基本都认识。
+
+所以只有一句话，在2022年人类最黑暗的一年活下来。少害人，让家人活好。
+
+字幕来源：[2022年1月29日香草山农场年会直播全文字版](https://gnews.org/zh-hans/1938961/)
+
+编辑整理：Jacques；
+
+字幕文件制作：知津；
+
+视频制作及上传：Cindy；
+
+G-News发布：小满；
+
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
