--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,23 +1,53 @@
 ---
-title: 爆料革命——历史的今天12月24日
+title: 一千项不同研究列表显示COVID疫苗不良事件的证据
 ---
-`新加坡狮城农场 Himalaya Singapore` [轉載自GNews](https://gnews.org/zh-hans/1989444/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1989509/)
 
-**整理：Pride**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Screenshot-2022-02-11-171958.png)
-**2019年12月24日—**共产党高级将领家族，领导了1970年全国杀狗。原因是中国官场非常迷信命相、属相之学，就是中国的奇门遁甲、12生肖相生相克。在狗年，必须得灭狗；狗，冲毛主席的蛇。最后汪东兴下令全国杀狗，当时也缺粮食，还要奖励人吃狗肉。现在这次杀狗是他的一个下属在执行，他的两条狗也给焖死了。这是王岐山给习出的馊主意，狗年要灭鼠—狗掐老鼠多管闲事；鼠年对蛇不好，就开始灭狗了。
+**翻译： Jenny Ball**
 
-**2020年12月24日—**今年的平安夜，是最不平安的。西方政府已经说，黑暗真是刚刚开始。但没有人敢说，黑暗是来自共产党。除了爆料革命敢说，共产党让所有人都不平安，世界没有人敢这么说。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/tempsnip一千项不同研究列表显示COVID疫苗不良事件的证据.png)图片来源：thegatewaypundit.com
 
-灭共，做一个在世界受尊重、体面的中国人，就要学香港。香港是中国人的圣城，不要忘了香港人付出的生命、鲜血、自由代价。美国最近对共产党一系列制裁，都是跟香港挂钩的。任何忘记香港的人，都不是战友和称职的中国人。
+您是否厌倦了与自由派朋友和家人就 COVID-19 疫苗的安全性进行辩论？
 
-**2021年12月24日—**共产党最恐惧我们的正道主义，把我们定为邪教、恐怖分子、骗子，更是第一天的事情。我们不制造仇恨，不恨任何人是正道主义的本质。HBO股东和我们追求相反，他们追求巨额财富的占有、掠夺，个人崇拜。控制媒体权力，虚假传播真相，让别人按它的思想来。
+“澳大利亚知情选择”（Informed Choice Australia）列出了提交给各种医学期刊的“同行评审”医学论文清单，显示了 COVID-19 疫苗中不良事件的广泛证据。
 
-1968年和1997年两次排华期间，大量共产党的报纸都在说：海外华人背叛祖国，到人家国家要守法。印尼攻击华人的小报，几乎都是华人拿钱支持。说“华人抢夺我们的财富、工作”，不诚实，代表共产党统治我们国家等很多说法。300万华人不当回事，最后50万被杀掉。然后美国主流媒体从不报道，CIA不让报道，好莱坞不允许拍的话题，世界上几乎没有人提起。再发生印尼排华事件，共产党会告诉国内人：这帮东西都是混蛋、邪教、暴徒。
+该列表仅包括截至 1 月 20 日有关 COVID-19 疫苗不良反应的研究，例如心肌炎、血栓形成、血小板减少症、血管炎、心脏、贝尔氏麻痹症、免疫介导疾病等。
 
-西安事件是疫苗导致的结果，就是流血、吐血以及某些器官的急速衰竭。这些人死了以后，身体就是一个坑、一个包。就是打的mRNA，把整个身体都快吃掉。Omicron之后，共产党还会放毒。未来Omicron和疫苗死最多的是白人，我们要让西方人用生命、用鲜血、付出代价，看清楚共产党的本质。
+阅读以下前 20 项研究：
 
-GTV永远是王；G|CLUBS是通行证和新中国联邦最早期护照；G|FASHION是文化和尊严的桥梁；盖特是通往西方的桥梁；GNEWS是未来不分种族、文化和新中国联邦交流的精神、文化、信仰平台。搜索功能强大；是未来情报、信息交易市场；是世界精英最真实、可相信的，以个人为主的一个有智慧、良知，不同领域的人参与的一个大的平台。战友是这些平台的唯一所有投资者，未来一定是新中国联邦的核心力量。
+1. SARS-CoV-2 mRNA 疫苗接种后的心肌炎，病例系列：[https://www.sciencedirect.com/science/article/pii/S2666602221000409](https://www.sciencedirect.com/science/article/pii/S2666602221000409)
+2. 美军成员接种 COVID-19 mRNA 疫苗后的心肌炎。这篇文章报道了“23名男性患者，包括22名既往健康的军人，在接种疫苗后4天内发现心肌炎”：[https://jamanetwork.com/journals/jamacardiology/fullarticle/2781601](https://jamanetwork.com/journals/jamacardiology/fullarticle/2781601)
+3. 在儿童病例系列中，心肌炎与 BNT162b2 信使 RNA COVID-19 疫苗的关联: [https://pubmed.ncbi.nlm.nih.gov/34374740/](https://pubmed.ncbi.nlm.nih.gov/34374740/)
+4. 辉瑞-生物科技 COVID-19 疫苗接种后 7 名青少年出现急性症状性心肌炎: [https://pediatrics.aappublications.org/content/early/2021/06/04/peds.2021-052478](https://pediatrics.aappublications.org/content/early/2021/06/04/peds.2021-052478)
+5. 接种 COVID-19 mRNA 后的心肌炎和心包炎：护理人员的实际考虑: [https://www.sciencedirect.com/science/article/pii/S0828282X21006243](https://www.sciencedirect.com/science/article/pii/S0828282X21006243)
+6. COVID-19 疫苗接种后的心肌炎、心包炎和心肌病: [https://www.sciencedirect.com/science/article/pii/S1443950621011562](https://www.sciencedirect.com/science/article/pii/S1443950621011562)
+7. COVID-19 mRNA 疫苗引起的心肌炎: [https://www.ahajournals.org/doi/pdf/10.1161/CIRCULATIONAHA.121.056135](https://www.ahajournals.org/doi/pdf/10.1161/CIRCULATIONAHA.121.056135)
+8. COVID-19 疫苗接种后的心肌炎和心包炎: [https://jamanetwork.com/journals/jama/fullarticle/2782900](https://jamanetwork.com/journals/jama/fullarticle/2782900)
+9. 心肌炎与 COVID-19 疫苗接种暂时相关: [https://www.ahajournals.org/doi/pdf/10.1161/CIRCULATIONAHA.121.055891](https://www.ahajournals.org/doi/pdf/10.1161/CIRCULATIONAHA.121.055891).
+10. 青少年心肌炎相关的 COVID-19 疫苗接种: [https://pediatrics.aappublications.org/content/pediatrics/early/2021/08/12/peds.2021-053427.full.pdf](https://pediatrics.aappublications.org/content/pediatrics/early/2021/08/12/peds.2021-053427.full.pdf)
+11. 接种针对 COVID-19 的 BNT162b2 疫苗后的急性心肌炎: [https://pubmed.ncbi.nlm.nih.gov/33994339/](https://pubmed.ncbi.nlm.nih.gov/33994339/)
+12. COVID-19 疫苗 Ad26.COV2.S 与急性心肌炎之间的时间关联：病例报告和文献: [https://www.sciencedirect.com/science/article/pii/S1553838921005789](https://www.sciencedirect.com/science/article/pii/S1553838921005789)
+13. COVID-19 疫苗诱发的心肌炎：一例文献复习报告: [https://www.sciencedirect.com/science/article/pii/S1871402121002253](https://www.sciencedirect.com/science/article/pii/S1871402121002253)
+14. COVID-19 疫苗与心肌炎之间的潜在关联：临床和 CMR 发现: [https://www.sciencedirect.com/science/article/pii/S1936878X2100485X](https://www.sciencedirect.com/science/article/pii/S1936878X2100485X)
+15. 男性青少年急性心肌炎复发与接受 2019 年冠状病毒 mRNA 疾病疫苗 (COVID-19) 相关: [https://www.sciencedirect.com/science/article/pii/S002234762100617X](https://www.sciencedirect.com/science/article/pii/S002234762100617X)
+16. 两名患者的暴发性心肌炎和全身性过度炎症与 BNT162b2 COVID-19 mRNA 疫苗接种在时间上相关: [https://www.sciencedirect.com/science/article/pii/S0167527321012286](https://www.sciencedirect.com/science/article/pii/S0167527321012286).
+17. 接种 BNT162b2 疫苗后的急性心肌炎: [https://www.sciencedirect.com/science/article/pii/S2214250921001530](https://www.sciencedirect.com/science/article/pii/S2214250921001530)
+18. 接种 COVID-19 Ad26.COV2.S 病毒载体后的淋巴组织细胞性心肌炎: [https://www.sciencedirect.com/science/article/pii/S2352906721001573](https://www.sciencedirect.com/science/article/pii/S2352906721001573)
+19. 健康男性接种 BNT162b2 后心肌炎: [https://www.sciencedirect.com/science/article/pii/S0735675721005362](https://www.sciencedirect.com/science/article/pii/S0735675721005362)
+20. 曾感染过 SARS-CoV-2 的健康男性接种 Comirnaty（辉瑞共同体）疫苗后的急性心肌炎: [https://www.sciencedirect.com/science/article/pii/S1930043321005549](https://www.sciencedirect.com/science/article/pii/S1930043321005549)
+
+
+您可以在此处[here](https://www.informedchoiceaustralia.com/post/1000-peer-reviewed-studies-questioning-covid-19-vaccine-safety)和下方查看和下载完整列表：
+
+**新闻来源**：[thegatewaypundit.com][HERE’S THE LIST: 1,000 Different Studies Show Extensive Evidence of COVID-19 Vaccines Adverse Events](https://www.thegatewaypundit.com/2022/02/list-1000-different-studies-show-extensive-evidence-covid-19-vaccines-adverse-events/?utm_source=Email&amp;utm_medium=the-gateway-pundit&amp;utm_campaign=dailypm&amp;utm_content=daily)
+
+* * *
+
+***审核：文乐
+校对：花羽
+发布：信心满满***
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-3.jpeg)
 
  
 
