--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,35 +1,53 @@
 ---
-title: 美查缴近亿美元超级杯假货 多来自中共国
+title: 有关COVID的真相再也掩盖不下去了
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1989443/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1989499/)
 
-**撰稿：日本东京方舟农场 子辰**
+编译： Jenny Ball
 
-据大纪元2月11日报道，适逢美国第56届美式足球超级杯开赛之际，美国查缴了近亿美元超级杯的假门票和相关物品，绝大多数来自中共国，还有少量来自其它亚洲国家。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1093.png)图片来源：amgreatness.com
 
-2月10日，美国国家知识产权协调中心（NIPRC）和美国职业橄榄球大联盟（NFL）宣布了这项最新的收缴结果。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片-1-7.jpeg)（图片来自大纪元）
-美国国土安全调查局（HSI）执行副局长史蒂夫·弗朗西斯（Steve Francis）说，在美国海关和边境保护局（CBP）及洛杉矶警署部门的合作下，HIS特工已经没收了超过26.7万件与赛事有关的假冒物品，这些假货在市面上的建议零售价共计约9,780万美元。
+左派有一个词来形容事实证明是真的信息，他们称之为“错误信息”。科技巨头们一次又一次地在权力熏心的政府官员的欢呼下，审查和贬低那些与官方 COVID 的说法和严厉的公共卫生措施相矛盾的人，这些措施对健康无益处，但限制了自由。
 
-弗朗西斯说：“这些假货的非法制造和销售是一种掠夺性的贸易行为，危及公众健康和经济，限制了美国产品在全球市场的竞争力。”
+尤为引人注目的是，审查乔·罗根的要求，很少能确定他说的是所谓的“错误信息”。更有说服力的是，审查人员完全没有承认，罗根提倡的“阴谋论”，比他的批评者提倡的许多信条有着更好的历史记录。
 
-假货物品会导致，合法的分销商、零售商和其它与正宗品牌合作的伙伴失去业务，给许多社区带来巨大的经济损失。
+让我们从头开始。2020 年 3 月，在大流行开始时，出现了一种“阴谋论”，表明可怕的 COVID-19 病毒实际上是从研究冠状病毒的武汉病毒学实验室逃逸出来的。Vox警告说。
 
-据悉，此次HIS特工查获的假货包括球衣、帽子、戒指、T恤、夹克、门票、纪念品以及数以千计的体育纪念品。这些假货被标成接近正品的价格，在全美各地的仓库、商店、跳蚤市场、网上和街头小贩的摊位上进行销售。
+多亏了这些极端行为，我们现在知道：
 
-此前，当执法人员发现很多人在销售假的超级杯门票时，为了杜绝这一情况，并减少票务欺诈和改善票务体验，第56届超级杯门票全部采用电子票，不出售纸质票。NFL已经取缔了数十万个假冒的电商、广告网站和卖家。
+- 武汉病毒研究所（武毒所）在蝙蝠洞穴中收集了多年觅食的大量冠状病毒，其中许多——包括已知与大流行病毒最近的亲戚——SARS-CoV- 2。
+- 我们知道武毒所正在积极处理这些病毒，使用不充分的安全协议，其方式可能会引发大流行，而且，中共当局已竭尽全力隐瞒实验室这些活动。
+- 我们知道，第一批病例，曾经被认为是零号病人，在疫情爆发前几周出现在华南海鲜市场。
 
-此外，知识产权协调中心代理主任里卡多·马约拉尔（Ricardo Mayoral）说，作为个人，该如何辨识假货呢？他介绍说，从销售途径和货品本身的材质、工艺、接缝口、商标、通用产品代码（UPC）等方面都可以识别。
 
-他介绍说，球衣和帽子是常被假冒的商品，这些假货往往缺少适当的NFL全息图，并由劣质的缝合线制成、做工粗糙，也没有通用产品代码，NFL在他们生产的每一件产品上都贴上了全息图，而且很有特色。
+之后就是残酷的停工，摧毁了如此多的生命，摧毁了企业，并剥夺了家庭，让人们遭受了如此多难以容忍的经历。2020 年 5 月，Facebook 在其平台上，完全审查了一个名为“密歇根州反对过度隔离”的组织。它进一步禁止用户组织“违反政府关于社交距离的指导的活动”。但这些限制，在后来紧随其后的与 “黑命贵”（Black Lives Matter） 的集结中却不使用了。典型的双重标准。
 
-参考链接：
-[https://www.epochtimes.com/b5/22/2/11/n13569434.htm](https://www.epochtimes.com/b5/22/2/11/n13569434.htm)
+然而，事实证明，这些压迫性的限制，对公众健康几乎没有或根本没有好处。约翰斯霍普金斯应用经济研究所，对公共卫生数据进行了全面审查，以确定各国是否通过实施严格的公共隔离规则取得了更好的公共卫生结果。
 
-素材采编：子辰
-编辑：老孙
-发布：文曦
+作者发现：“虽然这项荟萃分析得出的结论是，封锁对公共卫生几乎没有影响，但在采取封锁措施的地方却造成了巨大的经济和社会成本。” “因此，封锁政策是没有根据的，应该拒绝作为流行病政策的工具。”
 
+然后是对非疫苗医疗的猛烈攻击。当时的州长安德鲁·库莫（Andrew Cuomo）对这一流行病的第一个官方回应之一是， 2020 年 3 月 3 日发布一项行政命令，禁止在标签外使用羟氯喹治疗冠状病毒。
+
+在大流行的早期阶段，在任何科学都可以用来检验这一说法之前，这样做是一件奇怪的事情。从那时起，一场公共关系运动开始对那些认为伊维菌素可能对治疗 COVID 有效的医生进行猛烈抨击。我们都记得“驱虫药”对伊维菌素的诽谤，就好像服用它的人，一定是从兽医的药袋里偷了药丸一样。然而，日本的一项研究发现，对冠状病毒（对人类，而不是马）具有显着的**“**抗病毒**”**作用。
+
+《美国治疗学杂志》在 2021 年夏天发表了一项研究，得出的结论是，
+
+基于 18 项 COVID-19 伊维菌素随机对照治疗试验的荟萃分析发现，死亡率、临床恢复时间和病毒清除时间显着降低，具有统计学意义。此外，许多对照预防试验的结果表明，经常使用伊维菌素可显着降低感染**COVID-19 **的风险。最后，许多伊维菌素分发活动，导致全人群发病率和死亡率迅速下降的例子表明，这是已经确定的一种在 COVID-19 的所有阶段都有效的口服药物。
+
+乔·罗根（Joe Rogan）和Spotify，并没有因为传播“虚假信息”而陷入困境，而指责他们发布“虚假信息”的媒体和政府官员则陷入困境。这就是为什么当权者诉诸审查而不是反驳。很容易理解他们的恐慌。正如我在 2020 年写的那样，“如果社交媒体想扮演医生，他们应该准备好被起诉渎职。”
+
+数十万美国人死于新冠病毒，如果社交媒体没有屏蔽有关治疗的合法信息，很多人可能现在还活着。当 COVID 最终消退时，他们将证明：审查制度不是为了**“**保护**”**公共健康。让诉讼开始吧。
+
+**评论：忘了是哪位说过这样的话：有权势的作恶者，总是用自己犯下的罪行去指责他人。中国共产党就是一个全世界有目共睹的典型例证。这样的政府和有势力的邪恶一方，在这次大流行中，让全世界认清，世界正处于一个多么邪恶的势力控制之中，他们所谓的“错误信息”，“阴谋论”真实他们要掩盖的真相！**
+
+素材链接：[amgreatness.com] [Time Is Running Out for the COVID Coverups](https://amgreatness.com/2022/02/05/time-is-running-out-for-the-covid-coverups/)
+
+* * *
+
+*审核：文乐
+校对：花羽
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-3.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
