--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,23 +1,43 @@
 ---
-title: 爆料革命——历史的今天12月24日
+title: 惊天消息：中共解放军在奥运期间向世界发起出血热病毒攻击
 ---
-`新加坡狮城农场 Himalaya Singapore` [轉載自GNews](https://gnews.org/zh-hans/1989444/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1989447/)
 
-**整理：Pride**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Screenshot-2022-02-11-171958.png)
-**2019年12月24日—**共产党高级将领家族，领导了1970年全国杀狗。原因是中国官场非常迷信命相、属相之学，就是中国的奇门遁甲、12生肖相生相克。在狗年，必须得灭狗；狗，冲毛主席的蛇。最后汪东兴下令全国杀狗，当时也缺粮食，还要奖励人吃狗肉。现在这次杀狗是他的一个下属在执行，他的两条狗也给焖死了。这是王岐山给习出的馊主意，狗年要灭鼠—狗掐老鼠多管闲事；鼠年对蛇不好，就开始灭狗了。
+**翻译： Jenny Ball**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/tempsnip惊天消息：中共解放军在奥运期间向世界发起出血热病毒攻击.png)埃博拉病毒病毒粒子 图片来源：creativedestructionmedia.com
+这个故事正在发展……
 
-**2020年12月24日—**今年的平安夜，是最不平安的。西方政府已经说，黑暗真是刚刚开始。但没有人敢说，黑暗是来自共产党。除了爆料革命敢说，共产党让所有人都不平安，世界没有人敢这么说。
+消息灵通人士告诉“儿童保护媒体”（CDMedia），中国共产党的武装力量，即中国人民解放军，在北京奥运会期间，向本国人民释放了另一种病毒，以便运动员和外交官感染后将病毒带到世界其他国家，尤其是西方。
 
-灭共，做一个在世界受尊重、体面的中国人，就要学香港。香港是中国人的圣城，不要忘了香港人付出的生命、鲜血、自由代价。美国最近对共产党一系列制裁，都是跟香港挂钩的。任何忘记香港的人，都不是战友和称职的中国人。
+放毒的目的是多方面的。在实验室开发后，解放军正在测试病原体在中国人民和奥运会参赛者身上的表现。
 
-**2021年12月24日—**共产党最恐惧我们的正道主义，把我们定为邪教、恐怖分子、骗子，更是第一天的事情。我们不制造仇恨，不恨任何人是正道主义的本质。HBO股东和我们追求相反，他们追求巨额财富的占有、掠夺，个人崇拜。控制媒体权力，虚假传播真相，让别人按它的思想来。
+该病毒已在实验室内进行了改造，以使潜伏期比平时更长，现在怀疑为 3-4 周，以便让来北京的游客在过境期间没有症状地回家。
 
-1968年和1997年两次排华期间，大量共产党的报纸都在说：海外华人背叛祖国，到人家国家要守法。印尼攻击华人的小报，几乎都是华人拿钱支持。说“华人抢夺我们的财富、工作”，不诚实，代表共产党统治我们国家等很多说法。300万华人不当回事，最后50万被杀掉。然后美国主流媒体从不报道，CIA不让报道，好莱坞不允许拍的话题，世界上几乎没有人提起。再发生印尼排华事件，共产党会告诉国内人：这帮东西都是混蛋、邪教、暴徒。
+该病毒的发布遵循 Covid-19 发布期间使用的程序，即中国部分地区被感染、封锁，以试图在释放后阻止传播到中国其他地区。这种情况给解放军提供了似是而非的推诿。
 
-西安事件是疫苗导致的结果，就是流血、吐血以及某些器官的急速衰竭。这些人死了以后，身体就是一个坑、一个包。就是打的mRNA，把整个身体都快吃掉。Omicron之后，共产党还会放毒。未来Omicron和疫苗死最多的是白人，我们要让西方人用生命、用鲜血、付出代价，看清楚共产党的本质。
+然而，与 Covid-19 一样，那些访问中国的感染者，将被允许甚至被鼓励前往西方。
 
-GTV永远是王；G|CLUBS是通行证和新中国联邦最早期护照；G|FASHION是文化和尊严的桥梁；盖特是通往西方的桥梁；GNEWS是未来不分种族、文化和新中国联邦交流的精神、文化、信仰平台。搜索功能强大；是未来情报、信息交易市场；是世界精英最真实、可相信的，以个人为主的一个有智慧、良知，不同领域的人参与的一个大的平台。战友是这些平台的唯一所有投资者，未来一定是新中国联邦的核心力量。
+据说这种病毒具有高度传染性，会导致身体多个孔道出血，甚至是皮肤。
+
+随着 Covid-19 阶段的结束，第二波生物战爆发了。
+
+我们的消息来源已宣布，已与美国政府的有关机构联系，但无济于事，无法隔离从北京奥运会返回的人。
+
+其他新闻媒体最近报道了该地区的类似故事，但没有提供这些具体细节。是否公开此类数据始终是一个问题，但我们认为，美国公众需要了解可能发生的事情，因为，我们对政府和医疗机构的信任已跌入谷底。
+
+CDMedia 将在我们收到更多信息时继续报告。
+
+**新闻来源**：[creativedestructionmedia.com][BREAKING FROM SOURCE: People’s Liberation Army Launches Hemorrhagic Fever Viral Attack Against The World During Olympics](https://creativedestructionmedia.com/news/asia/2022/02/10/breaking-from-source-peoples-liberation-army-launches-hemorrhagic-fever-viral-attack-against-the-world-during-olympics/)
+
+* * *
+
+***审核：文乐
+校对：小东
+发布：信心满满***
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-3.jpeg)
+
+
 
  
 
