--- a/gnews/28.md
+++ b/gnews/28.md
@@ -1,14 +1,14 @@
 ---
-title: 不要因为你一生中的失败 你就怀疑一切的胜利
+title: 所有GTV投资者、GCLUB会员 百分百拥有一份同等价值的去中心化的保险
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1989314/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1989316/)
 
 文编：东京樱花团/樱花传媒
 视频：东京樱花团/中文小视频组
 
-1月27日，郭文贵先生在GTV大直播指出：
+1月19日，郭文贵先生在GTV大直播指出：
 
-不要因为一生中的失败，就怀疑一切胜利；不要因为见过太多坏人，就不再相信有好人；不要因为听了太多谎言，就不再相信真话、不再说真话；不要看到控制着国家的中共是邪恶的，就相信邪恶是正义和永恒的！恰恰相反，我们要干掉邪恶。
+在病毒灾难中，法币、银行和现有保险体制将濒于破产，无法兑现。郭先生设计了前所未有的新中国联邦保险，它是去中心化的绝对保险，在任何情况下，遵守白皮书的承诺，在第三方监督下，应得的保险百分之百以数字货币偿付。届时Gclub会员GTV的投资者将免费拥有同等价值的此项保险，战友们，敬请期待。
 
 *编辑：东京樱花团/墨然
 发布：东京樱花团/平安卿卿*
