--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,41 +1,36 @@
 ---
-title: 正邪大决战即将打响，民众必定从瑞银夺回财富
+title: 俄罗斯与白俄罗斯联合军演 多国纷纷表态
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1989449/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1989478/)
 
-整理：雅典娜速记组
-编辑：Mttfly
+**撰稿：日本东京方舟农场 子辰**
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/7-12.png)图片来源：雅典娜设计组（姐夫说说）
+据大纪元2月11日报道，俄罗斯与白俄罗斯联合进行为期十天的海上军演，让外界一致担忧俄罗斯可能入侵乌克兰。俄罗斯布兵乌克兰边境已经一月有余。
 
+据悉，此次军演约有3万名俄罗斯士兵在白俄罗斯参加演习，而且这是自冷战以来俄罗斯在白俄罗斯进行的最大规模军事部署。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片-1-2-3.jpeg)（图片来自大纪元）
+演习在白俄罗斯的西部和南部与波兰接壤的边界进行，白俄罗斯西部和北部分别与波罗的海国家立陶宛和拉脱维亚相邻，南部则与乌克兰接壤。
 
-这几年跟随爆料革命，大家都逐渐认清了真相。其实不止中国老百姓是共产党的奴隶，生活在全球各地的普通民众，一样是上层精英的奴隶。只不过西方民众生活条件稍微好一点，有民主法治这个遮羞布，有两党的选举来掩盖他们真正的恶行。但是最后都是被这些暗黑势力所控制，所剥削。
+俄罗斯声称，此次演习只是为了演练击退“外部侵略”，并再次否认有任何攻击乌克兰的意图，
 
-暗黑势力通过控制美联储，控制了巨额的资金和大多数的主流媒体、科技公司，然后又把钱藏在了UBS（瑞银集团），他们的目的就是要统治世界。这群人控制着世界上大部分财富，并蓄意制造人类大部分苦难及精神枷锁。他们通过高科技、谎言、体制和法治等等，控制和奴役人类。这些人包括世界大银行家、顶级金融界人士等。他们建立了对人类文明极具破坏性的债务货币体系，并推动它的全球化。通过金融操控与欺骗，实现了把人类大量财富集中到他们手中的目的，使全球所有的人永远处于贫困的状态。
+俄国防部说，此次名为“盟军决心2022”（Allied Resolve 2022）联合军事演习将持续到本月20日，目标是测试白俄罗斯和俄罗斯“在防御行动中压制和击退外部侵略，以及打击恐怖主义和保护盟国利益”这方面的准备情况。
 
-他们还通过金钱控制政府、经济、工业、军事、教育、文化、食品、医药、娱乐等几乎所有的领域。他们投资大公司，以大公司的形式控制着石油、天然气、粮食等对全球人类最重要的资源，对自然资源采取破坏式的开采利用。
+白俄罗斯总统亚历山大‧卢卡申科（Alexander Lukashenko）公开表示，鉴于北约部队驻扎在波罗的海和波兰，这次演习是让俄罗斯和白俄罗斯军队做好准备，以应对源自欧洲的可能军事对抗。
 
-他们还推动着世界战争武器的发展，并挑动和引发诸多的战争，通过战争达到控制人口牟利的目的。最主要的，这群人还控制着全世界的主流媒体，包括电视、报纸、广播、社交媒体、科学期刊。他们通过过滤和修剪信息，把不利于他们的信息和真相给屏蔽掉，然后散布大量的假象和虚假信息。让人们生活他们编织的信息茧房里。现在我们大家又知道，他们还制造冠状病毒疫苗，并形成从新生儿到老年人的全面的接种体系。这次的Covid-19疫苗的副作用已经逐渐显现出来了，很多人都已经成为了受害者。
+乌克兰方面指责俄罗斯“以海军演习为借口”封锁了其南部的黑海和亚速海的部分海域。与此同时，乌克兰也在使用西方盟国送来的武器装备、进行自己的军事演习。
 
-最主要他们还控制着教育体系，通过学校教育，对学生集体灌输歪曲的世界观、屏蔽历史真相等等，使人们不辨真假，只接受他们灌输的信息。我们以前所推崇的世界精英，头顶上闪着光环的人物，比如比尔·盖茨，随着真相的逐步揭露，大家才知道他就是个恶魔。
+美国副国务卿温迪‧舍曼（Wendy Sherman）2月10日在接受MSNBC采访时说，“这次演习时间点相当令人怀疑和震惊，我们非常担心普京总统可能做出错误的选择”。舍曼担心俄罗斯选择武力入侵，而不是外交方式解决乌克兰问题。
 
-他们控制着全球的政治、经济、金融、能源、农业、医疗、教育，他们无处不在，躲藏在公共事业之外，或者说是通过被他们控制的主流媒体隐藏他们自己的身份。而他们把所有剥削赚来的钱，几乎都全部存在了UBS。
+此前，白宫为给乌克兰局势降温，美国及其盟友展开了大量外交活动，可是这场对峙并没有显示出任何缓和的迹象。
 
-前几百年，这个暗黑势力的范围，只是在西方“这个会，那个会”的所谓的上层精英当中。随着全球化进程的开展，中共的改革开放，产业链转移到中共国。暗黑势力中加入了中共这个恶魔中的恶魔。中共和他们狼狈为奸，一起来控制盘剥全世界人民。这些暗黑势力最主要的是让中共成为他们的白手套，让中共来欺压剥削中国的普通老百姓，让中国的普通民众成为了真正的世界奴工。
+此外，英国首相鲍里斯‧约翰逊2月10日会见北约防务联盟的负责人时也表示，未来几天可能是乌克兰危机中“最危险的时刻”。
 
-而郭先生这个爆料革命的领头人，用像剥洋葱一样的方式，一层一层的拨开了这个世界暗黑势力的种种黑幕。从海航开始，通过媒体，通过爆料，让人们了解了暗黑势力操控世界的手段和规则。现在郭先生又通过海通证券这个案子，直接跟暗黑势力在英国对决。
+参考链接：
+[https://www.epochtimes.com/b5/22/2/10/n13568880.htm](https://www.epochtimes.com/b5/22/2/10/n13568880.htm)
 
-UBS的钱至少有一百万亿美元。中国半个国家的财富有五十万亿都藏在UBS。随着这些一层层的黑幕被揭开，最后的时候全世界人民都会认识到这些真相，明白这些钱都是属于我们老百姓自己的。最后正义力量一定会想办法拿回这些暗黑势力的钱，让他们吐出来，然后还给全球的老百姓。
-
-*发布：tianzhihuan*
-
-**
-****更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+素材采编：子辰
+编辑：老孙
+发布：文曦
 
  
 
