--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,35 +1,23 @@
 ---
-title: 美查缴近亿美元超级杯假货 多来自中共国
+title: 中日财经爆┃鸽派立场发生转变的欧洲央行行长
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1989443/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1989446/)
 
-**撰稿：日本东京方舟农场 子辰**
+撰稿：东京樱花团/盖特第一批注册
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1091.png)[图片来源](https://jp.reuters.com/article/idJPKBN2KG01F)
+路透社法兰克福1月11日电， 欧洲央行行长拉加德(Jean-Claude Lagarde)周四在德国媒体集团RND的采访中表示，过快提高主要政策利率无助于遏制创纪录的高通胀，只会伤害经济。
 
-据大纪元2月11日报道，适逢美国第56届美式足球超级杯开赛之际，美国查缴了近亿美元超级杯的假门票和相关物品，绝大多数来自中共国，还有少量来自其它亚洲国家。
+欧洲央行在上周的理事会会议上明确维持主要政策利率不变，承认通胀风险正在增加，不排除在年底前加息的可能性，显示其鸽派立场发生转变。
 
-2月10日，美国国家知识产权协调中心（NIPRC）和美国职业橄榄球大联盟（NFL）宣布了这项最新的收缴结果。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片-1-7.jpeg)（图片来自大纪元）
-美国国土安全调查局（HSI）执行副局长史蒂夫·弗朗西斯（Steve Francis）说，在美国海关和边境保护局（CBP）及洛杉矶警署部门的合作下，HIS特工已经没收了超过26.7万件与赛事有关的假冒物品，这些假货在市面上的建议零售价共计约9,780万美元。
+受此影响，债券市场的收益率急剧上升。
 
-弗朗西斯说：“这些假货的非法制造和销售是一种掠夺性的贸易行为，危及公众健康和经济，限制了美国产品在全球市场的竞争力。”
+虽然短期货币市场目前将12月前的央行存款利率提高50个基点（bp），但拉加德告诉RND，加息不会解决高油价和供应短缺导致的通胀上升问题。
 
-假货物品会导致，合法的分销商、零售商和其它与正宗品牌合作的伙伴失去业务，给许多社区带来巨大的经济损失。
+信息源：[早期利上げでインフレ解決せず、政策調整は段階的に＝ＥＣＢ総裁](https://jp.reuters.com/article/idJPKBN2KG01F)
 
-据悉，此次HIS特工查获的假货包括球衣、帽子、戒指、T恤、夹克、门票、纪念品以及数以千计的体育纪念品。这些假货被标成接近正品的价格，在全美各地的仓库、商店、跳蚤市场、网上和街头小贩的摊位上进行销售。
-
-此前，当执法人员发现很多人在销售假的超级杯门票时，为了杜绝这一情况，并减少票务欺诈和改善票务体验，第56届超级杯门票全部采用电子票，不出售纸质票。NFL已经取缔了数十万个假冒的电商、广告网站和卖家。
-
-此外，知识产权协调中心代理主任里卡多·马约拉尔（Ricardo Mayoral）说，作为个人，该如何辨识假货呢？他介绍说，从销售途径和货品本身的材质、工艺、接缝口、商标、通用产品代码（UPC）等方面都可以识别。
-
-他介绍说，球衣和帽子是常被假冒的商品，这些假货往往缺少适当的NFL全息图，并由劣质的缝合线制成、做工粗糙，也没有通用产品代码，NFL在他们生产的每一件产品上都贴上了全息图，而且很有特色。
-
-参考链接：
-[https://www.epochtimes.com/b5/22/2/11/n13569434.htm](https://www.epochtimes.com/b5/22/2/11/n13569434.htm)
-
-素材采编：子辰
-编辑：老孙
-发布：文曦
-
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%A8%B1%E8%8A%B1-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
