--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,35 +1,23 @@
 ---
-title: 澳洲更改：接种加强针视为“完全接种疫苗”
+title: 爆料革命——历史的今天12月24日
 ---
-`走进澳洲` [轉載自GNews](https://gnews.org/zh-hans/1989428/)
+`新加坡狮城农场 Himalaya Singapore` [轉載自GNews](https://gnews.org/zh-hans/1989444/)
 
-#### 澳洲新闻时事动态，尽在雅典娜【澳洲热点】
+**整理：Pride**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screenshot-2022-02-11-171958.png)
+**2019年12月24日—**共产党高级将领家族，领导了1970年全国杀狗。原因是中国官场非常迷信命相、属相之学，就是中国的奇门遁甲、12生肖相生相克。在狗年，必须得灭狗；狗，冲毛主席的蛇。最后汪东兴下令全国杀狗，当时也缺粮食，还要奖励人吃狗肉。现在这次杀狗是他的一个下属在执行，他的两条狗也给焖死了。这是王岐山给习出的馊主意，狗年要灭鼠—狗掐老鼠多管闲事；鼠年对蛇不好，就开始灭狗了。
 
-整理/编辑：小鱼儿
+**2020年12月24日—**今年的平安夜，是最不平安的。西方政府已经说，黑暗真是刚刚开始。但没有人敢说，黑暗是来自共产党。除了爆料革命敢说，共产党让所有人都不平安，世界没有人敢这么说。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/image-47.png)图片来源：雅典娜设计组
+灭共，做一个在世界受尊重、体面的中国人，就要学香港。香港是中国人的圣城，不要忘了香港人付出的生命、鲜血、自由代价。美国最近对共产党一系列制裁，都是跟香港挂钩的。任何忘记香港的人，都不是战友和称职的中国人。
 
+**2021年12月24日—**共产党最恐惧我们的正道主义，把我们定为邪教、恐怖分子、骗子，更是第一天的事情。我们不制造仇恨，不恨任何人是正道主义的本质。HBO股东和我们追求相反，他们追求巨额财富的占有、掠夺，个人崇拜。控制媒体权力，虚假传播真相，让别人按它的思想来。
 
-当地时间2月10日，据俄罗斯电台（RT）报道，澳大利亚卫生官员更新了指南，宣布一个人要被视为“完全接种”了针对新冠的疫苗，他们必须接种加强针。
+1968年和1997年两次排华期间，大量共产党的报纸都在说：海外华人背叛祖国，到人家国家要守法。印尼攻击华人的小报，几乎都是华人拿钱支持。说“华人抢夺我们的财富、工作”，不诚实，代表共产党统治我们国家等很多说法。300万华人不当回事，最后50万被杀掉。然后美国主流媒体从不报道，CIA不让报道，好莱坞不允许拍的话题，世界上几乎没有人提起。再发生印尼排华事件，共产党会告诉国内人：这帮东西都是混蛋、邪教、暴徒。
 
-澳大利亚免疫技术咨询小组（ATAGI）周四发布了一套新的建议称，一个人需要第三剂疫苗才能被视为“最新的疫苗接种”。
+西安事件是疫苗导致的结果，就是流血、吐血以及某些器官的急速衰竭。这些人死了以后，身体就是一个坑、一个包。就是打的mRNA，把整个身体都快吃掉。Omicron之后，共产党还会放毒。未来Omicron和疫苗死最多的是白人，我们要让西方人用生命、用鲜血、付出代价，看清楚共产党的本质。
 
-ATAGI 的指导意见，在周四下午的全国内阁会议上获得批准。除老年护理工作者外，三剂量建议不会在全国范围内强制执行，并将由各个司法管辖区决定。
-
-澳广播电台，援引澳大利亚卫生部长格雷格·亨特的话说： “如果一个人已经完成了针对其年龄和个人健康需求推荐的所有剂量，那么他们就是‘最新的’ 。”
-
-所有 16 岁以上的澳大利亚公民，目前都有资格在完成第二剂疫苗三个月后，可接种加强针。如果，六个月内没有接种加强针，他们将被视为“逾期”。 16 岁以下的人不需要接种加强针，来获得“最新”状态，但“5 岁及以上的患有严重免疫功能低下的人”除外。
-
-参考新闻：[Country changes definition of ‘fully vaccinated’](https://www.rt.com/news/548910-australia-change-definition-vaccinated/)
-
-发布：tianzhihuan
-
-更多资讯，请关注：**
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/Nz26pG64XF)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+GTV永远是王；G|CLUBS是通行证和新中国联邦最早期护照；G|FASHION是文化和尊严的桥梁；盖特是通往西方的桥梁；GNEWS是未来不分种族、文化和新中国联邦交流的精神、文化、信仰平台。搜索功能强大；是未来情报、信息交易市场；是世界精英最真实、可相信的，以个人为主的一个有智慧、良知，不同领域的人参与的一个大的平台。战友是这些平台的唯一所有投资者，未来一定是新中国联邦的核心力量。
 
  
 
