--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,46 +1,42 @@
 ---
-title: 超限数字战：美国抵御中共国数千次网络攻击
+title: 油管进军NFTs非同质化代币
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1989354/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1989380/)
 
-**编译：喜妹**
+#### 【雅典娜快讯】，紧贴时事脉搏
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1090.png)
+翻译/编辑：小红帽
 
-据美国联邦调查局（FBI）称，中共国是数以千计的针对美国公司和政府实体的网络攻击的幕后黑手，官员们声称，中共国对美国的网络攻击比所有其他国家加起来还要多。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/6-10.png)图片来源：雅典娜设计组(614)
 
-联邦调查局局长Christopher.A.Wray周一（1月31日）在题为 “应对中共国政府构成的威胁 “的演讲中说，联邦调查局目前正在进行数以千计的以中共国政府为重点的调查。联邦调查局说，中共国政府正试图用比以往任何时候都更无耻的方式来窃取美国的信息和技术。
 
-在北京2022年冬奥会开始前几天在里根总统图书馆举行的演讲中，Wray强调，中共国政府是问题所在，而不是中国人民。
+根据《RT》新闻2月10日报道，油管（YouTube）首席产品官尼尔·莫汉（Neal Mohan）表示，将允许粉丝“拥有”创作者的视频。
 
-“中共国政府窃取了令人难以置信的信息，并在所有行业中造成了深远的破坏性的损害，以至于正如你们所听到的，我们每隔12小时左右就会不断地开设新的案件来打击他们的情报攻击行动，”Wray说。
+油管详细阐述了使用新兴技术（通常被称为Web3）的计划，并在周四暗示他们可以减少快速增长的数字艺术市场中的欺诈行为，甚至允许粉丝“拥有”内容。
 
-作为中共国黑客造成损害的一个例子，Wray引用了对微软Exchange的黑客攻击，这影响了大约10,000个网络。引述的另一个事件是，一家中共国政府拥有的公司窃取了马萨诸塞州一家风力涡轮机公司（美国超导公司）的源代码，导致600个工作岗位流失。发起网络攻击的公司是华锐风电。华锐风电利用偷来的源代码在美国销售风力涡轮机。
+在一篇博客文章中，莫汉表示，Web3技术“为创作者开辟了新的机会”，并让他们与粉丝建立更深层次的关系。
 
-Wray认为，中共国正在从美国窃取关键技术，以支持其 “中国制造2025 “计划，并在演讲中谈到中共国政府如何通过几乎任何规模的中共国公司，都必须存在的嵌入式共产党细胞，控制其不拥有的公司。
+“为粉丝提供一种可验证的方式，让他们拥有来自他们最喜欢的创作者的独特视频、照片、艺术，甚至体验。这对于创作者和他们的观众来说可能是一个引人注目的前景。”
 
-在最近接受美国全国广播公司(NBC)的采访时，Wray表示，他在2017年首次担任局长时，对中共国积极窃取美国技术的努力感到惊讶。
+油管还建议他们可以通过在其视频库中引入验证工具来使NFTs更安全。NFTs–非同质化代币是加密区块链资产，曾因版权盗窃和其他掠夺性行为而遭受重创。
 
-“这让我大吃一惊。他告诉全国广播公司：”我不是那种会轻易使用’惊讶’这样的词的人。“
+目前尚不清楚油管在暗示粉丝可以“拥有”NFTs意味着什么。因为这些代币本身并不会将版权转让给所有者。
 
-根据Wray的说法，自2017年以来，中共国政府构成的威胁只增不减，为中共国政府工作的黑客正在针对从小型团体到大型服务提供商的公司和工人。
+NFTs也有环境方面的缺点，因为在区块链上铸造一个项目所需的能量是巨大的。据估计，平均NFT的碳足迹相当于欧盟公民的平均每月碳排放量。
 
-Wray承认，中共国对美国科技情报的窃取不仅支持发展了中共国的技术，而且严重损害了美国工业。
+油管的母公司–谷歌“旨在成为第一家无碳运营的大公司”。将NFTs纳入 油管的产品可能会损害这些目标。
 
-“这种损害-公司倒闭、工作岗位流失-已经积累了十多年，达到了我们现在的程度。这是一个在全国范围内都能感受到的损害，对整个行业的工人来说都是如此，”Wray说。
+新闻链接：[YouTube to expand into NFTs](https://www.rt.com/news/548959-nft-youtube-metaverse-fans/)
 
-中共国政府官员一直拒绝接受这些指控，坚持认为这些指控是毫无根据的。即使面对无可辩驳的证据，也是直接否认有罪，这是中国共产党（CCP）一贯采用的典型策略。
+发布：tianzhihuan
 
-2021年7月，中共国大使馆发言人赵立建说，美国 “与其盟友勾结，对中共国网络安全进行无理指责”，并补充说”这是凭空捏造的，混淆了是非。这纯粹是出于政治动机的污蔑和压制”。 周一，Wray表示，联邦调查局已准备好与中共国政府进行一场持久战，”参与这场战争的每个人都可以放心，他们不会有比联邦调查局更坚定的合作伙伴”。
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
-素材来源：【visiontimes.com】[Guerra digital sin restricciones: Estados Unidos se defiende de miles de ciberataques chinos](https://es.visiontimes.com/2022/02/04/ciberataques-chinos.html)
-
-* * *
-
-审核：阿伯塔
-校对：信心满满
-发布：花羽
-![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-3.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
