--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,48 +1,81 @@
 ---
-title: 川普的事业如何靠中共国金融家推出（1/2）
+title: 川普的事业如何靠中共国金融家推出（2/2）
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1989340/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1989379/)
 
-**翻译： Jenny Ball**
+编译： Jenny Ball
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/tempsnip川普的事业如何靠中共国金融家推出1.png)美国前总统唐纳德特朗普于 2022 年 1 月 29 日在美国德克萨斯州康罗的一次集会上做手势。REUTERS/Go Nakamura/File Photo/File Photo
+![](https://assets.gnews.org/wp-content/uploads/2022/02/屏幕截图-2022-02-11-100513.jpg)图片来源：reuters.com
 
-主题概括：
+“数字世界”的活动正在接受监管审查。根据一份监管文件，美国证券交易委员会（SEC）和美国金融业监管局（FINRA），已向“数字世界”询问有关交易的情况。 SEC 正在调查“数字世界”与交易有关的政策和程序，以及 SPAC 中的“某些投资者的身份”以及资金的来源。“数字世界”披露，FINRA 已要求提供有关“任何发生的事件”的详细信息，包括在 SPAC 宣布与川普公司合并之前对交易的审查。
 
-ARC 提供了 200 万美元的资金来启动 SPAC
+SEC 和 FINRA 没有采取任何行动，这些机构拒绝就他们的询问置评。
 
-ARC 招聘了将“数字世界”整合在一起的高管
+关于这笔交易的许多问题仍未得到解答，包括用于建立“数字世界”的 1180 万美元资金的大部分来源。 根据路透社根据监管文件的计算，该股份现在价值 7.05 亿美元。
 
-2 月 10 日（路透社）—— 一位曾被美国监管机构谴责，并被禁止将其公司上市的中共国金融家，在与前总统唐纳德·川普的新社交媒体合资企业合并的空壳公司中，发挥了比公众所知的更大的作用 ，路透社获悉。
+根据路透社看到的带有拟议条款的财务文件，ARC 提议的 200 万美元，将来自辛塔公司管理的新加坡基金。
 
-关于金融家亚伯拉罕·辛塔（Abraham Cinta ），和他领导的上海投资银行 （ARC Group Ltd） 在空壳公司的监管文件中的参与，鲜有披露。 ARC 被列为“数字世界收购公司”（ Digital World Acquisition Corp ）的“财务顾问”，这家“特殊目的收购公司 ”(SPAC)， 在 10 月与川普新媒体平台签署了合并协议。 除了 ARC 可以帮助 SPAC 与政府和商界联系，以及获得“优质交易渠道”之外，文件中没有提供任何细节。
+根据该文件，除了 ARC 将通过其新加坡基金投资的资金外，来自以色列的两名投资者，区块链企业家斯塔斯·奥斯金（ Stas Oskin ）和塞巴斯蒂安·斯图普拉克（ Sebastian Stupurac ）将额外投入 350,000 美元，其数字签名将辛塔列为其创建者。
 
-现在，一份概述空壳公司拟议条款的财务文件、ARC 与“数字世界”的一位创建者之间的协议，以及对五位熟悉情况的消息人士的采访的新信息（短信），表明辛塔和 ARC 不仅仅建议了“数字世界”，他们还提供资金来创建“数字世界”，并招募了一名高管来帮助组建公司。
+斯图普拉克确认，他参与了给路透社的短信，并表示，他回忆了一个不同的投资数据。他拒绝透露他的投资是什么，并表示“所有信息都应该在某个时候公开”。他补充说，他同意“赞助这个想法”，因为他相信 SPAC 的管理团队，但没有参与其发展，也没有关注后续事件。他拒绝提供更多细节。
 
-根据财务文件，以及辛塔与其他相关人员之间的短信，ARC 提出向三位商人提供至少 200 万美元，以组建“数字世界”，该 SPAC 继续与川普媒体和技术集团合并，辛塔对如何补偿 SPAC 的管理团队有发言权。
+奥斯金没有回应置评请求。
 
-一位知情人士表示，ARC 最终成为“数字世界” 的 SPAC 进行了投资。 正如 ARC 最初讨论的那样，路透社无法确认这笔投资是否为 200 万美元。披露显示，“数字世界”管理实体或赞助商的初始投资者，总共投入了 1180 万美元。
+文件显示，作为交易的一部分，**ARC ****将对这家空白支票公司所追求的任何交易拥有否决权**。路透社无法确定提供投资“数字世界”的 ARC 新加坡基金的投资者身份，也无法确定 ARC 是否获得了否决权。
 
-《华盛顿邮报》和彭博社此前报道称，ARC 持有“数字世界”赞助商的股份。 首次报道了 ARC 提供资金让 SPAC 启动的事实。
+证券法规不要求“数字世界”披露其赞助商背后的投资者。 “数字世界”在监管文件中，将赞助商列为特拉华州上市公司，名为“ARC全球投资II”（ ARC Global Investments II）。文件没有说明该实体是否隶属于总部位于中共国的 ARC。该文件将“数字世界”首席执行官帕特里克·奥兰多（Patrick Orlando） 列为 “ARC全球投资II”的“管理成员”。
 
-辛塔以及 ARC 和 “数字世界”的发言人没有回应置评请求。
+奥兰多没有回应置评请求。
 
-路透社无法确定川普是否在创建或塑造“数字世界”方面发挥了任何作用，或者川普在其公司与 SPAC 签署协议时，对“数字世界”的支持者了解多少。川普媒体与技术集团发言人和川普发言人没有回应置评请求。
+迄今为止，“数字世界”与川普媒体的合并，对股东来说是非常有利可图的。川普尚未推出他的社交媒体产品，行业分析师质疑它是否可以在 Facebook 等成熟平台上使用。
 
-ARC 在交易中扮演的重要角色，对于财务顾问来说是非典型的，这是在“数字世界”描述ARC 的术语。顾问通常会就如何达成交易向 SPAC 提供建议，但通常不会为 SPAC 提供资金或参与确定其高级职位。然而，据路透社采访的两名资本市场律师和两名金融学教授表示，美国没有针对此类安排的规定，也没有要求披露这些安排。
+尽管如此，投资者还是抢购了“数字世界”的股票，使其成为有史以来表现最好的SPAC。川普的公司在 10 月签署交易时价值 8.75 亿美元，现在价值高达 106 亿美元。
 
-有关 ARC 扮演的角色的细节，为这位前总统利润丰厚的“数字世界”交易背后的金融公司提供了新的线索。ARC的专长是用SPAC这种借壳上市的形式，将海外资金汇入华尔街的繁荣。 SPAC 是上市空壳公司，它们筹集现金以收购一家私人公司，并将其上市，从而使目标公司能够避开首次公开募股的更严格的监管检查。许多散户投资者助长的淘金热所进行的冒险赌注，经常是这种项目变质。
+ARC 在美国从事的其他 SPAC 的表现不及同行。除了“数字世界”， ARC 附属 SPAC 的18 家平均股价为 9.45 美元，低于其 10 美元的首次公开募股价格和 SPAC 行业平均水平 9.88 美元。
 
-请在文章后半部分看川普总统的项目命运如何。
+“**交易已经改变****”**
 
-**新闻来源**：[reuters.com][How a Trump deal got a boost from a China-based financier](https://www.reuters.com/business/how-china-based-dealmaker-got-shell-company-trumps-deal-off-ground-2022-02-10/)
+辛塔早期涉足公共市场的过程举步维艰。2017 年，墨西哥福利部的一名前官员、辛塔和几位 ARC 同事，因歪曲他们试图公开的企业，并就他们与他们的关系做出虚假陈述，受到美国SEC的谴责。美国SEC当时罕见地阻止了他们将这些公司上市。
+
+去年 10 月，辛塔和 SEC 没有回应路透社对此事的报道的置评请求。
+
+对他们交易的回顾显示，这些金融家很快将自己重新定位为中共国的投资银行家，**并转向 ****SPAC ****，作为让公司上市的新方式。**
+
+据监管文件和五位知情人士透露，在创建在美国上市的 SPAC 时，ARC 经常寻找美国高管担任经理，并从中共国和其他国家的投资者那里筹集资金，以提供启动它们所需的初始资金。
+
+在已从其网站上删除的 2020 年营销演示文稿中，ARC 表示，它“能够打造一个由家族办公室赞助的武汉 SPAC，该家族办公室由 ARC 在新加坡组建，让我们的客户享受到美国金融市场的灵活性和优势。”
+
+监管文件显示，由奥兰多牵头、**中国商人李玉宝提供财务支持的 ****SPAC****去年清算，理由是其****“****无法完成初始业务****”****。**
+
+李没有回应置评请求。
+
+一位知情人士称，当一位新加坡 ARC 高管于 2020 年将辛塔介绍给该国的区块链顾问兼企业家丹尼尔.桑托斯（Daniel Santos） 时，ARC 开始涉足“数字世界”。
+
+根据路透社看到的一份协议副本，桑托斯于 2020 年 9 月与 ARC 签署了一项协议，将 ARC 与可以组建 SPAC 的高管联系起来。协议规定，在一个 5000 万美元的 SPAC 的假设示例中，桑托斯将获得高达 97,500 美元的费用，外加 ARC 将获得的 SPAC 股份的 20%。
+
+根据文件、短信和知情人士的说法，桑托斯正在与美国视频游戏行业的两名高管李·雅各布森(Lee Jacobson) 和布莱恩·法戈（Brian Fargo）讨论启动 SPAC。根据监管文件，雅各布森和法戈在寻求资金556,090 美元来启动 SPAC。
+
+根据该文件和一份监管文件，最终决定，由位于圣地亚哥的一家名为机器人缓存（Robot Cache）的游戏公司的负责人雅各布森担任“数字世界”的首席执行官，而桑托斯和法戈将担任董事会董事。作为回报，这三位高管将获得数千股 SPAC 股票。短信和财务文件显示。
+
+雅各布森和法戈没有回应置评请求。
+
+2021 年 7 月，辛塔告诉桑托斯，桑托斯将不再是“数字世界”的一部分。 “交易发生了变化……有了新的所有者、新的董事会和管理层，但我会确保我们为你获得股份，”在路透社看到的其中一条消息中，辛塔告诉桑托斯。
+
+雅各布森告知桑托斯，雅各布森的角色已从“数字世界“的 CEO 转变为董事会董事。 ARC 曾与另一家 SPAC 合作过的迈阿密商人奥兰多接替雅各布森担任“数字世界”的CEO。
+
+“现在有人在运行它。我们将看到这一切如何摆脱，因为我还在董事会上，”雅各布森在其中一条短信中说。其中一位消息人士称，桑托斯从未因组建 SPAC 而获得任何 “数字世界”股份或补偿。
+
+奥兰多没有回应置评请求。路透社无法了解，是什么导致了管理团队的变化，以及 ARC 在其中扮演了什么角色。
+
+**评论：很遗憾，有一点译者坚信，任何和中国共产党有瓜葛的公司，一定有“违法“猫腻，被监管部门提出市场只是时间早晚问题。**
+
+素材链接：[reuters.com] [How a Trump deal got a boost from a China-based financier](https://www.reuters.com/business/how-china-based-dealmaker-got-shell-company-trumps-deal-off-ground-2022-02-10/)
 
 * * *
 
-***素材：文戈
-审核：文乐
+*审核：文乐
 校对：花羽
-发布：信心满满***
+发稿：Nuevo唐人*
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-3.jpeg)
  
 
