--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,14 +1,14 @@
 ---
-title: 面对病毒疫苗 中共会采取更邪恶的手段统治中国人
+title: 共产党在达沃斯继续勾兑 拿14亿中国人做代价
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1989315/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1989317/)
 
 文编：东京樱花团/樱花传媒
 视频：东京樱花团/中文小视频组
 
 1月19日，郭文贵先生在GTV大直播指出：
 
-中国人要为爹亲娘亲不如党亲的思想，为自身的懦弱无知付出代价。疫苗后遗症，会让中共穷凶极恶地把引起不安的人干掉，就像以病毒感染为借口，实行封城，大量核酸检测，强行把人们封在家里，香港、天安门大屠杀将再次发生。郭先生建议战友们在家使用测试棒，降低外出感染风险，有效利用青蒿素等解药。
+中共达沃斯论坛过去这些年的所作所为就是他们犯罪的证据。无节制过度印钞、房地产泡沫，中共以中国巨大的市场潜力为筹码，威胁、绑架世界经济，目的就是为了不让中国人起来造反，为了给自己续命，为了控制人类，为了共产党的那几个达沃斯家族在今后的十年二十年再继续奴役中国人民。
 
 *编辑：东京樱花团/墨然
 发布：东京樱花团/平安卿卿*
