--- a/gnews/31.md
+++ b/gnews/31.md
@@ -1,43 +1,39 @@
 ---
-title: 中共国限制化肥出口导致美国食品成本飙升
+title: 漫谈“长津湖战役” (2)
 ---
-`GTV News Talk` [轉載自GNews](https://gnews.org/zh-hans/1989256/)
+`Longbeach` [轉載自GNews](https://gnews.org/zh-hans/1989284/)
 
-作者：纽约香草山金融部—AT
-
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/good-25.png)
+作者: 波士顿五月花 洛城武
 
 
-据国家脉搏报道，自2021 年开始，中共国暂停了化肥出口。中共的理由是：要保证国内供应来养活快速增长的人口。许多中共国化肥公司已经表示至少在2022 年 6 月之前禁止磷酸盐出口。而6月正好是美国农作物的旺盛生长时期，中共这是故意为之吧。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/20220104-04.jpg)
-中共国的尿素氮肥和磷酸盐出口最大，中共的禁令快速推高了化肥价格。自2020 年 9 月以来，美国作物生产所需的所有主要营养素的肥料价格均上涨了 100% 以上，这可能会危及美国农场的长期生存能力，并进一步增加美国消费者的食品成本。 该禁令被密歇根农业商品部的农学副总裁描述为一场“贸易战”。
-
-中共国上一次提高对美化肥供应价格是在举办奥运会的2008年。当时化肥价格上涨了 32% — 100%。这是中共在 2008 年全球金融危机前夕，给全世界经济进一步施加的压力。
-
-参考来源：
-
-[Fertilizer Price Spikes and Chinese Import Reliance Threatens US Agriculture Security.](https://thenationalpulse.com/2022/02/09/fertilizer-price-spikes-and-chinese-import-reliance-threatens-us-agriculture-security/)
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-34.jpg)
-
-编辑/校对/发稿：兰兰
-
-**更多资讯，更多关注**
-
-[**纽约香草山农场****GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场****GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-
-[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场**** YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
 
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/good-26.png)
 
+
+
+“长津湖战役”是世界军事史上最残酷的战役之一，参战的中美双方将士都付出了巨大的伤亡代价，为何双方都宣称自己是获胜的一方，而后又多年的缄默？
+
+北极熊团真的被全歼并取消番号了吗？
+
+美海军陆战队历史上第一位华裔军官李超恩（Chew-een Lee）作战勇敢、身先士卒、两次负伤、两次获奖，被战友们视为英雄和偶像，为何多年来却遭受华人同胞的不断非议？
+
+参加了长津湖战役的迟浩田，当上中共国防部长后，亲自领导指挥13579计划，勾结黑暗势力，研究开发制造新冠病毒等超限生化武器，使全人类都面临灭顶之灾，他到底在长津湖经历了什么？
+
+**漫谈“长津湖战役” (3)**
+
+长津湖概况
+
+长津湖不是湖，是个水库。它是日据时代日本野心勃勃水利发电计划的产物。由发源于长津郡黄草岭的长津江在北流注入鸭绿江的途中，经水电站大坝截流形成。 长津湖地处北朝鲜咸镜南道长津郡的盖马高原，平均海拔约1300米，湖周边都是崇山峻岭、原始森林，人烟十分稀少。 长津湖处于高寒地带，一般10月便会降雪入冬，11月下旬平均气温低至 零下20-30摄氏度。 长津湖西面的狼林山脉将北朝鲜的北部隔绝成了独立的东西两半。 长津湖距离中朝边境的鸭绿江150km左右，离三八线近300多公里。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/0554103f-fabd-4c87-a519-361259b99317-1.jpg)
+**漫谈*“*长津湖战役*”*（*04*） **
+
+**长津湖战役概述**
+
+长津湖战役是*1950*年*11*月下旬至*12*月中旬之间，朝鲜战争时期长津湖地区中美双方王牌部队之间一系列战斗的合称。是役，中共*“*志愿军*”*第九兵团*15*万人将约*1*万*7*千人的美陆战一师和美七师官兵分割包围在湖区周围*7*个大小不一的包围圈中，意图全歼被围美军。经数日苦战，虽有*“*志愿军*”*飞蛾扑火般顽强进攻、阻击、追击，在付出数千人的伤亡代价后，美陆战一师携带所有辎重成建制地突破重围堵，成功抵达兴南港并带着一路跟随的近十万北朝鲜难民乘船撤出了北朝鲜。由于西线美第八集团军的崩溃和后撤，陆战一师已经不可能完成麦克阿瑟将军*“*圣诞攻势*”*计划
+
+*——*与西线美第八集团军汇合，从而彻底消灭朝鲜人民军结束朝鲜战争。但是面对数倍的强敌突然包围袭击，陆战一师能以较小的代价予敌人以重创后全身而退，其所表现出来的英勇顽强团结合作的战斗精神和战斗意志，仍然受到了美军的高度赞扬。战后陆战一师全师官兵获*”*总统荣誉勋章*“*，参战官兵共获*17*枚*”*国会荣誉勋章*”*。以阵亡人数的比例来讲，颁发的勋章数远超太平洋战争时期最血腥的硫磺岛战役。美军认为长津湖战役的艰苦困难程度是超出想象的，陆战一师能全身而退就是巨大的胜利！*“*志愿军*”*九兵团付出了巨大的伤亡代价，没能完成毛泽东战前逐次全歼陆战一师、美七师等部的作战计划，但是因随后东面战场美第十军全部撤回到*38*线以南的战略结果，毛泽东还是对九兵团提出了表扬和安慰，特许九兵团不用轮换回国并留住当地善后，补充人员补给给养休养生息。志愿军总部表彰了参战的大批将士，授予下碣隅里战斗中表现勇敢的杨根思为*“*特级战斗英雄*”*称号（整个朝鲜战争期间，志愿军只授予了两个*“*特级战斗英雄*”*，另一个是上甘岭的黄继光。），同时大肆宣扬全歼北极熊团的虚假战绩，并将美第十军主动撤回*38*线以南鼓吹为自己的战果。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/06461eb1-1625-4d9d-ae98-a84c371497b2-2-1.jpg)
+编辑/封面/发布: 一口大锅闹革命
 
  
 
