--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,53 +1,55 @@
 ---
-title: 新中国联邦的春节直播七哥必须在现场伴奏、现场唱新歌
+title: 一千项不同研究列表显示COVID疫苗不良事件的证据
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1989486/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1989509/)
 
-G-TV视频链接：[https://gtv.org/video/id=620350ab585ecc15d73f47de](https://gtv.org/video/id=620350ab585ecc15d73f47de)
+**翻译： Jenny Ball**
 
-**郭文贵先生：**我昨天就日本的朋友给我发说，郭先生你要唱这个北国之春啊，她说你嗓子一定会唱得非常好，这个日本是个女性是个女性。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/tempsnip一千项不同研究列表显示COVID疫苗不良事件的证据.png)图片来源：thegatewaypundit.com
 
-这个这是唯一的，就是这么多年过去就跟她在唱卡拉ok，在日本卡拉ok是最早的嘛，就是我跟她家人这卡，她觉得我唱的好。就是，我忘了，原来就是所有人说我唱歌不好，就她这来唱的好。
+您是否厌倦了与自由派朋友和家人就 COVID-19 疫苗的安全性进行辩论？
 
-她说你一定要唱，所以说呢，我觉得咱们今年的春节一定要唱，因为全世界就咱家日子过得最好，不是无限美好，不是，比无限美好还要好，是吧？
+“澳大利亚知情选择”（Informed Choice Australia）列出了提交给各种医学期刊的“同行评审”医学论文清单，显示了 COVID-19 疫苗中不良事件的广泛证据。
 
-还唯咱家独好，你说你不唱歌咋行呢？是吧？特别是国内的冬奥会，马上就要开了2月4号，你想想在上海的，就是你老家的小飞象，在上海的某几个人是参与奥运会组织的，说七哥你一定要唱几首歌。
+该列表仅包括截至 1 月 20 日有关 COVID-19 疫苗不良反应的研究，例如心肌炎、血栓形成、血小板减少症、血管炎、心脏、贝尔氏麻痹症、免疫介导疾病等。
 
-在过年的时候，他说所有的在中国今年的春节，可以说大家最想看的就是新中国联邦直播，我必须得唱啊。所以说跟大家透露一下，七哥现场唱，现场唱、现场音乐、新歌，就这么牛就这么牛了啊。
+阅读以下前 20 项研究：
 
-大家记住，你看今天村长没来，他就没有享受到这种盛宴，那我这叫：亭亭白桦，欧依噶物之（日语音译）。就这调就出来了，叩兀自卡密（日语音译），哇塞，就这个调就出来了。
-
-叩兀自卡密（日语音译）啥歌知道吧？都是习近平喜欢的歌。所以今年春节，七哥叫歌死中共，歌死中共。你们准备好，我提前，到时候唱之前，我都给你们提醒，第一声音放大点，第二把耳机戴上，尽量听不着，因为我唱的声音会大。会的，谢谢。
-
-字幕来源：[2022年1月29日香草山农场年会直播全文字版](https://gnews.org/zh-hans/1938961/)
-
-编辑整理：Jacques；
-
-字幕文件制作：知津；
-
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+1. SARS-CoV-2 mRNA 疫苗接种后的心肌炎，病例系列：[https://www.sciencedirect.com/science/article/pii/S2666602221000409](https://www.sciencedirect.com/science/article/pii/S2666602221000409)
+2. 美军成员接种 COVID-19 mRNA 疫苗后的心肌炎。这篇文章报道了“23名男性患者，包括22名既往健康的军人，在接种疫苗后4天内发现心肌炎”：[https://jamanetwork.com/journals/jamacardiology/fullarticle/2781601](https://jamanetwork.com/journals/jamacardiology/fullarticle/2781601)
+3. 在儿童病例系列中，心肌炎与 BNT162b2 信使 RNA COVID-19 疫苗的关联: [https://pubmed.ncbi.nlm.nih.gov/34374740/](https://pubmed.ncbi.nlm.nih.gov/34374740/)
+4. 辉瑞-生物科技 COVID-19 疫苗接种后 7 名青少年出现急性症状性心肌炎: [https://pediatrics.aappublications.org/content/early/2021/06/04/peds.2021-052478](https://pediatrics.aappublications.org/content/early/2021/06/04/peds.2021-052478)
+5. 接种 COVID-19 mRNA 后的心肌炎和心包炎：护理人员的实际考虑: [https://www.sciencedirect.com/science/article/pii/S0828282X21006243](https://www.sciencedirect.com/science/article/pii/S0828282X21006243)
+6. COVID-19 疫苗接种后的心肌炎、心包炎和心肌病: [https://www.sciencedirect.com/science/article/pii/S1443950621011562](https://www.sciencedirect.com/science/article/pii/S1443950621011562)
+7. COVID-19 mRNA 疫苗引起的心肌炎: [https://www.ahajournals.org/doi/pdf/10.1161/CIRCULATIONAHA.121.056135](https://www.ahajournals.org/doi/pdf/10.1161/CIRCULATIONAHA.121.056135)
+8. COVID-19 疫苗接种后的心肌炎和心包炎: [https://jamanetwork.com/journals/jama/fullarticle/2782900](https://jamanetwork.com/journals/jama/fullarticle/2782900)
+9. 心肌炎与 COVID-19 疫苗接种暂时相关: [https://www.ahajournals.org/doi/pdf/10.1161/CIRCULATIONAHA.121.055891](https://www.ahajournals.org/doi/pdf/10.1161/CIRCULATIONAHA.121.055891).
+10. 青少年心肌炎相关的 COVID-19 疫苗接种: [https://pediatrics.aappublications.org/content/pediatrics/early/2021/08/12/peds.2021-053427.full.pdf](https://pediatrics.aappublications.org/content/pediatrics/early/2021/08/12/peds.2021-053427.full.pdf)
+11. 接种针对 COVID-19 的 BNT162b2 疫苗后的急性心肌炎: [https://pubmed.ncbi.nlm.nih.gov/33994339/](https://pubmed.ncbi.nlm.nih.gov/33994339/)
+12. COVID-19 疫苗 Ad26.COV2.S 与急性心肌炎之间的时间关联：病例报告和文献: [https://www.sciencedirect.com/science/article/pii/S1553838921005789](https://www.sciencedirect.com/science/article/pii/S1553838921005789)
+13. COVID-19 疫苗诱发的心肌炎：一例文献复习报告: [https://www.sciencedirect.com/science/article/pii/S1871402121002253](https://www.sciencedirect.com/science/article/pii/S1871402121002253)
+14. COVID-19 疫苗与心肌炎之间的潜在关联：临床和 CMR 发现: [https://www.sciencedirect.com/science/article/pii/S1936878X2100485X](https://www.sciencedirect.com/science/article/pii/S1936878X2100485X)
+15. 男性青少年急性心肌炎复发与接受 2019 年冠状病毒 mRNA 疾病疫苗 (COVID-19) 相关: [https://www.sciencedirect.com/science/article/pii/S002234762100617X](https://www.sciencedirect.com/science/article/pii/S002234762100617X)
+16. 两名患者的暴发性心肌炎和全身性过度炎症与 BNT162b2 COVID-19 mRNA 疫苗接种在时间上相关: [https://www.sciencedirect.com/science/article/pii/S0167527321012286](https://www.sciencedirect.com/science/article/pii/S0167527321012286).
+17. 接种 BNT162b2 疫苗后的急性心肌炎: [https://www.sciencedirect.com/science/article/pii/S2214250921001530](https://www.sciencedirect.com/science/article/pii/S2214250921001530)
+18. 接种 COVID-19 Ad26.COV2.S 病毒载体后的淋巴组织细胞性心肌炎: [https://www.sciencedirect.com/science/article/pii/S2352906721001573](https://www.sciencedirect.com/science/article/pii/S2352906721001573)
+19. 健康男性接种 BNT162b2 后心肌炎: [https://www.sciencedirect.com/science/article/pii/S0735675721005362](https://www.sciencedirect.com/science/article/pii/S0735675721005362)
+20. 曾感染过 SARS-CoV-2 的健康男性接种 Comirnaty（辉瑞共同体）疫苗后的急性心肌炎: [https://www.sciencedirect.com/science/article/pii/S1930043321005549](https://www.sciencedirect.com/science/article/pii/S1930043321005549)
 
 
+您可以在此处[here](https://www.informedchoiceaustralia.com/post/1000-peer-reviewed-studies-questioning-covid-19-vaccine-safety)和下方查看和下载完整列表：
+
+**新闻来源**：[thegatewaypundit.com][HERE’S THE LIST: 1,000 Different Studies Show Extensive Evidence of COVID-19 Vaccines Adverse Events](https://www.thegatewaypundit.com/2022/02/list-1000-different-studies-show-extensive-evidence-covid-19-vaccines-adverse-events/?utm_source=Email&amp;utm_medium=the-gateway-pundit&amp;utm_campaign=dailypm&amp;utm_content=daily)
+
+* * *
+
+***审核：文乐
+校对：花羽
+发布：信心满满***
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-3.jpeg)
+
+ 
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
 
