--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: PAG案子一定要找到真相
+title: 每分每秒的直播都是在跟邪恶对抗
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1991063/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1991102/)
 
 台灣寶島農場
 
