--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,7 +1,7 @@
 ---
-title: 中共在冬奥委会上的各种违规、造假
+title: 不当使用公权力
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1991008/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1991142/)
 
 台灣寶島農場
 
