--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,7 +1,7 @@
 ---
-title: 关于PAG 官司
+title: 不可阻挡的一场疫苗政治革命
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1992100/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1992126/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
