--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,38 +1,51 @@
 ---
-title: 众筹平台GiveSendGo意欲无视安大略省的干预命令，坚持向卡车司机转送捐款。
+title: 郭先生直播厅-七哥谈“红色”
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1992141/)
+`MOS Designer香草山设计部` [轉載自GNews](https://gnews.org/zh-hans/1992165/)
 
-翻译：不要代表我Kari
-校对：小熊
-
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/6-10.png)图片来源：雅典娜设计组
+设计者：纽约香草山设计部 — 战友时光
 
 
-为自由车队卡车司机发起众筹的基督教众筹网站表示，他们将无视安大略省法院的命令，绝不冻结众筹，绝不停止向抗议者转送捐款。
 
-安大略省道格福特Doug Ford政府为冻结“自由车队 “的资金采取了法律行动。随后，法院向众筹平台GiveSendGo下达了停止向抗议运动组织者转赠捐款的命令。数小时后，该平台就此事发表了以上声明。
+![](https://assets.gnews.org/wp-content/uploads/2021/12/logo-s2.png)
 
-GiveSendGo在社交媒体上的一份声明中写道：”知道吗？加拿大政府无权管控我们GiveSendGo众筹的资金”。
 
-该公司还声明：”GiveSendGo公司众筹的每一项资金全部都直接赠予众筹受益人，其中最重要的受益人就是‘自由车队’。“
 
-正如之前所述，福特政府采取了法律行动来冻结这些资金，随后安大略省高级法院对此做出了裁决。
 
-该声明表示：“今天，总检察长已向高级法院提出申请，要求依据《刑法》第490.8条发布命令：禁止任何人以任何方式处置’自由车队2022 ‘和‘ 认领卡车 ’通过GiveSendGo在线众筹平台众筹而来的捐款。”
 
-“今天下午，该命令已经发布。它对拥有或控制这些捐款的任何一方均具约束力。”
 
-原文链接：[https://thepostmillennial.com/givesendgo-ignore-ontario-court](https://thepostmillennial.com/givesendgo-ignore-ontario-court)
 
-*发布：tianzhihuan*
 
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-20220210__1.png)红色给我们带来力量，共产党霸占了红色，抢夺了我们的自由，让我们失去了未来、失去了家人，我们只有打开“甜蜜蜜运动”这把钥匙，只有团结、合作，才能消灭CCP。 
+—2022年1月31日郭文贵先生GTV/GETTR直播![](https://assets.gnews.org/wp-content/uploads/2022/02/2-20220210-04.png)Red color brings energy. But by using the red color for its flag, the CCP has robbed us of our freedom, leaving us with broken families and no future. In order to take down the CCP, we have to unite and collaborate with others, we have to make the best of the “Sweet as Honey” campaign. 
+– Miles Guo, GTV/GETTR livecast on Jan. 31, 2022![](https://assets.gnews.org/wp-content/uploads/2022/02/3-20220210-02.png)红色不能让共产党垄断，就像中国的权利不能被共产党垄断一样。幸福和健康也不能共产党说了算，像“恭喜发财”得党先强大。我们的红是铲除邪恶的红，而不是共产党杀人后血染的红旗。 
+—2022年1月31日郭文贵先生GTV/GETTR直播![](https://assets.gnews.org/wp-content/uploads/2022/02/4-20220210-05.png)We cannot allow the CCP to monopolize the red color, the same reason we cannot allow them to monopolize all the power and rights. Neither should we allow them to decide on who gets to be happy and healthy, while the Party itself keeps accumulating wealth and power. The red color of our new flag symbolizes eradicating the evil, not the blood-stained red of the CCP flag, a result of many massacres. 
+– Miles Guo, GTV/GETTR livecast on Jan. 31, 2022
+
+
+**编辑/发稿：小鹿**
+
+
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/2-124.jpg)
+
+**更多资讯，更多关注**
+
+[**纽约香草山农场****GTV****–****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场****GTV-MOS TALK****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场****YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+
+![](https://assets.gnews.org/wp-content/uploads/2021/12/logo-s2.png)
+
+
+
+
 
  
 
