--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,37 +1,45 @@
 ---
-title: 乌克兰新闻 &#8211; 现场直播：由于担心俄罗斯入侵，英国人被告知立即离开该国
+title: 文•贵天成——文贵先生谈“躺平币”（五）
 ---
-`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1992048/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1992114/)
 
-**编译：沉默老歌**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/968E6266-D575-4746-A49F-605FA851C055.png)图片来源：[https://www.independent.co.uk](https://www.independent.co.uk/)
+整理：BENJ1
+编辑：守望黎明
+
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/7-14.png)图片来源：雅典娜农场技术组
 
 
-由于担心俄罗斯军队的入侵，英国人被告知立即离开乌克兰。
+**2021****年****12****月****10****日郭文贵先生直播**
 
-外交部在周五晚上更新了建议，告诉英国国民“在商业手段仍然可用的情况下立即离开”。
+以后杨洁篪、王毅出来到各国开会，咱们就把几辆棺材车往那儿一停，告诉别人说，就是这些人杀了你们那么多人。你放心，你们尽管干去！咱大家在这儿抽着烟，看着人家外国人跟他们算账。就像那僵尸大片一样，一堆僵尸“嗷”的一声，就都扑过去了。这样的一刻一定会发生的。全世界被疫苗祸害的人以及病毒灾难的死亡者家属，就是我们未来最好的战友。我们给他带去温暖、带去喜币、带去躺平币、带去吃的，再告诉他们真相——那些人就是杀害你家人的人。
 
-这一警告是在鲍里斯·约翰逊在与包括美国总统乔·拜登在内的世界领导人通话时表达了对欧洲安全的担忧之后发出的。
+**郭文贵先生****2021****年****12****月****12****日直播**
 
-此前，英国国防部长本·华莱士警告称，在与俄罗斯外长绍伊古进行“坦率”讨论后，俄罗斯仍可能在短时间内发动入侵。
+卡丽熙：嗯，我想提一个问题，是战友们大家都关心的。大家想问一下七哥：我们未来的躺平币会和GNEWS和GTV还有盖特挂钩，那么有没有跟其它的平台挂钩的这种可能性呢？还有一个就是我们未来的躺平币会用哪一种方式来支付或者兑现？比如说是不是要和我们的HCoin、HDollar挂钩以后再去支付呐？这就是战友们关心的问题，谢谢七哥！
 
-华莱士先生说，俄罗斯军队的定位使他们有能力“随时”入侵邻国，但他说他从俄罗斯政府那里听说它“无意”入侵乌克兰。
+郭文贵先生：战友关心的问题就是我要解决的问题。我的答案现在告诉你们：所有的躺平币，未来支付系统一定会跟HCoin还有喜美元会挂钩的，但是它自己本身是独立的……记住，躺平币的发展、它的技术百分之百都是独立的，而且用的是公链，它可以跟任何币制进行交换。
 
-俄罗斯已经在乌克兰附近集结了超过10万军队，本周它在邻国白俄罗斯发起了联合军事演习，并在黑海进行了海军演习。
+关键躺平币它是中心化、可支付的，而且和马上推出的HPay一样，它是可以流通的，躺币未来一定是这样的结果。但是它和喜联储没有任何关系，这样跟谁都可以换。
 
-**原文链接：**
+所以有人说：“我们要和你们未来的躺平币做交换，我可以先给你发上100亿的这个种币。” 我说：“一个币都不要你的，躺平币是有成本的，你们的币有什么成本？” 所以战友们，你不知道你的这个福利币有多牛，福利币是太牛了！
 
-[https://www.independent.co.uk/news/world/europe/ukraine-russia-news-putin-truss-biden-b2012758.html](https://www.independent.co.uk/news/world/europe/ukraine-russia-news-putin-truss-biden-b2012758.html)
+往期回顾：
+[文·贵天成——文贵先生谈“躺平币”（一）](https://gnews.org/zh-hans/1952017/)
+[文·贵天成——文贵先生谈“躺平币”（二）](https://gnews.org/zh-hans/1952041/)
+[文·贵天成——文贵先生谈“躺平币”（三）](https://gnews.org/zh-hans/1952017/)
+[文·贵天成——文贵先生谈“躺平币”（四）](https://gnews.org/zh-hans/1952041/)
 
-**编辑：LILY**
+###  
 
-**发布：歪桑**
+### 发布：
 
-20220211
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
-更多资讯请关注：
-[温哥华圆成农场GTV频道](https://gtv.org/user/5f30d3ff91d4727c6a88395d)｜[温哥华圆成农场官方盖特](https://www.gettr.com/user/himalayavang)｜[温哥华圆成农场Discord服务器](https://discord.gg/8RMGcwT8)
-![](https://assets.gnews.org/wp-content/uploads/2022/02/農場文宣-3-4.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
