--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,7 +1,7 @@
 ---
-title: 相由心生
+title: 西方看华人就是蓝金黄和骗
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1992152/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1992171/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
