--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,7 +1,7 @@
 ---
-title: 冬奥会事儿多了
+title: 相由心生
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1992115/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1992152/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
