--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,7 +1,7 @@
 ---
-title: 不可阻挡的一场疫苗政治革命
+title: 谷爱凌今天有多出名，未来就有多惨
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1992126/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1992161/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
