--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,41 +1,35 @@
 ---
-title: 文•贵天成——文贵先生谈“躺平币”（五）
+title: 众筹平台GiveSendGo意欲无视安大略省的干预命令，坚持向卡车司机转送捐款。
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1992114/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1992141/)
 
-整理：BENJ1
-编辑：守望黎明
+翻译：不要代表我Kari
+校对：小熊
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/7-14.png)图片来源：雅典娜农场技术组
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/6-10.png)图片来源：雅典娜设计组
 
 
-**2021****年****12****月****10****日郭文贵先生直播**
+为自由车队卡车司机发起众筹的基督教众筹网站表示，他们将无视安大略省法院的命令，绝不冻结众筹，绝不停止向抗议者转送捐款。
 
-以后杨洁篪、王毅出来到各国开会，咱们就把几辆棺材车往那儿一停，告诉别人说，就是这些人杀了你们那么多人。你放心，你们尽管干去！咱大家在这儿抽着烟，看着人家外国人跟他们算账。就像那僵尸大片一样，一堆僵尸“嗷”的一声，就都扑过去了。这样的一刻一定会发生的。全世界被疫苗祸害的人以及病毒灾难的死亡者家属，就是我们未来最好的战友。我们给他带去温暖、带去喜币、带去躺平币、带去吃的，再告诉他们真相——那些人就是杀害你家人的人。
+安大略省道格福特Doug Ford政府为冻结“自由车队 “的资金采取了法律行动。随后，法院向众筹平台GiveSendGo下达了停止向抗议运动组织者转赠捐款的命令。数小时后，该平台就此事发表了以上声明。
 
-**郭文贵先生****2021****年****12****月****12****日直播**
+GiveSendGo在社交媒体上的一份声明中写道：”知道吗？加拿大政府无权管控我们GiveSendGo众筹的资金”。
 
-卡丽熙：嗯，我想提一个问题，是战友们大家都关心的。大家想问一下七哥：我们未来的躺平币会和GNEWS和GTV还有盖特挂钩，那么有没有跟其它的平台挂钩的这种可能性呢？还有一个就是我们未来的躺平币会用哪一种方式来支付或者兑现？比如说是不是要和我们的HCoin、HDollar挂钩以后再去支付呐？这就是战友们关心的问题，谢谢七哥！
+该公司还声明：”GiveSendGo公司众筹的每一项资金全部都直接赠予众筹受益人，其中最重要的受益人就是‘自由车队’。“
 
-郭文贵先生：战友关心的问题就是我要解决的问题。我的答案现在告诉你们：所有的躺平币，未来支付系统一定会跟HCoin还有喜美元会挂钩的，但是它自己本身是独立的……记住，躺平币的发展、它的技术百分之百都是独立的，而且用的是公链，它可以跟任何币制进行交换。
+正如之前所述，福特政府采取了法律行动来冻结这些资金，随后安大略省高级法院对此做出了裁决。
 
-关键躺平币它是中心化、可支付的，而且和马上推出的HPay一样，它是可以流通的，躺币未来一定是这样的结果。但是它和喜联储没有任何关系，这样跟谁都可以换。
+该声明表示：“今天，总检察长已向高级法院提出申请，要求依据《刑法》第490.8条发布命令：禁止任何人以任何方式处置’自由车队2022 ‘和‘ 认领卡车 ’通过GiveSendGo在线众筹平台众筹而来的捐款。”
 
-所以有人说：“我们要和你们未来的躺平币做交换，我可以先给你发上100亿的这个种币。” 我说：“一个币都不要你的，躺平币是有成本的，你们的币有什么成本？” 所以战友们，你不知道你的这个福利币有多牛，福利币是太牛了！
+“今天下午，该命令已经发布。它对拥有或控制这些捐款的任何一方均具约束力。”
 
-往期回顾：
-[文·贵天成——文贵先生谈“躺平币”（一）](https://gnews.org/zh-hans/1952017/)
-[文·贵天成——文贵先生谈“躺平币”（二）](https://gnews.org/zh-hans/1952041/)
-[文·贵天成——文贵先生谈“躺平币”（三）](https://gnews.org/zh-hans/1952017/)
-[文·贵天成——文贵先生谈“躺平币”（四）](https://gnews.org/zh-hans/1952041/)
+原文链接：[https://thepostmillennial.com/givesendgo-ignore-ontario-court](https://thepostmillennial.com/givesendgo-ignore-ontario-court)
 
-###  
+*发布：tianzhihuan*
 
-### 发布：
-
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
 [澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
 [澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
 [澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
