--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,22 +1,37 @@
 ---
-title: 【G时新闻】阿尔伯塔成为加拿大第二个取消疫苗护照的省
+title: 乌克兰新闻 &#8211; 现场直播：由于担心俄罗斯入侵，英国人被告知立即离开该国
 ---
-`G-时新闻` [轉載自GNews](https://gnews.org/zh-hans/1992019/)
+`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1992048/)
 
-加拿大温哥华扬帆农场；播报：yuyu；视频制作: Geacelshan
+**编译：沉默老歌**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/968E6266-D575-4746-A49F-605FA851C055.png)图片来源：[https://www.independent.co.uk](https://www.independent.co.uk/)
 
-据加拿大媒体后千禧年2月8日报导，继萨省宣布于2月14日停止疫苗护照和在本月底取消配戴口罩规定的数小时后，阿尔伯塔省宣布成为加拿大第二个结束疫苗护照的省份。
 
-报导称，阿省疫情内阁委员会当天批准了一项逐步取消疫情限制的谨慎计划。以废除疫苗护照则首当其冲，并试图以此让该省居民摆脱疫情的困扰，尽快恢复正常的生活。
+由于担心俄罗斯军队的入侵，英国人被告知立即离开乌克兰。
 
-据悉，该计划于2月9日首先废除疫苗护照及限制豁免规定。2月14日将在所有公共场合取消对12岁及以下儿童和所有在校学生配戴口罩的要求。
+外交部在周五晚上更新了建议，告诉英国国民“在商业手段仍然可用的情况下立即离开”。
 
-并将于3月1日在疫情趋缓的条件下，取消所有室内配戴口罩的要求，之后将最终停止包括强制隔离规定在内的所有防疫措施。
+这一警告是在鲍里斯·约翰逊在与包括美国总统乔·拜登在内的世界领导人通话时表达了对欧洲安全的担忧之后发出的。
 
-听写/翻译：LuLu1312
-字幕：圣骑士
-编辑/上传：圣骑士
+此前，英国国防部长本·华莱士警告称，在与俄罗斯外长绍伊古进行“坦率”讨论后，俄罗斯仍可能在短时间内发动入侵。
 
+华莱士先生说，俄罗斯军队的定位使他们有能力“随时”入侵邻国，但他说他从俄罗斯政府那里听说它“无意”入侵乌克兰。
+
+俄罗斯已经在乌克兰附近集结了超过10万军队，本周它在邻国白俄罗斯发起了联合军事演习，并在黑海进行了海军演习。
+
+**原文链接：**
+
+[https://www.independent.co.uk/news/world/europe/ukraine-russia-news-putin-truss-biden-b2012758.html](https://www.independent.co.uk/news/world/europe/ukraine-russia-news-putin-truss-biden-b2012758.html)
+
+**编辑：LILY**
+
+**发布：歪桑**
+
+20220211
+
+更多资讯请关注：
+[温哥华圆成农场GTV频道](https://gtv.org/user/5f30d3ff91d4727c6a88395d)｜[温哥华圆成农场官方盖特](https://www.gettr.com/user/himalayavang)｜[温哥华圆成农场Discord服务器](https://discord.gg/8RMGcwT8)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/農場文宣-3-4.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
