--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,16 +1,21 @@
 ---
-title: 郭文贵先生将移居日本和英国 全面加速灭共
+title: 【G时新闻】阿尔伯塔成为加拿大第二个取消疫苗护照的省
 ---
-`焦點20分` [轉載自GNews](https://gnews.org/zh-hans/1991955/)
+`G-时新闻` [轉載自GNews](https://gnews.org/zh-hans/1992019/)
 
-郭先生说，他一生尝尽酸甜苦辣，唯一的目标就是灭掉共产党，要找回中国人失去了70年的财富、尊严和公正。
+加拿大温哥华扬帆农场；播报：yuyu；视频制作: Geacelshan
 
-郭先生公布之后很可能移居日本和英国。去伦敦就是为了UBS的案子，而日本是对中共作战，亚洲唯一安全的地方。郭先生会更加全身心的灭共，让中国每个角落都可以直接听到爆料革命的声音。
+据加拿大媒体后千禧年2月8日报导，继萨省宣布于2月14日停止疫苗护照和在本月底取消配戴口罩规定的数小时后，阿尔伯塔省宣布成为加拿大第二个结束疫苗护照的省份。
 
-视频来源: 20220209—郭先生大直播
-视频制作: 文星光，梦田
-文案:文星光
-上传: 零点
+报导称，阿省疫情内阁委员会当天批准了一项逐步取消疫情限制的谨慎计划。以废除疫苗护照则首当其冲，并试图以此让该省居民摆脱疫情的困扰，尽快恢复正常的生活。
+
+据悉，该计划于2月9日首先废除疫苗护照及限制豁免规定。2月14日将在所有公共场合取消对12岁及以下儿童和所有在校学生配戴口罩的要求。
+
+并将于3月1日在疫情趋缓的条件下，取消所有室内配戴口罩的要求，之后将最终停止包括强制隔离规定在内的所有防疫措施。
+
+听写/翻译：LuLu1312
+字幕：圣骑士
+编辑/上传：圣骑士
 
  
 
