--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,62 +1,43 @@
 ---
-title: 2022年2月11日文贵先生直播摘要及音频—银河系农场
+title: 美国中共病毒确诊逼近8000万凸显灭共大计迫在眉睫
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1992206/)
+`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1992241/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/snapshot_副本-3.jpg)
-盖特连接：[2022年2月11日 文贵大直播：冬奥会爆出“美”谷爱凌；黑操作假裁判破坏规则；共产党蓝金黄无孔不入；感染下降疫苗政策在变](https://gettr.com/streaming/ptvq9q8759)
+**【国内新闻短评】**
 
-G-TV连接：[2022年2月11日 文贵大直播：冬奥会爆出“美”谷爱凌；黑操作假裁判破坏规则；共产党蓝金黄无孔不入；感染下降疫苗政策在变](https://gtv.org/video/id=62065c00a1fe5e57a426b9e1)
+中国新闻网2022年2月11日报道：美国累计确诊病例数占全球19%，非洲已有1000多万新冠患者痊愈
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1152-e1644621564184.png)图片来源：网络![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1153.png)
+**短评：**
 
-1、谷爱凌对华人亚洲人的伤害几百亿都无法挽回；
+中共媒体中新社北京2月11日电，综合消息：据美国霍普金斯大学最新统计数据显示，截至北京时间11日8时21分，全球累计中共病毒确诊病例4.05亿例，累计死亡病例578万例，美国累计确诊7743万例，累计死亡91.5万例。
 
-2、排华：一个美国面包店老板愤怒地对中国人说：你们中国人就不应该待在这里，回你们的中国去；
+美国人口总共才3.3亿，累计中共病毒确诊病例已经快突破8000万乃至一个亿了，将近三分之一或四分之一的人口已经感染中共病毒，平均每三四个人中就有一个人感染，何其恐怖。这才短短两年的时间，中共的放毒和强打毒疫苗就把美国搞成这样，如果保持这个速度增长，美利坚合众国慢的话恐怕要六七年，快的话恐怕再两三年就要被中共灭国。中共邪恶嚣张至此，我们不知道美国到底在干什么，为什么还不苏醒。
 
-3、七哥去日本和英国：必须在美国政府确认安全和同意的情况下，才可以去；最快也是6月份以后的事了；
+早在2017年2018年新中国联邦爆料革命的郭文贵先生就向全世界视频直播揭露了中共妄想利用蓝金黄与超限战搞弱美国、搞乱美国、搞死美国的险恶用心。可悲的是那时全世界并不相信并不当回事，更可悲的是全美全球现在感染死亡这么多人竟然很多人还不当回事。中共的蓝金黄与超限战在这两年的全球危机中展现得炉火纯青淋漓尽致；现在回看新中国联邦爆料革命的郭文贵先生，当年向全世界展示的“身披中共国旗手拿《毛主席语录》的自由女神像”的场景令人历历在目不寒而栗。
 
-4、冬奥会开幕式现场没人，而中共拍出来的照片全是人，可见中共国的假到了灾难的级别；
+该文说到哥斯达黎加总统夫妇也已确诊中共病毒，虽然总统打过两针疫苗；加拿大总督夫妇已确诊中共病毒，就连已经接种过三针疫苗的加拿大总理特鲁多与自家的孩子检测结果都为阳性；已接种过三针疫苗的英国王储查尔斯的检测结果也是阳性，而且是第二次感染中共病毒。如此种种完全说明了中共毒疫苗根本没用，不仅没用，反而有毒，有要命的剧毒。就连人口小国韩国的日增确诊人数都突破了5万。那些都像你我一样一个个鲜活的生命，每个生命的背后都是一个无辜的家庭。
 
-5、锁链女的父亲和叔叔李爱中，是共产党员，锁链女事件引起共产党员内部愤怒，加快共产党内部瓦解；
+悲哀呀，这个世界，连病毒来源都不敢追溯，就推出了所谓神效的毒疫苗，而且要强制打到全球每个人身上。世界就任由中共这样在全球进行反人类大屠杀，史无前例地如此大规模屠杀所有种族所有人类。就在疫苗明明有毒的情况下，还要三针四针五针N针地强制人们打毒疫苗，直到打死为止。中共明明自己放毒，还邪恶地歪曲事实说，“美国是因为不注重戴口罩才感染如此严重的”；其实，再怎么戴口罩也经不住中共这样放毒。而在中共国，别说大城市，就连三四线小城市的人大多都不戴口罩。
 
-6、共产党威胁香港十大法官之一，英国法官判查封文贵先生上百亿资产；
+中共国内看似疫情控制得最好，实际不过是因为严重的数据造假与掩盖，以及中共并没有像在美国及其他国家那样严重地在国内释放病毒，而并不是戴口罩的问题。如果哪天中共要在国内这样释放病毒，那国内的伤亡人数起码会比美国严重。如此迅速的感染速度，不论是美国还是哪个国家都是扛不住的。地球人，该觉醒了；除了灭共，别无选择。
 
-7、文贵先生1.34亿案子：不能因为荒唐的判决，而不相信美国的法律。美国的司法制度对所有人都是公平的，文贵先生立刻开启了上诉；
+文章观点仅代表作者，与Gnews 平台无关
 
-8、非洲正在政变，共产党在非洲的钱都会打水漂；
+新闻链接：[https://baijiahao.baidu.com/s?id=1724466377825504628&wfr=spider&for=pc&searchword=%E7%BE%8E%E5%9B%BD%E7%B4%AF%E8%AE%A1%E7%A1%AE%E8%AF%8A%E7%97%85%E4%BE%8B](https://baijiahao.baidu.com/s?id=1724466377825504628&amp;wfr=spider&amp;for=pc&amp;searchword=%E7%BE%8E%E5%9B%BD%E7%B4%AF%E8%AE%A1%E7%A1%AE%E8%AF%8A%E7%97%85%E4%BE%8B)
 
-9、一个普京超级相信的人把周围疫苗死亡的事报告给普京，普京微微一笑，说明普京早就知道疫苗危害；
+素材：洛杉矶盘古农场 — 归去来兮
 
-10、供应链断裂、共产党对香港的威胁，香港还会很坏；
+评论：洛杉矶盘古农场 — 归去来兮
 
-11、你没有见过共产党蓝金黄，13579计划，灭白计划，达沃斯党喝酒玩小女孩肮脏的德行，你不会知道邪恶的肮脏、爆料革命的伟大；
+编审：洛杉矶盘古农场 — 心照
 
-12、你没有见过防化兵实验室，装甲兵学院，武汉P4实验室，你不会知道解放军是多么的烂；
+发布：洛杉矶盘古农场 — 子萍
 
-13、共产主义就是最大的资本主义，完全垄断后的结果；
 
-**注：大直播音频正在制作和上传中，敬请关注——**
+[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
+洛杉矶盘古农场欢迎您加入:(或点击上方图片）
 
-编辑整理：文俊；
-
-发布：黎明之前
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们——**[**日本银河系农场Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
 
  
 
