--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥都在运筹的情况下行动
+title: 不收捐款，可以有偿服务
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1992203/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1992230/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
