--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,19 +1,27 @@
 ---
-title: 美国在用国旗保护七哥安全
+title: 一条来自卡尔加里警员的信息
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1992257/)
+`加拿大温哥华扬帆农场视频组` [轉載自GNews](https://gnews.org/zh-hans/1992350/)
 
-#### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
-视频定位：BENJ1；WEI
+#### 加拿大温哥华扬帆农场 视频组
 
-*发布：陶子*
+素材：文倩
+翻译：Kent
+字幕：杰尼龟
 
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter：HimalayaAthena](https://twitter.com/HimalayaAthena1)
-[澳大利亚墨尔本农场Gettr：himalayaathena](http://gettr.com/user/himalayaathena)
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](http://xn--discord-cu4k86skkas5c126a4lez1be9fmukp34csc6a3e9m/)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](http://gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+大家好我叫尼克，目前是卡尔加里警局的一名警官，我在卡尔加里工作了10年多一点，在此之前我在加拿大皇家骑警队工作了大约6年，我想读一读我今天晚上写的东西：
+
+今天对我来说是一个艰难的日子，有些东西从我身上被夺走，我知道那再也无法找回，看着渥太华警局的成员从和平的抗议者手中夺走燃料，夺走了我长期持有的一个信念，我认为这是一个永恒的真理，那就是当人们真正需要的时候，警察会在那里保护和帮助人们。
+
+我无法再像今天这样看待我的工作了，我看到的是警察像受雇的打手一样做着政治家的肮脏工作，这违背了我选择这个吃力不讨好的、困难的、带来创伤的、工作时间糟糕的职业的所有原因。
+
+我进入执法部门的原因是为了帮助人们，无论这句话有多天真，这都是我的真实想法，随着岁月的流逝，我会是第一个承认自己变得迟钝的人，但我从未让任何事情损害我的诚信，我总是以‘头版头条’原则测试自己，那就是：如果我做的事情将要出现在报纸的头版上，或成为年轻观众看到的新闻报道，我自己能否接受。
+
+做正确的事情，即使没有人看，即使它是困难的，也总是正确的决定。在渥太华发生的事情，警察明显受到了政治的影响，对和平的抗议者施加政治意愿，只为了潜在的政治利益，这在很多方面是非常错误的。
+
+‘我只是奉命行事’已经不能再作为一个借口，现在是时候站起来发声，并拒绝权威对我们同胞权益的侵犯了，你签署了合约承诺帮助人们，与你的加拿大同胞站在一起，拒绝接受暴政，毫无疑问，我们现在都是历史的一部分，因此我有一个问题要问你，你想站在哪一边？
+
+编辑/发文：Kent
 
  
 
