--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,28 +1,26 @@
 ---
-title: 一条来自卡尔加里警员的信息
+title: 你愿意效法谷爱凌为国争光吗？
 ---
-`加拿大温哥华扬帆农场视频组` [轉載自GNews](https://gnews.org/zh-hans/1992350/)
+`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1992427/)
 
-#### 加拿大温哥华扬帆农场 视频组
+2022-02-11
 
-素材：文倩
-翻译：Kent
-字幕：杰尼龟
+作者：面包飞上天
+![](https://assets.gnews.org/wp-content/uploads/2022/02/XVG4G0GMKYT0D17H3-1.png)图片来源：[中国归化政策激化奥运迷的民族主义情绪](https://www.voachinese.com/a/china-s-recruitment-of-nationalized-america-trained-olympians-backfires-in-agitating-nationalistic-fans-20220210/6435403.html)
+如果有个人要替一个没有人权的国家卖命，因为在那里可以更有名，也可以更有钱，你会信吗？我是信的，而且这是事实，今天我们来谈谷爱凌。
 
-大家好我叫尼克，目前是卡尔加里警局的一名警官，我在卡尔加里工作了10年多一点，在此之前我在加拿大皇家骑警队工作了大约6年，我想读一读我今天晚上写的东西：
+连我儿子都喜欢看她的比赛，在中国她带来的影响力非常之大。可是谷爱凌跟伟大一点关系都没有，因为伟大不在于分数和金牌数而在于灵魂的高尚。在谷爱凌身上我看到了自私的东西，甚至是家族的自私。
 
-今天对我来说是一个艰难的日子，有些东西从我身上被夺走，我知道那再也无法找回，看着渥太华警局的成员从和平的抗议者手中夺走燃料，夺走了我长期持有的一个信念，我认为这是一个永恒的真理，那就是当人们真正需要的时候，警察会在那里保护和帮助人们。
+如果一个人在中国长大，在中国训练，长大后代表美国参赛，我是可以理解的，因为中国有太多的黑暗。一个在国外长大，却代表一个世界抵制的国家参赛，就太不可理喻了。打个比方：这就好比一个人在德国以外长大，希特勒说回来代表德国比赛吧，我给你优惠，我让你在国内赚更多的钱，你衡量过后真的回来了，这样的人就是中国青少年的榜样？
 
-我无法再像今天这样看待我的工作了，我看到的是警察像受雇的打手一样做着政治家的肮脏工作，这违背了我选择这个吃力不讨好的、困难的、带来创伤的、工作时间糟糕的职业的所有原因。
+奴化教育如此光新亮丽，如此光面堂皇，我们要警惕。
 
-我进入执法部门的原因是为了帮助人们，无论这句话有多天真，这都是我的真实想法，随着岁月的流逝，我会是第一个承认自己变得迟钝的人，但我从未让任何事情损害我的诚信，我总是以‘头版头条’原则测试自己，那就是：如果我做的事情将要出现在报纸的头版上，或成为年轻观众看到的新闻报道，我自己能否接受。
+编辑：LILY
+发布：肥鯮
 
-做正确的事情，即使没有人看，即使它是困难的，也总是正确的决定。在渥太华发生的事情，警察明显受到了政治的影响，对和平的抗议者施加政治意愿，只为了潜在的政治利益，这在很多方面是非常错误的。
-
-‘我只是奉命行事’已经不能再作为一个借口，现在是时候站起来发声，并拒绝权威对我们同胞权益的侵犯了，你签署了合约承诺帮助人们，与你的加拿大同胞站在一起，拒绝接受暴政，毫无疑问，我们现在都是历史的一部分，因此我有一个问题要问你，你想站在哪一边？
-
-编辑/发文：Kent
-
+更多资讯请关注：
+[温哥华圆成农场GTV频道](https://gtv.org/user/5f30d3ff91d4727c6a88395d)｜[温哥华圆成农场官方盖特](https://www.gettr.com/user/himalayavang)｜[温哥华圆成农场Discord服务器](https://discord.gg/8RMGcwT8)
+![](https://assets.gnews.org/wp-content/uploads/2021/11/%E8%BE%B2%E5%A0%B4%E6%96%87%E5%AE%A3-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
