--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,19 +1,26 @@
 ---
-title: 中共篡改法律，不尊重规则
+title: 美日外长会谈：强烈反对中共尝试片面改变台海现状
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1992344/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1992423/)
 
-#### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
-视频定位：BENJ1；WEI
+**撰稿：日本东京方舟农场****  ****幽蘭自得**
 
-*发布：陶子*
+2月11日，美国国务卿布林肯与日本外务大臣林芳在澳大利亚墨尔本举行了双边会谈，双方强烈反对中共尝试片面改变东海与南海现状，重申“台湾海峡的和平与安定是重要的”这一共识。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-171.jpg)（图片来自网络）
+据《中央社》报道，布林肯（Antony Blinken）与林芳正赴澳洲墨尔本出席“四方安全对话”（Quad）外长会议，在该会议进行之前，两人于日本时间上午10时30分左右先举行了双边会谈，时间约1小时。
 
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter：HimalayaAthena](https://twitter.com/HimalayaAthena1)
-[澳大利亚墨尔本农场Gettr：himalayaathena](http://gettr.com/user/himalayaathena)
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](http://xn--discord-cu4k86skkas5c126a4lez1be9fmukp34csc6a3e9m/)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](http://gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+两人在会谈中重申，强烈反对中共尝试片面改变东海与南海现状，以及施加经济压力；双方也重申共识——台湾海峡的和平与安定是重要的。
+
+另外，双方针对持续军事紧绷的乌克兰情势交换了意见，也协商若俄罗斯对乌克兰动武，包含制裁俄罗斯在内等因应措施的强度为何等议题。
+
+据悉，“四方安全对话”成员国美国、印度、日本和澳洲当天将在墨尔本举行外长会议，议程包括反制中共散播假消息和经济胁迫，以及关注俄乌危机。
+
+参考链接：
+[https://www.cna.com.tw/news/aopl/202202110129.aspx](https://www.cna.com.tw/news/aopl/202202110129.aspx)
+
+素材采编：幽蘭自得
+编辑：老孙
+发布：爱放飞
 
  
 
