--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,32 +1,34 @@
 ---
-title: 美国商会：拜登政府正考虑对中国重启贸易调查
+title: 瑞格萨：索马里兰是主权国家，不由中共发号施令
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1992371/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1992461/)
 
-#### 【雅典娜快讯】，紧贴时代脉搏
+**撰稿：日本东京方舟农场  幽蘭自得**
 
-整理：Eileen（围剿维尼熊）
-编辑：文泓
+2月11日，索马里兰外交部长瑞格萨访问台湾时强调，索马里兰是一个主权国家，生而自由，中共政权不能向其发号施令，限制该国的外交往来。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-172.jpg)（图片来自Handout/Presidential Office/AFP）
+据《大纪元》报道，索马里兰外长瑞格萨（Essa Kayd Mohamoud）在接受记者采访时说：“我们生而自由，我们会保持自由。我们将以自己想要的方式经营外交关系，中（共）国不能发号施令，其它国家也不能发号施令。”
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/2-48.png)图片来源：BBC
+瑞格萨补充说，他们愿意与任何尊重他们作为主权国家的人打交道，并希望不附带任何条件地做生意。
 
+“我认为，在中国问题上这是最清楚的说明了。”他说。
 
-当地时间2月10日，根据德国之声报道，由于中国远未兑现“第一阶段”贸易协议中所作出的两年采购承诺，**2月9日美国商会官员表示，若对于中国未履行的“第一阶段”采购承诺的谈判失败，拜登政府正在考虑接下来的一系列惩罚，其中包括重启对中国的贸易调查，结果可能会导致对中国货物加征关税。**
+据悉，在瑞格萨访台期间，会见了蔡英文总统、外长吴钊燮等台湾政要。此外，还预计与台湾海巡署长周美伍，讨论合作事宜。
 
-美国商会副会长布列恩向记者表示，美国与其盟国可能联手，迫使中国为国际企业提供更公平的竞争环境和发展机会。
+同日，瑞格萨还与同行的财政发展部长希瑞（Saad Ali Shire）等举行了新闻发布会。当记者问及，台湾、索马里兰是否属正式外交关系时，他说，“双方的关系可说是最高层级、最佳的多面向关系，并且未来只会更好。”
 
-据美国普查局2月8日公布的数据显示，2021年美国与中国的货物贸易逆差扩大了450亿美元或14.5%，达到3,553亿美元，是2018年创下4,182亿美元记录以来的最大逆差。而2020年对华贸易逆差则达到3,103亿美元，创下了10年来最低。换言之，中国对所承诺的采购量还存在巨大缺口。
+他强调，“我们的关系没有伤害到任何人，世界应予支持。”
 
-参考链接：[美国商会称拜登考虑对中国另启贸易调查](https://www.dw.com/zh/%E7%BE%8E%E5%9B%BD%E5%95%86%E4%BC%9A%E7%A7%B0%E6%8B%9C%E7%99%BB%E8%80%83%E8%99%91%E5%AF%B9%E4%B8%AD%E5%9B%BD%E5%8F%A6%E5%90%AF%E8%B4%B8%E6%98%93%E8%B0%83%E6%9F%A5/a-60720500)
+据路透社报道，索马里兰（Somaliland，又译索马里兰）自1991年脱离索马里（Somalia，又译索马里），但其独立并未获得国际社会的广泛认可。该地区基本上是和平的，而索马里则经历了30年的内战。
 
-*发布：tianzhihuan*
+报道称，索马里兰和台湾主权都未被广泛承认，在外交上同样被孤立。双方于2020年，在对方的首都设立了代表处，此举激怒了中共和摩加迪沙。
 
-**更多资讯，请关注：**
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+参考链接：
+[https://www.epochtimes.com/b5/22/2/11/n13569969.htm](https://www.epochtimes.com/b5/22/2/11/n13569969.htm)
+
+素材采编：幽蘭自得
+编辑：老孙
+发布：爱放飞
 
  
 
