--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,7 @@
 ---
-title: 不收捐款，可以有偿服务
+title: 谷爱凌事件敲响海外华人的警钟
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1992230/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1992337/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
