--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,62 +1,27 @@
 ---
-title: 2022年2月11日文贵先生直播摘要及音频—银河系农场
+title: 【G时新闻】加拿大拖车公司拒绝把自由车队的卡车拖走
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1992206/)
+`G-时新闻` [轉載自GNews](https://gnews.org/zh-hans/1992283/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/snapshot_副本-3.jpg)
-盖特连接：[2022年2月11日 文贵大直播：冬奥会爆出“美”谷爱凌；黑操作假裁判破坏规则；共产党蓝金黄无孔不入；感染下降疫苗政策在变](https://gettr.com/streaming/ptvq9q8759)
+加拿大温哥华扬帆农场   播报：文广   视频制作: Geacelshan
 
-G-TV连接：[2022年2月11日 文贵大直播：冬奥会爆出“美”谷爱凌；黑操作假裁判破坏规则；共产党蓝金黄无孔不入；感染下降疫苗政策在变](https://gtv.org/video/id=62065c00a1fe5e57a426b9e1)
+加拿大渥太华市（Ottawa）的拖车公司连续两周拒绝拖走参加自由车队的半挂车，这些半挂车目前堵在市中心。
 
-1、谷爱凌对华人亚洲人的伤害几百亿都无法挽回；
+十家公司都拒绝了，渥太华市管理者卡内拉科斯（Steve Kanellakos）解释说这些公司不想接这活，因为重型卡车行业是他们生计的很大一部分。我们已经联系了他们所有人，每一个人，从今天起，他们都拒绝提供重型拖车工作。
 
-2、排华：一个美国面包店老板愤怒地对中国人说：你们中国人就不应该待在这里，回你们的中国去；
+Pascal Loyer（代表拖车公司）告诉记者他将在这件事上保持中立，希望能有政治解决。Loyer 还介绍说，即使没有抗议者参与，移动半挂卡车也是一项高难度的任务。
 
-3、七哥去日本和英国：必须在美国政府确认安全和同意的情况下，才可以去；最快也是6月份以后的事了；
+渥太华市政府表示，他们正在审查合同，甚至与安大略省（Ontario）其他城市联系，看看他们是否可以提供帮助，以及安大略省的其他拖车公司。
 
-4、冬奥会开幕式现场没人，而中共拍出来的照片全是人，可见中共国的假到了灾难的级别；
+其他抗议活动也出现了拖车的问题，由于缺乏愿意站在政府这边和卡车抗议者对抗的公司，阿尔伯塔省的边境口岸Coutts也被拖车封锁。
 
-5、锁链女的父亲和叔叔李爱中，是共产党员，锁链女事件引起共产党员内部愤怒，加快共产党内部瓦解；
+阿尔伯塔省皇家骑警副局长 Curtis Zablocki 说，他们联系的运营商担心如果他们帮助警察，拖走抗议者的卡车会对他们的未来业务造成长期影响。
 
-6、共产党威胁香港十大法官之一，英国法官判查封文贵先生上百亿资产；
+抗议活动中的一些卡车还采取了拆除轮胎的措施，以使其更难以移动。
 
-7、文贵先生1.34亿案子：不能因为荒唐的判决，而不相信美国的法律。美国的司法制度对所有人都是公平的，文贵先生立刻开启了上诉；
-
-8、非洲正在政变，共产党在非洲的钱都会打水漂；
-
-9、一个普京超级相信的人把周围疫苗死亡的事报告给普京，普京微微一笑，说明普京早就知道疫苗危害；
-
-10、供应链断裂、共产党对香港的威胁，香港还会很坏；
-
-11、你没有见过共产党蓝金黄，13579计划，灭白计划，达沃斯党喝酒玩小女孩肮脏的德行，你不会知道邪恶的肮脏、爆料革命的伟大；
-
-12、你没有见过防化兵实验室，装甲兵学院，武汉P4实验室，你不会知道解放军是多么的烂；
-
-13、共产主义就是最大的资本主义，完全垄断后的结果；
-
-**注：大直播音频正在制作和上传中，敬请关注——**
-
-编辑整理：文俊；
-
-发布：黎明之前
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们——**[**日本银河系农场Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+听写/翻译：LuLu1312
+字幕：圣骑士
+编辑/上传：圣骑士
 
  
 
