--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,51 +1,36 @@
 ---
-title: 郭先生直播厅-喜支付
+title: 2022.2.11大直播后记：德国教练调侃盘古变形
 ---
-`MOS Designer香草山设计部` [轉載自GNews](https://gnews.org/zh-hans/1992199/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1992280/)
 
-设计者：纽约香草山设计部 — 决明子
+**整理：枫叶红了、铁血丹心
+编辑：Candy**
 
-
-
-![](https://assets.gnews.org/wp-content/uploads/2021/12/logo-s2.png)
-
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/大直播.png)
 
 
+共产党、上万次的警察、把龙头在奥运会前变成了龟头。 德国那个教练说：Miles我真的到现场认真看了，那有男性龟头有没有睾丸呢？ 把我笑晕了。我还真没想过这问题，
 
+我说：这你得问习太阳去，有没有睾丸啊？ 这哥们太搞笑了，我说你想象力太强了。 我说，德国人，你只知道铁钎潜水艇，哪里来睾丸呢？把我笑都快笑晕了。
 
+他说：我就在前面看着，2008年我来了，就站在同样的位置。这个世界全变了，冠状病毒、疫苗。 整个奥运村死气沉沉，没人，哪有人呢？ 除了军人，都是军队军人，世界都是死静 一 片！但是这龙头变龟头，它确实是龟头，包扎的龟头！
 
+他还发现那个龟头上面有一层木板，我都不知道，你们都没发现这问题。 
+他说：还没完工呢，Miles，还有一层那个……那是粘上去的东西。
+我说：是吗？ 就工没完，那个龟头包扎还没完呢！
+他说：Miles，那个睾丸在哪儿呢？ 得弄两睾丸。
+我说：拿得弄俩保护神。大家都成年人，上哪弄大睾丸去？文疯而动弄睾丸去吧。 
 
+我说，共产党是没睾丸呢，哪有什么睾丸！我说这帮垃圾哪有什么睾丸，都是吃伟哥的是吧？！我说咱在这个世界，他把这个龙头变成龟头，你想想TBG、还有PAG单伟建这种流氓行动。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-26-1-scaled.jpg)在喜支付系统里没有统治、避免重复纳税，没有剥削，所有的价值就是你我之间双方的“信”和“用”。 
-—2022年2月2日郭文贵先生GTV/GETTR直播![](https://assets.gnews.org/wp-content/uploads/2022/02/2-26E-scaled.jpg)In our Himalaya Pay (HPay) system, there is no rule-by-countries, no double taxation, no exploitation. All that matters is the “trust” and “usage” between you and me. 
-– Miles Guo, GTV/GETTR livecast on Feb. 2, 2022![](https://assets.gnews.org/wp-content/uploads/2022/02/3-27-1-scaled.jpg)喜联储是超越国家主权、超越物理世界的人类最新文明；解放生产力、开发人类智慧，缩短人与人之间的距离，超出人类信仰的互信关系；是生产力和人际关系的解放、物质流通解放、精神解放——使用即金钱。 
-—2022年2月2日郭文贵先生GTV/GETTR直播![](https://assets.gnews.org/wp-content/uploads/2022/02/4-27e-scaled.jpg)The Himalaya Exchange symbolizes a new civilization that transcends national sovereignty and the physical world. It liberates productivity, cultivates human intelligence, shortens the distance between people, and forms a new trust relationship that goes beyond different faiths. It is a liberation of productivity and human relations, a liberation of logistic or product distribution, a liberation of human spirit. In short, it is“you use, you earn”. 
-– Miles Guo, GTV/GETTR livecast on Feb. 2, 2022
+***发布：Candy***
 
-
-**编辑/发稿：小鹿**
-
-
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/2-124.jpg)
-
-**更多资讯，更多关注**
-
-[**纽约香草山农场****GTV****–****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场****GTV-MOS TALK****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-
-[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场****YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-
-![](https://assets.gnews.org/wp-content/uploads/2021/12/logo-s2.png)
-
-
-
-
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
