--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,48 +1,35 @@
 ---
-title: 加拿大总理特鲁多的弟弟公开反对其对新冠政策和自由车队的态度，称这一切似乎在按照剧本发展
+title: 辉瑞公司推迟了 FDA 为 5 岁以下儿童接种 Covid 疫苗的要求
 ---
-`加拿大温哥华扬帆农场视频组` [轉載自GNews](https://gnews.org/zh-hans/1992367/)
+`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1992456/)
 
-#### 加拿大温哥华扬帆农场 视频组
+2022-02-11
 
-素材：路仁
-翻译：路仁
-字幕：路仁
+作者：伯克利洛夫莱斯JR
+翻译：沉默老歌
+![](https://assets.gnews.org/wp-content/uploads/2022/02/A6TM__CVSU08JKMNA42OS.png)图片来源：https://www.dw.com/
+Pfizer-BioNTech 正在推迟向美国食品药品监督管理局 (Food and Drug Administration) 的滚动使用，以扩大其两剂 中共病毒疫苗对 6 个月至 4 岁儿童的使用。
 
-欢迎收看《不被取消》节目，这是一档世界顶级评论员在有争议的问题上直言不讳的节目，这里没有对‘删除文化’横扫其他媒体的恐惧，加拿大总理贾斯汀·特鲁多要求结束数百名卡车司机的抗议活动，这项对新冠限制的的抗议已经令首都瘫痪了一个多星期，渥太华仍然被智慧的自由车队车辆封锁着，这个由卡车司机发起的示威游行最初对穿越美加边境实施的疫苗强制令感到愤怒，随后活动演变成更广泛的抗议活动，以及反对对公民自由的严重侵害，在逃离首都躲藏起来并声称他感染了新冠病毒后特鲁多终于回来了，他抨击抗议者，以下是他出现后在下议院的紧急辩论中的讲话。
+此举意味着该年龄段的疫苗将在未来几周内无法获得，这对渴望为幼儿接种疫苗的父母来说是一个挫折。
 
-昨天有人试图封锁我们的经济、我们的民主以及我们同胞的日常生活，封锁必须停止，渥太华人民不应该在自己的社区里受到骚扰，他们不应该面对在街角挥舞纳粹旗帜的暴力组织。
+辉瑞周五表示，将等待其三剂系列疫苗的数据，因为它认为三剂“可能为这个年龄组提供更高水平的保护”。 该公司表示，预计将在 4 月初发布第三剂数据。
 
-这听起来多么的讽刺，考虑到特鲁多自己就被指责阻碍了加拿大的民主和煽动分裂，有趣的是批评他最厉害的其中一个人是他自己的一位家庭成员，贾斯汀·特鲁多同母异父的弟弟，凯尔·坎珀现在加入到我的节目。
+辉瑞在 12 月表示，在对 2 至 4 岁儿童进行的试验中，两剂疫苗并未产生足够强的免疫反应。对于幼儿，辉瑞的疫苗剂量为 3 微克，对于 5 至 11 岁的儿童，剂量更高，为 10 微克。
 
-凯尔，今晚能和你讲话真是太棒了，我知道你支持卡车司机们，但之前你一直也和你同母异父的哥哥贾斯汀·特鲁多有良好的关系，这对家庭关系来说有多困难呢？
+尽管如此，该公司本月仍要求 FDA 批准前两剂，并计划在未来几周内提交第三剂的额外数据，完整的疫苗接种系列将是三剂。
 
-你不得不说…谢谢你邀请我参加节目。
+在下周的咨询委员会会议之前，预计 FDA 将在周五公布对辉瑞数据的分析，FDA周五表示，会议已被推迟。
 
-不要客气。
+两位熟悉 FDA 计划的人士表示，外部专家已经对该机构进行了大量反对，他们担心辉瑞的数据不够充分。 其中一位知情人士说，专家们认为，他们的担忧在FDA内部“被置若罔闻”。
 
-人们说你可以选择你的朋友，但你不能选择你的家庭，我确实是发自内心的爱的我哥哥贾斯汀，我非常感激在我的一生中能拥有他，还有他教给我的原则和教诲已经成为我生命中的一部分，但我感觉在过去的十几年里，如你所知我们已经疏远了，无论是诸如哲学和政治方面还是关于自主和自由的根本观点方面，以及关于这场新冠骗局，不管我们叫它什么，两年来恐惧、恐惧、恐惧，不断的来自我哥哥和媒体那里，以及来自全球化的政治财团，这与人们内心产生的质疑和面临的心理健康挑战有直接的关系，它也造成每个人之间的分歧，这种紧张关系变得非常严重
+来源链接：[Pfizer postpones FDA request for Covid vaccine for kids under 5](https://t.co/dgisWykQ2q)
 
-为什么呢？你的哥哥为什么要这样做？他为什么要分裂加拿大？你能回答这个问题吗？
+编辑：LILY
+发布：肥鯮
 
-好的，我可以用我自己的逻辑来分析，但似乎这一切都是按照剧本发展，他是一个制药公司策划程序以及世界经济论坛（达沃斯论坛）的代表，以及比尔和梅琳达·盖茨基金会，这一切都为加拿大人提前设定好了，并且是一个从来没有被投票决定过的计划，加拿大人从来没有投票赞成疫苗强制政策，并且我们已经没有联系了，最重要的是这个卡车车队的抗议带来一种深远的意义，这也给加拿大人民带来团结和让人们有了走到一起的机会，千万别搞错了，（他们说）在渥太华发生的事情是“不和平的”，纳粹党徽并没有在街角飞舞，那并非是在人群中拍下的照片，那是被主流媒体刻意挑选出来，然后转发到推特的。
-
-你也可以称他们为‘药商媒体’，他们尝试以这样的描述方式对整个抗议运动进行诽谤，但是真实发生在街头的事情是我一直在和这些卡车司机交流，和那里的人们交流，他们正在清理街道，犯罪率也下降了，他们在社区里互相分享，现场人们在跳舞、欢呼雀跃、听着音乐，他们只是想要回我们的自由，他们想要真相，是的加拿大不再像人们所知的那样强大和自由。
-
-这是一个很好的观点，我认为这在好几个层面上都是一个真正的讽刺，凯尔和我希望你能明白，首先你哥哥特鲁多显然是“黑命贵”运动的大力支持者，他们要对过去几年里北美发生的各种暴力行为负责，其次你如何看待你哥哥对于种族主义的观点？鉴于他过去曾把脸涂黑的事。
-
-对的，你知道他已做了一些事情，我想他肯定很后悔，并且他没有准确的、必要的表达自己的角色，但这也的确说明了那些对他人进行评判和散播仇恨的人正是自己表现出仇恨和分裂的人，但他们却极力拒绝或诋毁，绝大部分加拿大人不再相信谎言了，他们不再并且已经受够了恐惧，他们已经醒来了，他们看到这是一个彻头彻尾的《纸牌屋》式的谎言，他们对疫苗的安全性有严重的质疑，这关系到我们孩子的未来，关系到加拿大将成为什么样的国家。
-
-这已经成为一个让加拿大人站起来的号角，人们要求拿回自己应有的自由，并希望能够坐下来来谈谈，贾斯汀和整个制药业财团所面临的一个挑战是，他们无力辩驳，他们无法就这件事进行辩论，因为他们没有科学的支持，只有真理经得起辩论，谎言则需要被审查，因此你需要用事实去检验，求对误导性信息和推特大V们进行甄别，方能传播你的论点
-
-凯尔，最后一个问题：你还和你哥哥保持联系吗？
-
-我有一阵子没跟我哥哥说话了，但我想对贾斯汀说：我爱你，如果我伤害了你，我很抱歉，请原谅我，我非常感谢你，哥哥！
-
-好吧， 你正是我想一起出去玩的那种兄弟，这点是肯定的，所以请一定回来，这是凯尔，贾斯汀·特鲁多同母异父的弟弟，同时也是非常坚定的自由斗士！
-
-编辑/发文：Kent
-
+更多资讯请关注：
+[温哥华圆成农场GTV频道](https://gtv.org/user/5f30d3ff91d4727c6a88395d)｜[温哥华圆成农场官方盖特](https://www.gettr.com/user/himalayavang)｜[温哥华圆成农场Discord服务器](https://discord.gg/8RMGcwT8)
+![](https://assets.gnews.org/wp-content/uploads/2021/11/%E8%BE%B2%E5%A0%B4%E6%96%87%E5%AE%A3-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
