--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,7 +1,7 @@
 ---
-title: 西方看华人就是蓝金黄和骗
+title: 七哥绝不伸手 要战友捐一分钱
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1992171/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1992222/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
