--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,9 +1,9 @@
 ---
-title: 郭先生直播厅-七哥谈“红色”
+title: 郭先生直播厅-喜支付
 ---
-`MOS Designer香草山设计部` [轉載自GNews](https://gnews.org/zh-hans/1992165/)
+`MOS Designer香草山设计部` [轉載自GNews](https://gnews.org/zh-hans/1992199/)
 
-设计者：纽约香草山设计部 — 战友时光
+设计者：纽约香草山设计部 — 决明子
 
 
 
@@ -16,11 +16,11 @@ title: 郭先生直播厅-七哥谈“红色”
 
 
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-20220210__1.png)红色给我们带来力量，共产党霸占了红色，抢夺了我们的自由，让我们失去了未来、失去了家人，我们只有打开“甜蜜蜜运动”这把钥匙，只有团结、合作，才能消灭CCP。 
-—2022年1月31日郭文贵先生GTV/GETTR直播![](https://assets.gnews.org/wp-content/uploads/2022/02/2-20220210-04.png)Red color brings energy. But by using the red color for its flag, the CCP has robbed us of our freedom, leaving us with broken families and no future. In order to take down the CCP, we have to unite and collaborate with others, we have to make the best of the “Sweet as Honey” campaign. 
-– Miles Guo, GTV/GETTR livecast on Jan. 31, 2022![](https://assets.gnews.org/wp-content/uploads/2022/02/3-20220210-02.png)红色不能让共产党垄断，就像中国的权利不能被共产党垄断一样。幸福和健康也不能共产党说了算，像“恭喜发财”得党先强大。我们的红是铲除邪恶的红，而不是共产党杀人后血染的红旗。 
-—2022年1月31日郭文贵先生GTV/GETTR直播![](https://assets.gnews.org/wp-content/uploads/2022/02/4-20220210-05.png)We cannot allow the CCP to monopolize the red color, the same reason we cannot allow them to monopolize all the power and rights. Neither should we allow them to decide on who gets to be happy and healthy, while the Party itself keeps accumulating wealth and power. The red color of our new flag symbolizes eradicating the evil, not the blood-stained red of the CCP flag, a result of many massacres. 
-– Miles Guo, GTV/GETTR livecast on Jan. 31, 2022
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-26-1-scaled.jpg)在喜支付系统里没有统治、避免重复纳税，没有剥削，所有的价值就是你我之间双方的“信”和“用”。 
+—2022年2月2日郭文贵先生GTV/GETTR直播![](https://assets.gnews.org/wp-content/uploads/2022/02/2-26E-scaled.jpg)In our Himalaya Pay (HPay) system, there is no rule-by-countries, no double taxation, no exploitation. All that matters is the “trust” and “usage” between you and me. 
+– Miles Guo, GTV/GETTR livecast on Feb. 2, 2022![](https://assets.gnews.org/wp-content/uploads/2022/02/3-27-1-scaled.jpg)喜联储是超越国家主权、超越物理世界的人类最新文明；解放生产力、开发人类智慧，缩短人与人之间的距离，超出人类信仰的互信关系；是生产力和人际关系的解放、物质流通解放、精神解放——使用即金钱。 
+—2022年2月2日郭文贵先生GTV/GETTR直播![](https://assets.gnews.org/wp-content/uploads/2022/02/4-27e-scaled.jpg)The Himalaya Exchange symbolizes a new civilization that transcends national sovereignty and the physical world. It liberates productivity, cultivates human intelligence, shortens the distance between people, and forms a new trust relationship that goes beyond different faiths. It is a liberation of productivity and human relations, a liberation of logistic or product distribution, a liberation of human spirit. In short, it is“you use, you earn”. 
+– Miles Guo, GTV/GETTR livecast on Feb. 2, 2022
 
 
 **编辑/发稿：小鹿**
