--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,39 +1,31 @@
 ---
-title: 众议院紧急辩论-加拿大总理特鲁多选择继续为疫苗暴政站台
+title: 财富管理专栏：喜支付与KYC以及喜支付的交易隐私与政府监管是否冲突
 ---
-`加拿大温哥华扬帆农场视频组` [轉載自GNews](https://gnews.org/zh-hans/1992319/)
+`加拿大温哥华扬帆农场蓝枫法律` [轉載自GNews](https://gnews.org/zh-hans/1992408/)
 
-#### 加拿大温哥华扬帆农场 视频组
+#### 加拿大温哥华扬帆农场 蓝枫法律
 
-素材：文倩
-翻译：文𤦍
-字幕：米小乐
+问：一个普通的战友或者是一个普通的消费者，如果没有在喜交所注册KYC，可以用HPAY吗？
 
-2022/2/8
+答：经过测试，用了家里亲戚的个人信息注册喜交所的账户，他没有过KYC，所以之前讲的三个功能全不能用，被要求全部完成KYC之后才能用，不知道这个政策将来会不会改变，但应该是要做KYC的，如果是不做KYC等于是实现了一个匿名的支付 ，所以应该是不行的。
 
-反对党领袖：因为封锁和实施强制措施，我们看到事情发生了非常迅速的变化，因此谭博士说应该重新评估强制疫苗接种计划，今天魁北克自由党核心小组主席明确而强烈地表示，是时候结束分裂、政治化和强制措施了，保守派完全同意，这不应是一个缓慢而拖沓的过程，就因为总理的自负、自傲或拒绝承认，加拿大人太累了，加拿大人需要希望，那么，总理会遵循科学、证据、结束限制、结束强制措施吗？
+问：假设某人合法过了KYC，安装了HPAY，做了一些交易，而税务局有权利要求此人提供银行的对账单等等，那信息的隐私性如何得到保障？这算是冲突吗？
 
-议长：尊敬的总理。
+答：这个问题其实很难回答，也很容易回答，因为在整个系统里抽出了某几点要做的事，但又给系统的另外许多东西给阻拦了，就会发生明明是非常合适可以做的事情，而那边不停的监管。比如说Back Up现在要查你所有的信息，各国之间的金融要互相交换信息，政府并且说你要老实交代，不交代就是有罪，它永远可以追着你，这是一个完全的流氓逻辑。
 
-总理：议长先生，每个人都厌倦了不得不作出牺牲和面对封锁措施，但在过去的两年里，加拿大人不断努力，互相支持，接种疫苗，这是我们在全国各地看到的团结一致，人们一直在为邻里服务，一直在为前线的卫生工作者服务，这将是加拿大人继续做的事情，这是我们度过难关和找回我们热爱的生活的方法，我们将继续遵循科学，继续支持加拿大人，也将继续保护人们的生命。
+那么在整个系统里，从金融系统里面一层一层来看，钱的开始本来就是以物交换，没有人知道我和你物品之间的交换，到后来的代币，比如说黄金、铜、银子，最容易解释的一个就是碎银子，碎银子有它本身的价值，去吃东西你放碎银子在边上，银子收走了，你吃了饭你走了，这个交易就完成了，但是政府要拦一脚，你必须付这个税，这个税不光是消费税，还有你所有的收益税、所得税，若政府没这个税或最基本的税，他为什么还要来查你呢？所以我们变成要去符合他的要求。
 
-反对党领：爱尔兰、瑞典、挪威、以色列、捷克共和国、英国、西班牙、丹麦等国家都在取消限制和强制令，它们都是疫苗接种率低于加拿大的国家，然而在加拿大，我们有一位总理拒绝带领人们却不断制造分裂，我必须同意路易斯·拜尔议员，他说人们不知道公共卫生问题止于何处，政治又何时介入，加拿大人希望恢复他们的生活，所以我再次质问总理，他会遵循证据吗？他会遵循科学并快速结束限制和强制令吗？
+所以这个问题没有一个明确直接的回答，所以我们就出据证明、我们有多少花费、我们盈利多少、花了多少工资、剩余的钱去赋税，听上去很合理，但他为什么做这个呢？收入越高赋税越多比例越高，是不是应该这样？所以这是一个社会的问题。
 
-议长：尊敬的总理。
+对于我们喜交所现在所发生的情况，因为完全是隐形的，比如说KYC，因为喜交所交易现在的法律必须要做KYC，但是你拿着碎银子去用，这完全是匿名的，我不需要告诉饭店的老板我是谁，我把钱给他就是了，现在KYC的规定，所在地政府的规定要多少税你必须符合，喜联储、喜币它是在空中飘着的钱，他不给你出任何单据，也不知道你钱给谁，没有人知道，在政府眼里这件事情是不存在的，那么接下去的事情就是这个饭馆怎么报盈利？怎么报税？是另外单独的一件事。
 
-总理：议长先生，我们的每一步都得到加拿大人的支持，通过遵循科学与…
+现在喜联储、喜币、HPAY所做的事情已经在天空中飘起来，接下去如何？随着新时代的到来，一步一步会转换的，昨天七哥直播里面讲的非常明确这几点，现在我们只能一步一步做，HPAY上来走HPAY的东西，这条路全都保密隐私。
 
-议长：请安静并遵守规则，现在反对党领袖提出了一个问题，但她听不到总理的说话，尤其是在不断的起哄和喊叫中，所以我要求每个人保持安静，这样她才能听到来自总理的回答。
+直播视频链接：
 
-总理：议长先生，从这场大流行开始我们就一直遵循科学，我们有加拿大人的支持，实际上与许多其他国家（包括反对党领袖所提到的国家）相比，加拿大的生活、生计和经济所遭受的影响并不那么严重，我们将继续遵循科学，作为加拿大人，我们将继续相互依靠以度过这场大流行，我们知道这很疲倦，这很累，但我们也知道，互相支持我们才能度过这场大流行。
+[第四十二期 金融税务专题及喜支付(H Pay)功能介绍](https://gtv.org/video/id=61ff154d96ba5d73e0c39083)
 
-议长： 反对党领袖。
-
-反对党领袖：总理已经将大流行政治化并造成了分裂，他自己的党派成员也看到了这一点，现在世界各国都在开放，甚至加拿大的一些省份也在开放，他们正在关注科学和证据，无论是BC省的亨利博士或安大略省的摩尔博士，他们都认同我们必须学会与新冠共存， 保守派认为与新冠共存意味着开放和结束强制令，我相信也有自由主义者持同样看法，那么，总理会遵循科学结束封锁，让加拿大再次成为真正强大而自由的北方国度吗？
-
-总理： 议长先生，我非常高兴听到保守党终于开始谈论科学，因为整个大流行期间他们对此陷入了困境，无论是选择不打疫苗，还是继续就现有公共卫生措施的有效性进行辩论，幸运的是，我们一直在与全国各地的省长合作，引入了拯救加拿大人生命的各类限制或强制措施，不幸的是我们看到保守派继续在此呼吁结束抗议，然而转头又去支持他们，他们需要成为更负责任的导者，减少对政治的玩弄，才能度过难关。
-
-编辑/发文：Kent
+编辑/发文：蓝枫法律栏目
 
  
 
