--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,27 +1,32 @@
 ---
-title: 【G时新闻】加拿大拖车公司拒绝把自由车队的卡车拖走
+title: 美国商会：拜登政府正考虑对中国重启贸易调查
 ---
-`G-时新闻` [轉載自GNews](https://gnews.org/zh-hans/1992283/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1992371/)
 
-加拿大温哥华扬帆农场   播报：文广   视频制作: Geacelshan
+#### 【雅典娜快讯】，紧贴时代脉搏
 
-加拿大渥太华市（Ottawa）的拖车公司连续两周拒绝拖走参加自由车队的半挂车，这些半挂车目前堵在市中心。
+整理：Eileen（围剿维尼熊）
+编辑：文泓
 
-十家公司都拒绝了，渥太华市管理者卡内拉科斯（Steve Kanellakos）解释说这些公司不想接这活，因为重型卡车行业是他们生计的很大一部分。我们已经联系了他们所有人，每一个人，从今天起，他们都拒绝提供重型拖车工作。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/2-48.png)图片来源：BBC
 
-Pascal Loyer（代表拖车公司）告诉记者他将在这件事上保持中立，希望能有政治解决。Loyer 还介绍说，即使没有抗议者参与，移动半挂卡车也是一项高难度的任务。
 
-渥太华市政府表示，他们正在审查合同，甚至与安大略省（Ontario）其他城市联系，看看他们是否可以提供帮助，以及安大略省的其他拖车公司。
+当地时间2月10日，根据德国之声报道，由于中国远未兑现“第一阶段”贸易协议中所作出的两年采购承诺，**2月9日美国商会官员表示，若对于中国未履行的“第一阶段”采购承诺的谈判失败，拜登政府正在考虑接下来的一系列惩罚，其中包括重启对中国的贸易调查，结果可能会导致对中国货物加征关税。**
 
-其他抗议活动也出现了拖车的问题，由于缺乏愿意站在政府这边和卡车抗议者对抗的公司，阿尔伯塔省的边境口岸Coutts也被拖车封锁。
+美国商会副会长布列恩向记者表示，美国与其盟国可能联手，迫使中国为国际企业提供更公平的竞争环境和发展机会。
 
-阿尔伯塔省皇家骑警副局长 Curtis Zablocki 说，他们联系的运营商担心如果他们帮助警察，拖走抗议者的卡车会对他们的未来业务造成长期影响。
+据美国普查局2月8日公布的数据显示，2021年美国与中国的货物贸易逆差扩大了450亿美元或14.5%，达到3,553亿美元，是2018年创下4,182亿美元记录以来的最大逆差。而2020年对华贸易逆差则达到3,103亿美元，创下了10年来最低。换言之，中国对所承诺的采购量还存在巨大缺口。
 
-抗议活动中的一些卡车还采取了拆除轮胎的措施，以使其更难以移动。
+参考链接：[美国商会称拜登考虑对中国另启贸易调查](https://www.dw.com/zh/%E7%BE%8E%E5%9B%BD%E5%95%86%E4%BC%9A%E7%A7%B0%E6%8B%9C%E7%99%BB%E8%80%83%E8%99%91%E5%AF%B9%E4%B8%AD%E5%9B%BD%E5%8F%A6%E5%90%AF%E8%B4%B8%E6%98%93%E8%B0%83%E6%9F%A5/a-60720500)
 
-听写/翻译：LuLu1312
-字幕：圣骑士
-编辑/上传：圣骑士
+*发布：tianzhihuan*
+
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
