--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,27 +1,55 @@
 ---
-title: 一条来自卡尔加里警员的信息
+title: 郭先生直播中所说的“莱彻斯登”是哪里？
 ---
-`加拿大温哥华扬帆农场视频组` [轉載自GNews](https://gnews.org/zh-hans/1992350/)
+`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/1992402/)
 
-#### 加拿大温哥华扬帆农场 视频组
+作者：香草山教育部-haloha
 
-素材：文倩
-翻译：Kent
-字幕：杰尼龟
+![](https://assets.gnews.org/wp-content/uploads/2022/02/logo-5-768x103-17.jpg)
 
-大家好我叫尼克，目前是卡尔加里警局的一名警官，我在卡尔加里工作了10年多一点，在此之前我在加拿大皇家骑警队工作了大约6年，我想读一读我今天晚上写的东西：
 
-今天对我来说是一个艰难的日子，有些东西从我身上被夺走，我知道那再也无法找回，看着渥太华警局的成员从和平的抗议者手中夺走燃料，夺走了我长期持有的一个信念，我认为这是一个永恒的真理，那就是当人们真正需要的时候，警察会在那里保护和帮助人们。
 
-我无法再像今天这样看待我的工作了，我看到的是警察像受雇的打手一样做着政治家的肮脏工作，这违背了我选择这个吃力不讨好的、困难的、带来创伤的、工作时间糟糕的职业的所有原因。
 
-我进入执法部门的原因是为了帮助人们，无论这句话有多天真，这都是我的真实想法，随着岁月的流逝，我会是第一个承认自己变得迟钝的人，但我从未让任何事情损害我的诚信，我总是以‘头版头条’原则测试自己，那就是：如果我做的事情将要出现在报纸的头版上，或成为年轻观众看到的新闻报道，我自己能否接受。
 
-做正确的事情，即使没有人看，即使它是困难的，也总是正确的决定。在渥太华发生的事情，警察明显受到了政治的影响，对和平的抗议者施加政治意愿，只为了潜在的政治利益，这在很多方面是非常错误的。
+郭先生在直播中时常会提及“莱彻斯登”这个名字，相信大多数战友都对这个名字有些陌生，那么今天我们就来简单介绍一下这个国家。
 
-‘我只是奉命行事’已经不能再作为一个借口，现在是时候站起来发声，并拒绝权威对我们同胞权益的侵犯了，你签署了合约承诺帮助人们，与你的加拿大同胞站在一起，拒绝接受暴政，毫无疑问，我们现在都是历史的一部分，因此我有一个问题要问你，你想站在哪一边？
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片1-43.png)图片来源：[http://www.cndxsd.com/uploadfile/map/2015011321594276.jpg](http://www.cndxsd.com/uploadfile/map/2015011321594276.jpg)
 
-编辑/发文：Kent
+“莱彻斯登”是英文Liechtenstein的音译名，中文名为：列支敦士登公国或列支敦士登亲王国（简称“列支敦士登”），这是一个位于阿尔卑斯山脚下的袖珍小国，地处瑞士与奥地利两国之间，是世界上仅有的两个双重内陆国之一（另一个为乌兹别克斯坦）。
+
+列支敦士登领土面积约160平方公里，只有西侧约三分之一的面积位于平坦的河谷里，其余地区大都属于山地。列支敦士登虽然并不和德国交界，但是因为人口大多数都是日耳曼民族，因此官方语言是德语，人口数量约3.8万。
+
+1868年，列支敦士登对外正式宣布成为永久中立国，因此在两次世界大战中均没有遭到战火的蹂躏。列支敦士登又和邻国瑞士保持了良好的经济外交合作，两国成立了关税同盟，列支敦士登使用瑞士法郎做为自己的货币，并由瑞士负责本国的外交和军事国防。
+
+虽然列支敦士登地理环境并不优越，但在二战之后，这个原本以农业为主的山区小国，经过自身持续的发展，现已成为金融强国，是全世界最富有的国家之一，人均GDP常年高居世界前三。
+
+参阅链接：
+
+[https://oushengpartners.com.cn/article/osfotalk\_677.html](https://oushengpartners.com.cn/article/osfotalk_677.html)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-26.jpg)
+
+编辑：飞虹
+
+校对/发稿：遍地开花
+
+**更多资讯，更多关注**
+
+[**纽约香草山农场GTV****–****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK**** ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场 You****Tube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/logo-5-768x103-18.jpg)
+
+
+
+
 
  
 
