--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,9 +1,9 @@
 ---
-title: 郭先生直播厅-新中国联邦2022年最重要做什么？
+title: 郭先生直播厅-喜支付
 ---
-`MOS Designer香草山设计部` [轉載自GNews](https://gnews.org/zh-hans/1992198/)
+`MOS Designer香草山设计部` [轉載自GNews](https://gnews.org/zh-hans/1992199/)
 
-设计者：纽约香草山设计部 — 喜马拉雅大喵儿
+设计者：纽约香草山设计部 — 决明子
 
 
 
@@ -16,24 +16,11 @@ title: 郭先生直播厅-新中国联邦2022年最重要做什么？
 
 
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-52ac6b5cbc994616-scaled.jpg)
-新中国联邦2022年最重要做什么？ 
-一、一心一意灭共； 
-二、全力以赴扩大新中国联邦被国际和各国家主权的认可度； 
-三、全力以赴在全球建立更多的农场； 
-四、让更多的战友从国内被救出来，同时让更多国内的人知道我们新中国联邦； 五、让所有新中国联邦的战友们在Ｇ系列里赚更多的钱，获得更多的机会； 
-六、让全世界爱好正义的、被共产党病毒伤害的和受到疫苗毒武器设计的人，找到病毒真相，找到毒疫苗解决的办法，要把全世界受到共产党经济威胁、超限战的人紧紧地和我们团结在一起，建立我们真正的爆料革命的国际被公认可的社交媒体大平台； 
-七、新中国联邦人要统一好我们的作战目标，统一行动，保命、保财、报仇。更重要的是让我们所有的战友都能共同度过这个至暗的时代。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2-1-1-scaled.jpg)
-Top 7 Priorities for the NFSC in 2022 – 
-1. Be fully committed to the mission of Take Down the CCP; 
-2. Make every effort to increase the recognition of the NFSC, and make as many sovereignty countries as possible to recognize the NFSC; 
-3. Make every effort to establish many new Himalaya farms; 
-4. Rescue more fellow fighters from mainland China, while making more Chinese people aware and educated about the NFSC; 
-5. Continue to make NFSC fellow fighters’ investments in G-series appreciate more in value, while adding more opportunities； 
-6. Unite all the justice-loving people across the world; help those harmed by the virus or vaccine find out the truth about the virus, and solutions to counter the poisonous COVID vaccine. To unite around us all those harmed by the CCP’s economic threats and the unrestricted warfare, and to build the social media of the WM and NFSC, making it well-respected internationally; 
-7. All fellow fighters shall always act towards the same objective, and operate under one unified and coordinated strategy. “To save lives, to protect wealth, and to avenge”. More importantly, help our fellow fighters ride out the darkest hours in human history.
-
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-26-1-scaled.jpg)在喜支付系统里没有统治、避免重复纳税，没有剥削，所有的价值就是你我之间双方的“信”和“用”。 
+—2022年2月2日郭文贵先生GTV/GETTR直播![](https://assets.gnews.org/wp-content/uploads/2022/02/2-26E-scaled.jpg)In our Himalaya Pay (HPay) system, there is no rule-by-countries, no double taxation, no exploitation. All that matters is the “trust” and “usage” between you and me. 
+– Miles Guo, GTV/GETTR livecast on Feb. 2, 2022![](https://assets.gnews.org/wp-content/uploads/2022/02/3-27-1-scaled.jpg)喜联储是超越国家主权、超越物理世界的人类最新文明；解放生产力、开发人类智慧，缩短人与人之间的距离，超出人类信仰的互信关系；是生产力和人际关系的解放、物质流通解放、精神解放——使用即金钱。 
+—2022年2月2日郭文贵先生GTV/GETTR直播![](https://assets.gnews.org/wp-content/uploads/2022/02/4-27e-scaled.jpg)The Himalaya Exchange symbolizes a new civilization that transcends national sovereignty and the physical world. It liberates productivity, cultivates human intelligence, shortens the distance between people, and forms a new trust relationship that goes beyond different faiths. It is a liberation of productivity and human relations, a liberation of logistic or product distribution, a liberation of human spirit. In short, it is“you use, you earn”. 
+– Miles Guo, GTV/GETTR livecast on Feb. 2, 2022
 
 
 **编辑/发稿：小鹿**
