--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,19 +1,22 @@
 ---
-title: 德国教练看了盘古龙头
+title: 澳洲破获中共间谍案 企图操控联邦大选
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1992451/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1992494/)
 
-#### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
-视频定位：BENJ1；WEI
+**撰稿：日本东京方舟农场  海星**
 
-*发布：陶子*
+2月11日，澳洲多家媒体报导，澳洲安全情报组织（ASIO）破获了一起中共间谍企图资助候选人操控联邦大选的案件。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-173.jpg)（图片来自于网络）
+据《中央社》报导，近期，澳洲安全情报组织（Australian Security Intelligence Organisation）侦破了一位商人企图提供竞选经费给新南威尔斯州选举候选人从而影响联邦大选的案件。一位不具名的国安人员透露，该商人与中共关系密切，中共情报机构是这起案件的幕后黑手。
 
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter：HimalayaAthena](https://twitter.com/HimalayaAthena1)
-[澳大利亚墨尔本农场Gettr：himalayaathena](http://gettr.com/user/himalayaathena)
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](http://xn--discord-cu4k86skkas5c126a4lez1be9fmukp34csc6a3e9m/)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](http://gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+ASIO总监勃吉斯（Mike Burgess）于9日发布的年度威胁评估资料中证实，近期有外国政府试图扶植其代理人参加澳洲选举，意图干预澳洲政治以及侵蚀澳洲主权。
+
+参考链接：
+[https://www.cna.com.tw/news/aopl/202202110291.aspx](https://www.cna.com.tw/news/aopl/202202110291.aspx)
+
+素材采编：海星
+编辑：老孙
+发布：爱放飞
 
  
 
