--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,27 +1,35 @@
 ---
-title: 美日外长会谈：强烈反对中共尝试片面改变台海现状
+title: 辉瑞公司推迟了 FDA 为 5 岁以下儿童接种 Covid 疫苗的要求
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1992423/)
+`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1992456/)
 
-**撰稿：日本东京方舟农场****  ****幽蘭自得**
+2022-02-11
 
-2月11日，美国国务卿布林肯与日本外务大臣林芳在澳大利亚墨尔本举行了双边会谈，双方强烈反对中共尝试片面改变东海与南海现状，重申“台湾海峡的和平与安定是重要的”这一共识。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-171.jpg)（图片来自网络）
-据《中央社》报道，布林肯（Antony Blinken）与林芳正赴澳洲墨尔本出席“四方安全对话”（Quad）外长会议，在该会议进行之前，两人于日本时间上午10时30分左右先举行了双边会谈，时间约1小时。
+作者：伯克利洛夫莱斯JR
+翻译：沉默老歌
+![](https://assets.gnews.org/wp-content/uploads/2022/02/A6TM__CVSU08JKMNA42OS.png)图片来源：https://www.dw.com/
+Pfizer-BioNTech 正在推迟向美国食品药品监督管理局 (Food and Drug Administration) 的滚动使用，以扩大其两剂 中共病毒疫苗对 6 个月至 4 岁儿童的使用。
 
-两人在会谈中重申，强烈反对中共尝试片面改变东海与南海现状，以及施加经济压力；双方也重申共识——台湾海峡的和平与安定是重要的。
+此举意味着该年龄段的疫苗将在未来几周内无法获得，这对渴望为幼儿接种疫苗的父母来说是一个挫折。
 
-另外，双方针对持续军事紧绷的乌克兰情势交换了意见，也协商若俄罗斯对乌克兰动武，包含制裁俄罗斯在内等因应措施的强度为何等议题。
+辉瑞周五表示，将等待其三剂系列疫苗的数据，因为它认为三剂“可能为这个年龄组提供更高水平的保护”。 该公司表示，预计将在 4 月初发布第三剂数据。
 
-据悉，“四方安全对话”成员国美国、印度、日本和澳洲当天将在墨尔本举行外长会议，议程包括反制中共散播假消息和经济胁迫，以及关注俄乌危机。
+辉瑞在 12 月表示，在对 2 至 4 岁儿童进行的试验中，两剂疫苗并未产生足够强的免疫反应。对于幼儿，辉瑞的疫苗剂量为 3 微克，对于 5 至 11 岁的儿童，剂量更高，为 10 微克。
 
-参考链接：
-[https://www.cna.com.tw/news/aopl/202202110129.aspx](https://www.cna.com.tw/news/aopl/202202110129.aspx)
+尽管如此，该公司本月仍要求 FDA 批准前两剂，并计划在未来几周内提交第三剂的额外数据，完整的疫苗接种系列将是三剂。
 
-素材采编：幽蘭自得
-编辑：老孙
-发布：爱放飞
+在下周的咨询委员会会议之前，预计 FDA 将在周五公布对辉瑞数据的分析，FDA周五表示，会议已被推迟。
 
+两位熟悉 FDA 计划的人士表示，外部专家已经对该机构进行了大量反对，他们担心辉瑞的数据不够充分。 其中一位知情人士说，专家们认为，他们的担忧在FDA内部“被置若罔闻”。
+
+来源链接：[Pfizer postpones FDA request for Covid vaccine for kids under 5](https://t.co/dgisWykQ2q)
+
+编辑：LILY
+发布：肥鯮
+
+更多资讯请关注：
+[温哥华圆成农场GTV频道](https://gtv.org/user/5f30d3ff91d4727c6a88395d)｜[温哥华圆成农场官方盖特](https://www.gettr.com/user/himalayavang)｜[温哥华圆成农场Discord服务器](https://discord.gg/8RMGcwT8)
+![](https://assets.gnews.org/wp-content/uploads/2021/11/%E8%BE%B2%E5%A0%B4%E6%96%87%E5%AE%A3-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
