--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,34 +1,19 @@
 ---
-title: 瑞格萨：索马里兰是主权国家，不由中共发号施令
+title: 美国建国以来最大的司法腐败的案子
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1992461/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1992515/)
 
-**撰稿：日本东京方舟农场  幽蘭自得**
+#### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
+视频定位：BENJ1；WEI
 
-2月11日，索马里兰外交部长瑞格萨访问台湾时强调，索马里兰是一个主权国家，生而自由，中共政权不能向其发号施令，限制该国的外交往来。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-172.jpg)（图片来自Handout/Presidential Office/AFP）
-据《大纪元》报道，索马里兰外长瑞格萨（Essa Kayd Mohamoud）在接受记者采访时说：“我们生而自由，我们会保持自由。我们将以自己想要的方式经营外交关系，中（共）国不能发号施令，其它国家也不能发号施令。”
+*发布：陶子*
 
-瑞格萨补充说，他们愿意与任何尊重他们作为主权国家的人打交道，并希望不附带任何条件地做生意。
-
-“我认为，在中国问题上这是最清楚的说明了。”他说。
-
-据悉，在瑞格萨访台期间，会见了蔡英文总统、外长吴钊燮等台湾政要。此外，还预计与台湾海巡署长周美伍，讨论合作事宜。
-
-同日，瑞格萨还与同行的财政发展部长希瑞（Saad Ali Shire）等举行了新闻发布会。当记者问及，台湾、索马里兰是否属正式外交关系时，他说，“双方的关系可说是最高层级、最佳的多面向关系，并且未来只会更好。”
-
-他强调，“我们的关系没有伤害到任何人，世界应予支持。”
-
-据路透社报道，索马里兰（Somaliland，又译索马里兰）自1991年脱离索马里（Somalia，又译索马里），但其独立并未获得国际社会的广泛认可。该地区基本上是和平的，而索马里则经历了30年的内战。
-
-报道称，索马里兰和台湾主权都未被广泛承认，在外交上同样被孤立。双方于2020年，在对方的首都设立了代表处，此举激怒了中共和摩加迪沙。
-
-参考链接：
-[https://www.epochtimes.com/b5/22/2/11/n13569969.htm](https://www.epochtimes.com/b5/22/2/11/n13569969.htm)
-
-素材采编：幽蘭自得
-编辑：老孙
-发布：爱放飞
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter：HimalayaAthena](https://twitter.com/HimalayaAthena1)
+[澳大利亚墨尔本农场Gettr：himalayaathena](http://gettr.com/user/himalayaathena)
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](http://xn--discord-cu4k86skkas5c126a4lez1be9fmukp34csc6a3e9m/)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](http://gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
