--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,26 +1,35 @@
 ---
-title: 你愿意效法谷爱凌为国争光吗？
+title: 瑞格萨：索马里兰是主权国家，不由中共发号施令
 ---
-`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1992427/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1992461/)
 
-2022-02-11
+**撰稿：日本东京方舟农场  幽蘭自得**
 
-作者：面包飞上天
-![](https://assets.gnews.org/wp-content/uploads/2022/02/XVG4G0GMKYT0D17H3-1.png)图片来源：[中国归化政策激化奥运迷的民族主义情绪](https://www.voachinese.com/a/china-s-recruitment-of-nationalized-america-trained-olympians-backfires-in-agitating-nationalistic-fans-20220210/6435403.html)
-如果有个人要替一个没有人权的国家卖命，因为在那里可以更有名，也可以更有钱，你会信吗？我是信的，而且这是事实，今天我们来谈谷爱凌。
+2月11日，索马里兰外交部长瑞格萨访问台湾时强调，索马里兰是一个主权国家，生而自由，中共政权不能向其发号施令，限制该国的外交往来。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-172.jpg)（图片来自Handout/Presidential Office/AFP）
+据《大纪元》报道，索马里兰外长瑞格萨（Essa Kayd Mohamoud）在接受记者采访时说：“我们生而自由，我们会保持自由。我们将以自己想要的方式经营外交关系，中（共）国不能发号施令，其它国家也不能发号施令。”
 
-连我儿子都喜欢看她的比赛，在中国她带来的影响力非常之大。可是谷爱凌跟伟大一点关系都没有，因为伟大不在于分数和金牌数而在于灵魂的高尚。在谷爱凌身上我看到了自私的东西，甚至是家族的自私。
+瑞格萨补充说，他们愿意与任何尊重他们作为主权国家的人打交道，并希望不附带任何条件地做生意。
 
-如果一个人在中国长大，在中国训练，长大后代表美国参赛，我是可以理解的，因为中国有太多的黑暗。一个在国外长大，却代表一个世界抵制的国家参赛，就太不可理喻了。打个比方：这就好比一个人在德国以外长大，希特勒说回来代表德国比赛吧，我给你优惠，我让你在国内赚更多的钱，你衡量过后真的回来了，这样的人就是中国青少年的榜样？
+“我认为，在中国问题上这是最清楚的说明了。”他说。
 
-奴化教育如此光新亮丽，如此光面堂皇，我们要警惕。
+据悉，在瑞格萨访台期间，会见了蔡英文总统、外长吴钊燮等台湾政要。此外，还预计与台湾海巡署长周美伍，讨论合作事宜。
 
-编辑：LILY
-发布：肥鯮
+同日，瑞格萨还与同行的财政发展部长希瑞（Saad Ali Shire）等举行了新闻发布会。当记者问及，台湾、索马里兰是否属正式外交关系时，他说，“双方的关系可说是最高层级、最佳的多面向关系，并且未来只会更好。”
 
-更多资讯请关注：
-[温哥华圆成农场GTV频道](https://gtv.org/user/5f30d3ff91d4727c6a88395d)｜[温哥华圆成农场官方盖特](https://www.gettr.com/user/himalayavang)｜[温哥华圆成农场Discord服务器](https://discord.gg/8RMGcwT8)
-![](https://assets.gnews.org/wp-content/uploads/2021/11/%E8%BE%B2%E5%A0%B4%E6%96%87%E5%AE%A3-3.jpg)
+他强调，“我们的关系没有伤害到任何人，世界应予支持。”
+
+据路透社报道，索马里兰（Somaliland，又译索马里兰）自1991年脱离索马里（Somalia，又译索马里），但其独立并未获得国际社会的广泛认可。该地区基本上是和平的，而索马里则经历了30年的内战。
+
+报道称，索马里兰和台湾主权都未被广泛承认，在外交上同样被孤立。双方于2020年，在对方的首都设立了代表处，此举激怒了中共和摩加迪沙。
+
+参考链接：
+[https://www.epochtimes.com/b5/22/2/11/n13569969.htm](https://www.epochtimes.com/b5/22/2/11/n13569969.htm)
+
+素材采编：幽蘭自得
+编辑：老孙
+发布：爱放飞
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
