--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,32 +1,26 @@
 ---
-title: 美国商会：拜登政府正考虑对中国重启贸易调查
+title: 美日外长会谈：强烈反对中共尝试片面改变台海现状
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1992371/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1992423/)
 
-#### 【雅典娜快讯】，紧贴时代脉搏
+**撰稿：日本东京方舟农场****  ****幽蘭自得**
 
-整理：Eileen（围剿维尼熊）
-编辑：文泓
+2月11日，美国国务卿布林肯与日本外务大臣林芳在澳大利亚墨尔本举行了双边会谈，双方强烈反对中共尝试片面改变东海与南海现状，重申“台湾海峡的和平与安定是重要的”这一共识。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-171.jpg)（图片来自网络）
+据《中央社》报道，布林肯（Antony Blinken）与林芳正赴澳洲墨尔本出席“四方安全对话”（Quad）外长会议，在该会议进行之前，两人于日本时间上午10时30分左右先举行了双边会谈，时间约1小时。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/2-48.png)图片来源：BBC
+两人在会谈中重申，强烈反对中共尝试片面改变东海与南海现状，以及施加经济压力；双方也重申共识——台湾海峡的和平与安定是重要的。
 
+另外，双方针对持续军事紧绷的乌克兰情势交换了意见，也协商若俄罗斯对乌克兰动武，包含制裁俄罗斯在内等因应措施的强度为何等议题。
 
-当地时间2月10日，根据德国之声报道，由于中国远未兑现“第一阶段”贸易协议中所作出的两年采购承诺，**2月9日美国商会官员表示，若对于中国未履行的“第一阶段”采购承诺的谈判失败，拜登政府正在考虑接下来的一系列惩罚，其中包括重启对中国的贸易调查，结果可能会导致对中国货物加征关税。**
+据悉，“四方安全对话”成员国美国、印度、日本和澳洲当天将在墨尔本举行外长会议，议程包括反制中共散播假消息和经济胁迫，以及关注俄乌危机。
 
-美国商会副会长布列恩向记者表示，美国与其盟国可能联手，迫使中国为国际企业提供更公平的竞争环境和发展机会。
+参考链接：
+[https://www.cna.com.tw/news/aopl/202202110129.aspx](https://www.cna.com.tw/news/aopl/202202110129.aspx)
 
-据美国普查局2月8日公布的数据显示，2021年美国与中国的货物贸易逆差扩大了450亿美元或14.5%，达到3,553亿美元，是2018年创下4,182亿美元记录以来的最大逆差。而2020年对华贸易逆差则达到3,103亿美元，创下了10年来最低。换言之，中国对所承诺的采购量还存在巨大缺口。
-
-参考链接：[美国商会称拜登考虑对中国另启贸易调查](https://www.dw.com/zh/%E7%BE%8E%E5%9B%BD%E5%95%86%E4%BC%9A%E7%A7%B0%E6%8B%9C%E7%99%BB%E8%80%83%E8%99%91%E5%AF%B9%E4%B8%AD%E5%9B%BD%E5%8F%A6%E5%90%AF%E8%B4%B8%E6%98%93%E8%B0%83%E6%9F%A5/a-60720500)
-
-*发布：tianzhihuan*
-
-**更多资讯，请关注：**
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+素材采编：幽蘭自得
+编辑：老孙
+发布：爱放飞
 
  
 
